First commited as before_110820_rev1