@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007 IBM Corporation and others.
+ * Copyright (c) 2007, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -35,14 +35,12 @@ public class NumberToIntegerConverter extends NumberToNumberConverter implements
 		super(numberFormat, fromType, (primitive) ? Integer.TYPE : Integer.class);
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.core.internal.databinding.conversion.NumberToNumberConverter#doConvert(java.lang.Number)
-	 */
+	@Override
 	protected Number doConvert(Number number) {
 		if (StringToNumberParser.inIntegerRange(number)) {
-			return new Integer(number.intValue());
+			return Integer.valueOf(number.intValue());
 		}
-		
+
 		return null;
 	}
 }
