@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2006 IBM Corporation and others.
+ * Copyright (c) 2003, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,14 +7,13 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
+ *     Wedia - Joel DRIGO (joel.drigo@wedia-group.com): Bug 470866
  *******************************************************************************/
 package org.eclipse.jface.preference;
 
+import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
+
 import org.eclipse.swt.SWT;
-import org.eclipse.swt.events.DisposeEvent;
-import org.eclipse.swt.events.DisposeListener;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Control;
@@ -23,7 +22,7 @@ import org.eclipse.swt.widgets.Scale;
 /**
  * A field editor for an integer type preference. This class may be used as is,
  * or subclassed as required.
- * 
+ *
  * @since 3.0
  */
 public class ScaleFieldEditor extends FieldEditor {
@@ -60,7 +59,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Creates a scale field editor.
-     * 
+     *
      * @param name
      *            the name of the preference this field editor works on
      * @param labelText
@@ -75,7 +74,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Creates a scale field editor with particular scale values.
-     * 
+     *
      * @param name
      *            the name of the preference this field editor works on
      * @param labelText
@@ -97,22 +96,13 @@ public class ScaleFieldEditor extends FieldEditor {
         setValues(min, max, increment, pageIncrement);
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see org.eclipse.jface.preference.FieldEditor#adjustForNumColumns(int)
-     */
-    protected void adjustForNumColumns(int numColumns) {
+    @Override
+	protected void adjustForNumColumns(int numColumns) {
         ((GridData) scale.getLayoutData()).horizontalSpan = numColumns - 1;
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see org.eclipse.jface.preference.FieldEditor#doFillIntoGrid(org.eclipse.swt.widgets.Composite,
-     *      int)
-     */
-    protected void doFillIntoGrid(Composite parent, int numColumns) {
+    @Override
+	protected void doFillIntoGrid(Composite parent, int numColumns) {
         Control control = getLabelControl(parent);
         GridData gd = new GridData();
         control.setLayoutData(gd);
@@ -126,12 +116,8 @@ public class ScaleFieldEditor extends FieldEditor {
         updateScale();
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see org.eclipse.jface.preference.FieldEditor#doLoad()
-     */
-    protected void doLoad() {
+    @Override
+	protected void doLoad() {
         if (scale != null) {
             int value = getPreferenceStore().getInt(getPreferenceName());
             scale.setSelection(value);
@@ -139,12 +125,8 @@ public class ScaleFieldEditor extends FieldEditor {
         }
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see org.eclipse.jface.preference.FieldEditor#doLoadDefault()
-     */
-    protected void doLoadDefault() {
+    @Override
+	protected void doLoadDefault() {
         if (scale != null) {
             int value = getPreferenceStore().getDefaultInt(getPreferenceName());
             scale.setSelection(value);
@@ -152,19 +134,15 @@ public class ScaleFieldEditor extends FieldEditor {
         valueChanged();
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see org.eclipse.jface.preference.FieldEditor#doStore()
-     */
-    protected void doStore() {
+    @Override
+	protected void doStore() {
         getPreferenceStore()
                 .setValue(getPreferenceName(), scale.getSelection());
     }
 
     /**
      * Returns the value that will be used for Scale.setIncrement(int).
-     * 
+     *
      * @return the value.
      * @see org.eclipse.swt.widgets.Scale#setIncrement(int)
      */
@@ -174,7 +152,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Returns the value that will be used for Scale.setMaximum(int).
-     * 
+     *
      * @return the value.
      * @see org.eclipse.swt.widgets.Scale#setMaximum(int)
      */
@@ -184,7 +162,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Returns the value that will be used for Scale.setMinimum(int).
-     * 
+     *
      * @return the value.
      * @see org.eclipse.swt.widgets.Scale#setMinimum(int)
      */
@@ -192,18 +170,14 @@ public class ScaleFieldEditor extends FieldEditor {
         return minValue;
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see org.eclipse.jface.preference.FieldEditor#getNumberOfControls()
-     */
-    public int getNumberOfControls() {
+    @Override
+	public int getNumberOfControls() {
         return 2;
     }
 
     /**
      * Returns the value that will be used for Scale.setPageIncrement(int).
-     * 
+     *
      * @return the value.
      * @see org.eclipse.swt.widgets.Scale#setPageIncrement(int)
      */
@@ -213,7 +187,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Returns this field editor's scale control.
-     * 
+     *
      * @return the scale control, or <code>null</code> if no scale field is
      *         created yet
      */
@@ -224,7 +198,7 @@ public class ScaleFieldEditor extends FieldEditor {
     /**
      * Returns this field editor's scale control. The control is created if it
      * does not yet exist.
-     * 
+     *
      * @param parent
      *            the parent
      * @return the scale control
@@ -233,16 +207,8 @@ public class ScaleFieldEditor extends FieldEditor {
         if (scale == null) {
             scale = new Scale(parent, SWT.HORIZONTAL);
             scale.setFont(parent.getFont());
-            scale.addSelectionListener(new SelectionAdapter() {
-                public void widgetSelected(SelectionEvent event) {
-                    valueChanged();
-                }
-            });
-            scale.addDisposeListener(new DisposeListener() {
-                public void widgetDisposed(DisposeEvent event) {
-                    scale = null;
-                }
-            });
+            scale.addSelectionListener(widgetSelectedAdapter(event -> valueChanged()));
+            scale.addDisposeListener(event -> scale = null);
         } else {
             checkParent(scale, parent);
         }
@@ -256,18 +222,14 @@ public class ScaleFieldEditor extends FieldEditor {
      * <li>Maximim = 10
      * <li>Increment = 1
      * <li>Page Increment = 1
-     * </ul> 
+     * </ul>
      */
     private void setDefaultValues() {
         setValues(0, 10, 1, 1);
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see org.eclipse.jface.preference.FieldEditor#setFocus()
-     */
-    public void setFocus() {
+    @Override
+	public void setFocus() {
         if (scale != null && !scale.isDisposed()) {
             scale.setFocus();
         }
@@ -276,7 +238,7 @@ public class ScaleFieldEditor extends FieldEditor {
     /**
      * Set the value to be used for Scale.setIncrement(int) and update the
      * scale.
-     * 
+     *
      * @param increment
      *            a value greater than 0.
      * @see org.eclipse.swt.widgets.Scale#setIncrement(int)
@@ -289,7 +251,7 @@ public class ScaleFieldEditor extends FieldEditor {
     /**
      * Set the value to be used for Scale.setMaximum(int) and update the
      * scale.
-     * 
+     *
      * @param max
      *            a value greater than 0.
      * @see org.eclipse.swt.widgets.Scale#setMaximum(int)
@@ -302,7 +264,7 @@ public class ScaleFieldEditor extends FieldEditor {
     /**
      * Set the value to be used for Scale.setMinumum(int) and update the
      * scale.
-     * 
+     *
      * @param min
      *            a value greater than 0.
      * @see org.eclipse.swt.widgets.Scale#setMinimum(int)
@@ -315,7 +277,7 @@ public class ScaleFieldEditor extends FieldEditor {
     /**
      * Set the value to be used for Scale.setPageIncrement(int) and update the
      * scale.
-     * 
+     *
      * @param pageIncrement
      *            a value greater than 0.
      * @see org.eclipse.swt.widgets.Scale#setPageIncrement(int)
@@ -327,7 +289,7 @@ public class ScaleFieldEditor extends FieldEditor {
 
     /**
      * Set all Scale values.
-     * 
+     *
      * @param min
      *            the value used for Scale.setMinimum(int).
      * @param max
@@ -372,9 +334,18 @@ public class ScaleFieldEditor extends FieldEditor {
         int newValue = scale.getSelection();
         if (newValue != oldValue) {
             fireStateChanged(IS_VALID, false, true);
-            fireValueChanged(VALUE, new Integer(oldValue),
-                    new Integer(newValue));
+			fireValueChanged(VALUE, Integer.valueOf(oldValue), Integer.valueOf(newValue));
             oldValue = newValue;
         }
     }
+
+	/**
+	 * Bug 470866 fix
+	 */
+	@Override
+	public void setEnabled(boolean enabled, Composite parent) {
+		super.setEnabled(enabled, parent);
+		getScaleControl().setEnabled(enabled);
+	}
+
 }
