@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2011 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -10,8 +10,11 @@
  *     Chris Gross (schtoo@schtoo.com) - patch for bug 16179
  *     Eugene Ostroukhov <eugeneo@symbian.org> - Bug 287887 [Wizards] [api] Cancel button has two distinct roles
  *     Paul Adams <padams@ittvis.com> - Bug 202534 - [Dialogs] SWT error in Wizard dialog when help is displayed and "Finish" is pressed
+ *     Jan-Ove Weichel <janove.weichel@vogella.com> - Bug 475879
  *******************************************************************************/
 package org.eclipse.jface.wizard;
+
+import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
 
 import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
@@ -22,6 +25,7 @@ import org.eclipse.core.runtime.Assert;
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.ListenerList;
+import org.eclipse.core.runtime.NullProgressMonitor;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.jface.dialogs.ControlEnableState;
 import org.eclipse.jface.dialogs.IDialogConstants;
@@ -42,12 +46,7 @@ import org.eclipse.swt.SWT;
 import org.eclipse.swt.accessibility.AccessibleAdapter;
 import org.eclipse.swt.accessibility.AccessibleEvent;
 import org.eclipse.swt.custom.BusyIndicator;
-import org.eclipse.swt.events.HelpEvent;
-import org.eclipse.swt.events.HelpListener;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
-import org.eclipse.swt.events.TraverseEvent;
-import org.eclipse.swt.events.TraverseListener;
+import org.eclipse.swt.events.SelectionListener;
 import org.eclipse.swt.graphics.Cursor;
 import org.eclipse.swt.graphics.Point;
 import org.eclipse.swt.graphics.Rectangle;
@@ -80,8 +79,7 @@ import org.eclipse.swt.widgets.Shell;
  * required.
  * </p>
  */
-public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
-		IPageChangeProvider {
+public class WizardDialog extends TitleAreaDialog implements IWizardContainer2, IPageChangeProvider {
 	/**
 	 * Image registry key for error message image (value
 	 * <code>"dialog_title_error_image"</code>).
@@ -92,10 +90,10 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	private IWizard wizard;
 
 	// Wizards to dispose
-	private ArrayList createdWizards = new ArrayList();
+	private ArrayList<IWizard> createdWizards = new ArrayList<>();
 
 	// Current nested wizards
-	private ArrayList nestedWizards = new ArrayList();
+	private ArrayList<IWizard> nestedWizards = new ArrayList<>();
 
 	// The currently displayed page.
 	private IWizardPage currentPage = null;
@@ -109,7 +107,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	 * <p>
 	 * The value <code>-1</code> indicates that the traverse listener needs to be installed.
 	 * </p>
-	 * 
+	 *
 	 * @since 3.6
 	 */
 	private long timeWhenLastJobFinished= -1;
@@ -144,14 +142,13 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 
 	private Button helpButton;
 
-	private SelectionAdapter cancelListener;
+	private SelectionListener cancelListener;
 
 	private boolean isMovingToPreviousPage = false;
 
 	private Composite pageContainer;
 
-	private PageContainerFillLayout pageContainerLayout = new PageContainerFillLayout(
-			5, 5, 300, 225);
+	private PageContainerFillLayout pageContainerLayout = new PageContainerFillLayout(5, 5, 300, 225);
 
 	private int pageWidth = SWT.DEFAULT;
 
@@ -162,16 +159,16 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	/**
 	 * A delay in milliseconds that reduces the risk that the user accidentally triggers a
 	 * button by pressing the 'Enter' key immediately after a job has finished.
-	 * 
+	 *
 	 * @since 3.6
 	 */
 	private static final int RESTORE_ENTER_DELAY= 500;
 
 	private boolean lockedUI = false;
 
-	private ListenerList pageChangedListeners = new ListenerList();
+	private ListenerList<IPageChangedListener> pageChangedListeners = new ListenerList<>();
 
-	private ListenerList pageChangingListeners = new ListenerList();
+	private ListenerList<IPageChangingListener> pageChangingListeners = new ListenerList<>();
 
 	/**
 	 * A layout for a container which includes several pages, like a notebook,
@@ -202,7 +199,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 
 		/**
 		 * Creates new layout object.
-		 * 
+		 *
 		 * @param mw
 		 *            the margin width
 		 * @param mh
@@ -219,9 +216,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 			minimumHeight = minH;
 		}
 
-		/*
-		 * (non-Javadoc) Method declared on Layout.
-		 */
+		@Override
 		public Point computeSize(Composite composite, int wHint, int hHint,
 				boolean force) {
 			if (wHint != SWT.DEFAULT && hHint != SWT.DEFAULT) {
@@ -231,8 +226,8 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 			Control[] children = composite.getChildren();
 			if (children.length > 0) {
 				result = new Point(0, 0);
-				for (int i = 0; i < children.length; i++) {
-					Point cp = children[i].computeSize(wHint, hHint, force);
+				for (Control element : children) {
+					Point cp = element.computeSize(wHint, hHint, force);
 					result.x = Math.max(result.x, cp.x);
 					result.y = Math.max(result.y, cp.y);
 				}
@@ -256,7 +251,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		/**
 		 * Returns the client area for the given composite according to this
 		 * layout.
-		 * 
+		 *
 		 * @param c
 		 *            the composite
 		 * @return the client area rectangle
@@ -270,20 +265,18 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 			return rect;
 		}
 
-		/*
-		 * (non-Javadoc) Method declared on Layout.
-		 */
+		@Override
 		public void layout(Composite composite, boolean force) {
 			Rectangle rect = getClientArea(composite);
 			Control[] children = composite.getChildren();
-			for (int i = 0; i < children.length; i++) {
-				children[i].setBounds(rect);
+			for (Control element : children) {
+				element.setBounds(rect);
 			}
 		}
 
 		/**
 		 * Lays outs the page according to this layout.
-		 * 
+		 *
 		 * @param w
 		 *            the control
 		 */
@@ -294,7 +287,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		/**
 		 * Sets the location of the page so that its origin is in the upper left
 		 * corner.
-		 * 
+		 *
 		 * @param w
 		 *            the control
 		 */
@@ -305,7 +298,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 
 	/**
 	 * Creates a new wizard dialog for the given wizard.
-	 * 
+	 *
 	 * @param parentShell
 	 *            the parent shell
 	 * @param newWizard
@@ -318,25 +311,21 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		setWizard(newWizard);
 		// since VAJava can't initialize an instance var with an anonymous
 		// class outside a constructor we do it here:
-		cancelListener = new SelectionAdapter() {
-			public void widgetSelected(SelectionEvent e) {
-				cancelPressed();
-			}
-		};
+		cancelListener = widgetSelectedAdapter(e -> cancelPressed());
 	}
 
 	/**
 	 * About to start a long running operation triggered through the wizard.
 	 * Shows the progress monitor and disables the wizard's buttons and
 	 * controls.
-	 * 
+	 *
 	 * @param enableCancelButton
 	 *            <code>true</code> if the Cancel button should be enabled,
 	 *            and <code>false</code> if it should be disabled
 	 * @return the saved UI state
 	 */
-	private Object aboutToStart(boolean enableCancelButton) {
-		Map savedState = null;
+	private Map<String, Object> aboutToStart(boolean enableCancelButton) {
+		Map<String, Object> savedState = null;
 		if (getShell() != null) {
 			// Save focus control
 			Control focusControl = getShell().getDisplay().getFocusControl();
@@ -344,19 +333,19 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 				focusControl = null;
 			}
 			boolean needsProgressMonitor = wizard.needsProgressMonitor();
-			
+
 			// Set the busy cursor to all shells.
 			Display d = getShell().getDisplay();
 			waitCursor = new Cursor(d, SWT.CURSOR_WAIT);
 			setDisplayCursor(waitCursor);
-			
+
 			if (useCustomProgressMonitorPart) {
 				cancelButton.removeSelectionListener(cancelListener);
 				// Set the arrow cursor to the cancel component.
 				arrowCursor = new Cursor(d, SWT.CURSOR_ARROW);
 				cancelButton.setCursor(arrowCursor);
 			}
-			
+
 			// Deactivate shell
 			savedState = saveUIState(useCustomProgressMonitorPart && needsProgressMonitor && enableCancelButton);
 			if (focusControl != null) {
@@ -369,27 +358,25 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 				}
 				progressMonitorPart.setVisible(true);
 			}
-			
+
 			// Install traverse listener once in order to implement 'Enter' and 'Space' key blocking
 			if (timeWhenLastJobFinished == -1) {
 				timeWhenLastJobFinished= 0;
-				getShell().addTraverseListener(new TraverseListener() {
-					public void keyTraversed(TraverseEvent e) {
-						if (e.detail == SWT.TRAVERSE_RETURN || (e.detail == SWT.TRAVERSE_MNEMONIC && e.keyCode == 32)) {
-							// We want to ignore the keystroke when we detect that it has been received within the
-							// delay period after the last operation has finished.  This prevents the user from accidentally
-							// hitting "Enter" or "Space", intending to cancel an operation, but having it processed exactly
-							// when the operation finished, thus traversing the wizard.  If there is another operation still
-							// running, the UI is locked anyway so we are not in this code.  This listener should fire only
-							// after the UI state is restored (which by definition means all jobs are done.
-							// See https://bugs.eclipse.org/bugs/show_bug.cgi?id=287887
-							if (timeWhenLastJobFinished != 0 && System.currentTimeMillis() - timeWhenLastJobFinished < RESTORE_ENTER_DELAY) {
-								e.doit= false;
-								return;
-							}
-							timeWhenLastJobFinished= 0;
-						}}
-				});
+				getShell().addTraverseListener(e -> {
+					if (e.detail == SWT.TRAVERSE_RETURN || (e.detail == SWT.TRAVERSE_MNEMONIC && e.keyCode == 32)) {
+						// We want to ignore the keystroke when we detect that it has been received within the
+						// delay period after the last operation has finished.  This prevents the user from accidentally
+						// hitting "Enter" or "Space", intending to cancel an operation, but having it processed exactly
+						// when the operation finished, thus traversing the wizard.  If there is another operation still
+						// running, the UI is locked anyway so we are not in this code.  This listener should fire only
+						// after the UI state is restored (which by definition means all jobs are done.
+						// See https://bugs.eclipse.org/bugs/show_bug.cgi?id=287887
+						if (timeWhenLastJobFinished != 0 && System.currentTimeMillis() - timeWhenLastJobFinished < RESTORE_ENTER_DELAY) {
+							e.doit= false;
+							return;
+						}
+						timeWhenLastJobFinished= 0;
+					}});
 			}
 		}
 		return savedState;
@@ -411,9 +398,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		showPage(page);
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on Dialog.
-	 */
+	@Override
 	protected void buttonPressed(int buttonId) {
 		switch (buttonId) {
 		case IDialogConstants.HELP_ID: {
@@ -440,7 +425,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	/**
 	 * Calculates the difference in size between the given page and the page
 	 * container. A larger page results in a positive delta.
-	 * 
+	 *
 	 * @param page
 	 *            the page
 	 * @return the size difference encoded as a
@@ -460,9 +445,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 				.max(0, contentSize.y - containerSize.y));
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on Dialog.
-	 */
+	@Override
 	protected void cancelPressed() {
 		if (activeRunningOperations <= 0) {
 			// Close the dialog. The check whether the dialog can be
@@ -476,11 +459,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.window.Window#close()
-	 */
+	@Override
 	public boolean close() {
 		if (okToClose()) {
 			return hardClose();
@@ -488,18 +467,14 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		return false;
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on Window.
-	 */
+	@Override
 	protected void configureShell(Shell newShell) {
 		super.configureShell(newShell);
 		// Register help listener on the shell
-		newShell.addHelpListener(new HelpListener() {
-			public void helpRequested(HelpEvent event) {
-				// call perform help on the current page
-				if (currentPage != null) {
-					currentPage.performHelp();
-				}
+		newShell.addHelpListener(event -> {
+			// call perform help on the current page
+			if (currentPage != null) {
+				currentPage.performHelp();
 			}
 		});
 	}
@@ -511,23 +486,22 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	 * prevents the parent composite's columns from being made equal width in
 	 * order to remove the margin between the Back and Next buttons.
 	 * </p>
-	 * 
+	 *
 	 * @param parent
 	 *            the parent composite to contain the buttons
 	 */
+	@Override
 	protected void createButtonsForButtonBar(Composite parent) {
 		((GridLayout) parent.getLayout()).makeColumnsEqualWidth = false;
 		if (wizard.isHelpAvailable()) {
-			helpButton = createButton(parent, IDialogConstants.HELP_ID,
-					IDialogConstants.HELP_LABEL, false);
+			helpButton = createButton(parent, IDialogConstants.HELP_ID, IDialogConstants.HELP_LABEL, false);
 		}
 		if (wizard.needsPreviousAndNextButtons()) {
 			createPreviousAndNextButtons(parent);
 		}
-		finishButton = createButton(parent, IDialogConstants.FINISH_ID,
-				IDialogConstants.FINISH_LABEL, true);
+		finishButton = createButton(parent, IDialogConstants.FINISH_ID, IDialogConstants.FINISH_LABEL, true);
 		cancelButton = createCancelButton(parent);
-		
+
 		if (parent.getDisplay().getDismissalAlignment() == SWT.RIGHT) {
             // Make the default button the right-most button.
             // See also special code in org.eclipse.jface.dialogs.Dialog#initializeBounds()
@@ -535,11 +509,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.dialogs.Dialog#setButtonLayoutData(org.eclipse.swt.widgets.Button)
-	 */
+	@Override
 	protected void setButtonLayoutData(Button button) {
 		GridData data = new GridData(GridData.HORIZONTAL_ALIGN_FILL);
 		int widthHint = convertHorizontalDLUsToPixels(IDialogConstants.BUTTON_WIDTH);
@@ -558,7 +528,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	 * button and registers for its selection events. Note that the number of
 	 * columns in the button bar composite is incremented. The Cancel button is
 	 * created specially to give it a removeable listener.
-	 * 
+	 *
 	 * @param parent
 	 *            the parent button bar
 	 * @return the new Cancel button
@@ -570,18 +540,19 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		button.setText(IDialogConstants.CANCEL_LABEL);
 		setButtonLayoutData(button);
 		button.setFont(parent.getFont());
-		button.setData(new Integer(IDialogConstants.CANCEL_ID));
+		button.setData(Integer.valueOf(IDialogConstants.CANCEL_ID));
 		button.addSelectionListener(cancelListener);
 		return button;
 	}
 
 	/**
 	 * Return the cancel button if the id is a the cancel id.
-	 * 
+	 *
 	 * @param id
 	 *            the button id
 	 * @return the button corresponding to the button id
 	 */
+	@Override
 	protected Button getButton(int id) {
 		if (id == IDialogConstants.CANCEL_ID) {
 			return cancelButton;
@@ -598,6 +569,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	 * pre-create their page controls prior to opening, so that the wizard opens
 	 * to the correct size. And finally it shows the first page.
 	 */
+	@Override
 	protected Control createContents(Composite parent) {
 		// Allow the wizard to add pages to itself
 		// Need to call this now so page count is correct
@@ -611,9 +583,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		return contents;
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on Dialog.
-	 */
+	@Override
 	protected Control createDialogArea(Composite parent) {
 		Composite composite = (Composite) super.createDialogArea(parent);
 		// Build the Page container
@@ -626,6 +596,9 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		// Insert a progress monitor
 		progressMonitorPart= createProgressMonitorPart(composite, new GridLayout());
 		GridData gridData = new GridData(GridData.FILL_HORIZONTAL);
+		if (!wizard.needsProgressMonitor()) {
+			gridData.exclude = true;
+		}
 		progressMonitorPart.setLayoutData(gridData);
 		progressMonitorPart.setVisible(false);
 		// Build the separator line
@@ -641,7 +614,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	 * <p>
 	 * The default implementation creates a progress monitor with a stop button will be created.
 	 * </p>
-	 * 
+	 *
 	 * @param composite the parent composite
 	 * @param pmlayout the layout
 	 * @return ProgressMonitorPart the progress monitor part
@@ -652,11 +625,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		return new ProgressMonitorPart(composite, pmlayout, true) {
 			String currentTask = null;
 
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see org.eclipse.jface.wizard.ProgressMonitorPart#setBlocked(org.eclipse.core.runtime.IStatus)
-			 */
+			@Override
 			public void setBlocked(IStatus reason) {
 				super.setBlocked(reason);
 				if (!lockedUI) {
@@ -665,11 +634,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 				}
 			}
 
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see org.eclipse.jface.wizard.ProgressMonitorPart#clearBlocked()
-			 */
+			@Override
 			public void clearBlocked() {
 				super.clearBlocked();
 				if (!lockedUI) {
@@ -677,32 +642,19 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 				}
 			}
 
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see org.eclipse.jface.wizard.ProgressMonitorPart#beginTask(java.lang.String,
-			 *      int)
-			 */
+			@Override
 			public void beginTask(String name, int totalWork) {
 				super.beginTask(name, totalWork);
 				currentTask = name;
 			}
 
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see org.eclipse.jface.wizard.ProgressMonitorPart#setTaskName(java.lang.String)
-			 */
+			@Override
 			public void setTaskName(String name) {
 				super.setTaskName(name);
 				currentTask = name;
 			}
 
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see org.eclipse.jface.wizard.ProgressMonitorPart#subTask(java.lang.String)
-			 */
+			@Override
 			public void subTask(String name) {
 				super.subTask(name);
 				// If we haven't got anything yet use this value for more
@@ -716,7 +668,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 
 	/**
 	 * Creates the container that holds all pages.
-	 * 
+	 *
 	 * @param parent
 	 * @return Composite
 	 */
@@ -736,8 +688,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		wizard.createPageControls(pageContainer);
 		// Ensure that all of the created pages are initially not visible
 		IWizardPage[] pages = wizard.getPages();
-		for (int i = 0; i < pages.length; i++) {
-			IWizardPage page = pages[i];
+		for (IWizardPage page : pages) {
 			if (page.getControl() != null) {
 				page.getControl().setVisible(false);
 			}
@@ -750,7 +701,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	 * selection events. Note that the number of columns in the button bar
 	 * composite is incremented. These buttons are created specially to prevent
 	 * any space between them.
-	 * 
+	 *
 	 * @param parent
 	 *            the parent button bar
 	 * @return a composite containing the new buttons
@@ -768,24 +719,23 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		layout.horizontalSpacing = 0;
 		layout.verticalSpacing = 0;
 		composite.setLayout(layout);
-		GridData data = new GridData(GridData.HORIZONTAL_ALIGN_CENTER
-				| GridData.VERTICAL_ALIGN_CENTER);
+		GridData data = new GridData(GridData.HORIZONTAL_ALIGN_CENTER | GridData.VERTICAL_ALIGN_CENTER);
 		composite.setLayoutData(data);
 		composite.setFont(parent.getFont());
-		backButton = createButton(composite, IDialogConstants.BACK_ID,
-				IDialogConstants.BACK_LABEL, false);
-		nextButton = createButton(composite, IDialogConstants.NEXT_ID,
-				IDialogConstants.NEXT_LABEL, false);
-		
+		backButton = createButton(composite, IDialogConstants.BACK_ID, IDialogConstants.BACK_LABEL, false);
+		nextButton = createButton(composite, IDialogConstants.NEXT_ID, IDialogConstants.NEXT_LABEL, false);
+
 		// make sure screen readers skip visual '<', '>' chars on buttons:
 		final String backReaderText = IDialogConstants.BACK_LABEL.replace('<', ' ');
 		backButton.getAccessible().addAccessibleListener(new AccessibleAdapter() {
+			@Override
 			public void getName(AccessibleEvent e) {
 				e.result = backReaderText;
 			}
 		});
 		final String nextReaderText = IDialogConstants.NEXT_LABEL.replace('>', ' ');
 		nextButton.getAccessible().addAccessibleListener(new AccessibleAdapter() {
+			@Override
 			public void getName(AccessibleEvent e) {
 				e.result = nextReaderText;
 			}
@@ -795,7 +745,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 
 	/**
 	 * Creates and return a new wizard closing dialog without opening it.
-	 * 
+	 *
 	 * @return MessageDalog
 	 */
 	private MessageDialog createWizardClosingDialog() {
@@ -804,7 +754,8 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 				null,
 				JFaceResources.getString("WizardClosingDialog.message"), //$NON-NLS-1$
 				MessageDialog.QUESTION,
-				new String[] { IDialogConstants.OK_LABEL }, 0) {
+				0, IDialogConstants.OK_LABEL) {
+			@Override
 			protected int getShellStyle() {
 				return super.getShellStyle() | SWT.SHEET;
 			}
@@ -828,7 +779,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 			// Call perform finish on outer wizards in the nested chain
 			// (to allow them to save state for example)
 			for (int i = 0; i < nestedWizards.size() - 1; i++) {
-				((IWizard) nestedWizards.get(i)).performFinish();
+				nestedWizards.get(i).performFinish();
 			}
 			// Hard close the dialog.
 			setReturnCode(OK);
@@ -836,16 +787,14 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		}
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWizardContainer.
-	 */
+	@Override
 	public IWizardPage getCurrentPage() {
 		return currentPage;
 	}
 
 	/**
 	 * Returns the progress monitor for this wizard dialog (if it has one).
-	 * 
+	 *
 	 * @return the progress monitor, or <code>null</code> if this wizard
 	 *         dialog does not have one
 	 */
@@ -855,7 +804,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 
 	/**
 	 * Returns the wizard this dialog is currently displaying.
-	 * 
+	 *
 	 * @return the current wizard
 	 */
 	protected IWizard getWizard() {
@@ -864,14 +813,14 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 
 	/**
 	 * Closes this window.
-	 * 
+	 *
 	 * @return <code>true</code> if the window is (or was already) closed, and
 	 *         <code>false</code> if it is still open
 	 */
 	private boolean hardClose() {
 		// inform wizards
 		for (int i = 0; i < createdWizards.size(); i++) {
-			IWizard createdWizard = (IWizard) createdWizards.get(i);
+			IWizard createdWizard = createdWizards.get(i);
 			try {
 				createdWizard.dispose();
 			} catch (Exception e) {
@@ -918,14 +867,13 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	/**
 	 * Notifies page changing listeners and returns result of page changing
 	 * processing to the sender.
-	 * 
+	 *
 	 * @param eventType
 	 * @return <code>true</code> if page changing listener completes
 	 *         successfully, <code>false</code> otherwise
 	 */
 	private boolean doPageChanging(IWizardPage targetPage) {
-		PageChangingEvent e = new PageChangingEvent(this, getCurrentPage(),
-				targetPage);
+		PageChangingEvent e = new PageChangingEvent(this, getCurrentPage(), targetPage);
 		firePageChanging(e);
 		// Prevent navigation if necessary
 		return e.doit;
@@ -936,7 +884,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	 * standard cancel processing. If there is a long running operation in
 	 * progress, this method posts an alert message saying that the wizard
 	 * cannot be closed.
-	 * 
+	 *
 	 * @return <code>true</code> if it is alright to close this dialog, and
 	 *         <code>false</code> if it is not
 	 */
@@ -956,21 +904,20 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 
 	/**
 	 * Restores the enabled/disabled state of the given control.
-	 * 
-	 * @param w
+	 *
+	 * @param control
 	 *            the control
-	 * @param h
-	 *            the map (key type: <code>String</code>, element type:
-	 *            <code>Boolean</code>)
+	 * @param saveState
+	 *            a map containing the enabled/disabled state of the wizard dialog's buttons
 	 * @param key
 	 *            the key
 	 * @see #saveEnableStateAndSet
 	 */
-	private void restoreEnableState(Control w, Map h, String key) {
-		if (w != null) {
-			Boolean b = (Boolean) h.get(key);
+	private void restoreEnableState(Control control, Map<String,Object> saveState, String key) {
+		if (control != null) {
+			Boolean b = (Boolean) saveState.get(key);
 			if (b != null) {
-				w.setEnabled(b.booleanValue());
+				control.setEnabled(b.booleanValue());
 			}
 		}
 	}
@@ -978,19 +925,19 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	/**
 	 * Restores the enabled/disabled state of the wizard dialog's buttons and
 	 * the tree of controls for the currently showing page.
-	 * 
-	 * @param state
+	 *
+	 * @param saveState
 	 *            a map containing the saved state as returned by
 	 *            <code>saveUIState</code>
 	 * @see #saveUIState
 	 */
-	private void restoreUIState(Map state) {
-		restoreEnableState(backButton, state, "back"); //$NON-NLS-1$
-		restoreEnableState(nextButton, state, "next"); //$NON-NLS-1$
-		restoreEnableState(finishButton, state, "finish"); //$NON-NLS-1$
-		restoreEnableState(cancelButton, state, "cancel"); //$NON-NLS-1$
-		restoreEnableState(helpButton, state, "help"); //$NON-NLS-1$
-		Object pageValue = state.get("page"); //$NON-NLS-1$
+	private void restoreUIState(Map<String, Object> saveState) {
+		restoreEnableState(backButton, saveState, "back"); //$NON-NLS-1$
+		restoreEnableState(nextButton, saveState, "next"); //$NON-NLS-1$
+		restoreEnableState(finishButton, saveState, "finish"); //$NON-NLS-1$
+		restoreEnableState(cancelButton, saveState, "cancel"); //$NON-NLS-1$
+		restoreEnableState(helpButton, saveState, "help"); //$NON-NLS-1$
+		Object pageValue = saveState.get("page"); //$NON-NLS-1$
 		if (pageValue != null) {
 			((ControlEnableState) pageValue).restore();
 		}
@@ -1004,36 +951,39 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	 * is set to <code>false</code>, the runnable will run in the UI thread
 	 * and it is the runnable's responsibility to call
 	 * <code>Display.readAndDispatch()</code> to ensure UI responsiveness.
-	 * 
+	 *
 	 * UI state is saved prior to executing the long-running operation and is
 	 * restored after the long-running operation completes executing. Any
 	 * attempt to change the UI state of the wizard in the long-running
 	 * operation will be nullified when original UI state is restored.
-	 * 
+	 *
 	 */
-	public void run(boolean fork, boolean cancelable,
-			IRunnableWithProgress runnable) throws InvocationTargetException,
+	@Override
+	public void run(boolean fork, boolean cancelable, IRunnableWithProgress runnable)
+			throws InvocationTargetException,
 			InterruptedException {
 		// The operation can only be canceled if it is executed in a separate
 		// thread.
 		// Otherwise the UI is blocked anyway.
-		Object state = null;
+		Map<String, Object> state = null;
 		if (activeRunningOperations++ == 0) {
 			state = aboutToStart(fork && cancelable);
+		}
+		IProgressMonitor progressMonitor = getProgressMonitor();
+		if (progressMonitor == null) {
+			progressMonitor = new NullProgressMonitor();
 		}
 		try {
 			if (!fork) {
 				lockedUI = true;
 			}
-			ModalContext.run(runnable, fork, getProgressMonitor(), getShell()
+			ModalContext.run(runnable, fork, progressMonitor, getShell()
 					.getDisplay());
 			lockedUI = false;
 		} finally {
 			// explicitly invoke done() on our progress monitor so that its
 			// label does not spill over to the next invocation, see bug 271530
-			if (getProgressMonitor() != null) {
-				getProgressMonitor().done();
-			}
+			progressMonitor.done();
 			// Stop if this is the last one
 			if (state != null) {
 				timeWhenLastJobFinished= System.currentTimeMillis();
@@ -1046,12 +996,11 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	/**
 	 * Saves the enabled/disabled state of the given control in the given map,
 	 * which must be modifiable.
-	 * 
-	 * @param w
+	 *
+	 * @param control
 	 *            the control, or <code>null</code> if none
-	 * @param h
-	 *            the map (key type: <code>String</code>, element type:
-	 *            <code>Boolean</code>)
+	 * @param saveState
+	 *            a map containing the enabled/disabled state of the wizard dialog's buttons
 	 * @param key
 	 *            the key
 	 * @param enabled
@@ -1059,11 +1008,10 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	 *            <code>false</code> to disable it
 	 * @see #restoreEnableState(Control, Map, String)
 	 */
-	private void saveEnableStateAndSet(Control w, Map h, String key,
-			boolean enabled) {
-		if (w != null) {
-			h.put(key, w.getEnabled() ? Boolean.TRUE : Boolean.FALSE);
-			w.setEnabled(enabled);
+	private void saveEnableStateAndSet(Control control, Map<String, Object> saveState, String key, boolean enabled) {
+		if (control != null) {
+			saveState.put(key, control.getEnabled() ? Boolean.TRUE : Boolean.FALSE);
+			control.setEnabled(enabled);
 		}
 	}
 
@@ -1072,7 +1020,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	 * buttons and the tree of controls for the currently showing page. All
 	 * these controls are disabled in the process, with the possible exception
 	 * of the Cancel button.
-	 * 
+	 *
 	 * @param keepCancelEnabled
 	 *            <code>true</code> if the Cancel button should remain
 	 *            enabled, and <code>false</code> if it should be disabled
@@ -1080,17 +1028,15 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	 *         with <code>restoreUIState</code>
 	 * @see #restoreUIState
 	 */
-	private Map saveUIState(boolean keepCancelEnabled) {
-		Map savedState = new HashMap(10);
+	private Map<String, Object> saveUIState(boolean keepCancelEnabled) {
+		Map<String, Object> savedState = new HashMap<>(10);
 		saveEnableStateAndSet(backButton, savedState, "back", false); //$NON-NLS-1$
 		saveEnableStateAndSet(nextButton, savedState, "next", false); //$NON-NLS-1$
 		saveEnableStateAndSet(finishButton, savedState, "finish", false); //$NON-NLS-1$
 		saveEnableStateAndSet(cancelButton, savedState,	"cancel", keepCancelEnabled); //$NON-NLS-1$
 		saveEnableStateAndSet(helpButton, savedState, "help", false); //$NON-NLS-1$
 		if (currentPage != null) {
-			savedState
-					.put(
-							"page", ControlEnableState.disable(currentPage.getControl())); //$NON-NLS-1$
+			savedState.put("page", ControlEnableState.disable(currentPage.getControl())); //$NON-NLS-1$
 		}
 		return savedState;
 	}
@@ -1098,20 +1044,20 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	/**
 	 * Sets the given cursor for all shells currently active for this window's
 	 * display.
-	 * 
+	 *
 	 * @param c
 	 *            the cursor
 	 */
 	private void setDisplayCursor(Cursor c) {
 		Shell[] shells = getShell().getDisplay().getShells();
-		for (int i = 0; i < shells.length; i++) {
-			shells[i].setCursor(c);
+		for (Shell shell : shells) {
+			shell.setCursor(c);
 		}
 	}
 
 	/**
 	 * Sets the minimum page size used for the pages.
-	 * 
+	 *
 	 * @param minWidth
 	 *            the minimum page width
 	 * @param minHeight
@@ -1126,7 +1072,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 
 	/**
 	 * Sets the minimum page size used for the pages.
-	 * 
+	 *
 	 * @param size
 	 *            the page size encoded as <code>new Point(width,height)</code>
 	 * @see #setMinimumPageSize(int,int)
@@ -1138,7 +1084,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	/**
 	 * Sets the size of all pages. The given size takes precedence over computed
 	 * sizes.
-	 * 
+	 *
 	 * @param width
 	 *            the page width
 	 * @param height
@@ -1153,7 +1099,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	/**
 	 * Sets the size of all pages. The given size takes precedence over computed
 	 * sizes.
-	 * 
+	 *
 	 * @param size
 	 *            the page size encoded as <code>new Point(width,height)</code>
 	 * @see #setPageSize(int,int)
@@ -1164,7 +1110,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 
 	/**
 	 * Sets the wizard this dialog is currently displaying.
-	 * 
+	 *
 	 * @param newWizard
 	 *            the wizard
 	 */
@@ -1198,9 +1144,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		}
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWizardContainer.
-	 */
+	@Override
 	public void showPage(IWizardPage page) {
 		if (page == null || page == currentPage) {
 			return;
@@ -1222,17 +1166,13 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 			updateForPage(page);
 		} else {
 			final IWizardPage finalPage = page;
-			BusyIndicator.showWhile(getContents().getDisplay(), new Runnable() {
-				public void run() {
-					updateForPage(finalPage);
-				}
-			});
+			BusyIndicator.showWhile(getContents().getDisplay(), () -> updateForPage(finalPage));
 		}
 	}
 
 	/**
 	 * Update the receiver for the new page.
-	 * 
+	 *
 	 * @param page
 	 */
 	private void updateForPage(IWizardPage page) {
@@ -1246,9 +1186,9 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 			page.createControl(pageContainer);
 			// the page is responsible for ensuring the created control is
 			// accessible via getControl.
-			Assert.isNotNull(page.getControl(), JFaceResources.format(
-					JFaceResources.getString("WizardDialog.missingSetControl"), //$NON-NLS-1$
-					new Object[] { page.getName() }));
+			Assert.isNotNull(page.getControl(),
+					JFaceResources.format(JFaceResources.getString("WizardDialog.missingSetControl"), //$NON-NLS-1$
+							page.getName()));
 			// ensure the dialog is large enough for this page
 			updateSize(page);
 		}
@@ -1292,19 +1232,19 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	 * A long running operation triggered through the wizard was stopped either
 	 * by user input or by normal end. Hides the progress monitor and restores
 	 * the enable state wizard's buttons and controls.
-	 * 
+	 *
 	 * @param savedState
 	 *            the saved UI state as returned by <code>aboutToStart</code>
 	 * @see #aboutToStart
 	 */
-	private void stopped(Object savedState) {
+	private void stopped(Map<String, Object> savedState) {
 		if (getShell() != null && !getShell().isDisposed()) {
 			if (wizard.needsProgressMonitor()) {
 				progressMonitorPart.setVisible(false);
 				progressMonitorPart.removeFromCancelComponent(cancelButton);
 			}
-			Map state = (Map) savedState;
-			restoreUIState(state);
+
+			restoreUIState(savedState);
 			setDisplayCursor(null);
 			if (useCustomProgressMonitorPart) {
 				cancelButton.addSelectionListener(cancelListener);
@@ -1314,7 +1254,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 			}
 			waitCursor.dispose();
 			waitCursor = null;
-			Control focusControl = (Control) state.get(FOCUS_CONTROL);
+			Control focusControl = (Control) savedState.get(FOCUS_CONTROL);
 			if (focusControl != null && !focusControl.isDisposed()) {
 				focusControl.setFocus();
 			}
@@ -1336,17 +1276,16 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		firePageChanged(new PageChangedEvent(this, getCurrentPage()));
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWizardContainer.
-	 */
+	@Override
 	public void updateButtons() {
 		boolean canFlipToNextPage = false;
 		boolean canFinish = wizard.canFinish();
 		if (backButton != null) {
-			backButton.setEnabled(currentPage.getPreviousPage() != null);
+			boolean backEnabled = currentPage != null && currentPage.getPreviousPage() != null;
+			backButton.setEnabled(backEnabled);
 		}
 		if (nextButton != null) {
-			canFlipToNextPage = currentPage.canFlipToNextPage();
+			canFlipToNextPage = currentPage != null && currentPage.canFlipToNextPage();
 			nextButton.setEnabled(canFlipToNextPage);
 		}
 		finishButton.setEnabled(canFinish);
@@ -1369,9 +1308,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		setMessage(pageDescription);
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWizardContainer.
-	 */
+	@Override
 	public void updateMessage() {
 
 		if (currentPage == null) {
@@ -1395,7 +1332,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	/**
 	 * Changes the shell size to the given size, ensuring that it is no larger
 	 * than the display bounds.
-	 * 
+	 *
 	 * @param width
 	 *            the shell width
 	 * @param height
@@ -1411,7 +1348,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	/**
 	 * Computes the correct dialog size for the current page and resizes its shell if necessary.
 	 * Also causes the container to refresh its layout.
-	 * 
+	 *
 	 * @param page the wizard page to use to resize the dialog
 	 * @since 2.0
 	 */
@@ -1423,18 +1360,14 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		pageContainerLayout.layoutPage(page.getControl());
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.wizard.IWizardContainer2#updateSize()
-	 */
+	@Override
 	public void updateSize() {
 		updateSize(currentPage);
 	}
 
 	/**
 	 * Computes the correct dialog size for the given page and resizes its shell if necessary.
-	 * 
+	 *
 	 * @param page the wizard page
 	 */
 	private void updateSizeForPage(IWizardPage page) {
@@ -1451,15 +1384,15 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 
 	/**
 	 * Computes the correct dialog size for the given wizard and resizes its shell if necessary.
-	 * 
+	 *
 	 * @param sizingWizard the wizard
 	 */
 	private void updateSizeForWizard(IWizard sizingWizard) {
 		Point delta = new Point(0, 0);
 		IWizardPage[] pages = sizingWizard.getPages();
-		for (int i = 0; i < pages.length; i++) {
+		for (IWizardPage page : pages) {
 			// ensure the page container is large enough
-			Point pageDelta = calculatePageSizeDelta(pages[i]);
+			Point pageDelta = calculatePageSizeDelta(page);
 			delta.x = Math.max(delta.x, pageDelta.x);
 			delta.y = Math.max(delta.y, pageDelta.y);
 		}
@@ -1471,9 +1404,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		}
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWizardContainer.
-	 */
+	@Override
 	public void updateTitleBar() {
 		String s = null;
 		if (currentPage != null) {
@@ -1490,9 +1421,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		updateMessage();
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWizardContainer.
-	 */
+	@Override
 	public void updateWindowTitle() {
 		if (getShell() == null) {
 			// Not created yet
@@ -1505,29 +1434,17 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 		getShell().setText(title);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.dialogs.IPageChangeProvider#getSelectedPage()
-	 */
+	@Override
 	public Object getSelectedPage() {
 		return getCurrentPage();
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.dialog.IPageChangeProvider#addPageChangedListener()
-	 */
+	@Override
 	public void addPageChangedListener(IPageChangedListener listener) {
 		pageChangedListeners.add(listener);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.dialog.IPageChangeProvider#removePageChangedListener()
-	 */
+	@Override
 	public void removePageChangedListener(IPageChangedListener listener) {
 		pageChangedListeners.remove(listener);
 	}
@@ -1536,19 +1453,18 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	 * Notifies any selection changed listeners that the selected page has
 	 * changed. Only listeners registered at the time this method is called are
 	 * notified.
-	 * 
+	 *
 	 * @param event
 	 *            a selection changed event
-	 * 
+	 *
 	 * @see IPageChangedListener#pageChanged
-	 * 
+	 *
 	 * @since 3.1
 	 */
 	protected void firePageChanged(final PageChangedEvent event) {
-		Object[] listeners = pageChangedListeners.getListeners();
-		for (int i = 0; i < listeners.length; ++i) {
-			final IPageChangedListener l = (IPageChangedListener) listeners[i];
+		for (IPageChangedListener l : pageChangedListeners) {
 			SafeRunnable.run(new SafeRunnable() {
+				@Override
 				public void run() {
 					l.pageChanged(event);
 				}
@@ -1560,7 +1476,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	 * Adds a listener for page changes to the list of page changing listeners
 	 * registered for this dialog. Has no effect if an identical listener is
 	 * already registered.
-	 * 
+	 *
 	 * @param listener
 	 *            a page changing listener
 	 * @since 3.3
@@ -1572,7 +1488,7 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	/**
 	 * Removes the provided page changing listener from the list of page
 	 * changing listeners registered for the dialog.
-	 * 
+	 *
 	 * @param listener
 	 *            a page changing listener
 	 * @since 3.3
@@ -1585,18 +1501,17 @@ public class WizardDialog extends TitleAreaDialog implements IWizardContainer2,
 	 * Notifies any page changing listeners that the currently selected dialog
 	 * page is changing. Only listeners registered at the time this method is
 	 * called are notified.
-	 * 
+	 *
 	 * @param event
 	 *            a selection changing event
-	 * 
+	 *
 	 * @see IPageChangingListener#handlePageChanging(PageChangingEvent)
 	 * @since 3.3
 	 */
 	protected void firePageChanging(final PageChangingEvent event) {
-		Object[] listeners = pageChangingListeners.getListeners();
-		for (int i = 0; i < listeners.length; ++i) {
-			final IPageChangingListener l = (IPageChangingListener) listeners[i];
+		for (IPageChangingListener l : pageChangingListeners) {
 			SafeRunnable.run(new SafeRunnable() {
+				@Override
 				public void run() {
 					l.handlePageChanging(event);
 				}
