@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2011 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -12,8 +12,12 @@
  *  Peter Friese <peter.friese@gentleware.com>
  *     - Fix for bug 208602 - [Dialogs] Open Type dialog needs accessible labels
  *  Simon Muschel <smuschel@gmx.de> - bug 258493
+ *  Lars Vogel <Lars.Vogel@gmail.com> - Bug 440810
+ *  Patrik Suzzi <psuzzi@gmail.com> - Bug 485133
  *******************************************************************************/
 package org.eclipse.ui.dialogs;
+
+import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
 
 import java.io.IOException;
 import java.io.StringReader;
@@ -39,32 +43,29 @@ import org.eclipse.core.runtime.ListenerList;
 import org.eclipse.core.runtime.NullProgressMonitor;
 import org.eclipse.core.runtime.ProgressMonitorWrapper;
 import org.eclipse.core.runtime.Status;
-import org.eclipse.core.runtime.SubProgressMonitor;
+import org.eclipse.core.runtime.SubMonitor;
 import org.eclipse.core.runtime.jobs.Job;
 import org.eclipse.jface.action.Action;
 import org.eclipse.jface.action.ActionContributionItem;
 import org.eclipse.jface.action.IAction;
-import org.eclipse.jface.action.IMenuListener;
 import org.eclipse.jface.action.IMenuManager;
 import org.eclipse.jface.action.LegacyActionTools;
 import org.eclipse.jface.action.MenuManager;
 import org.eclipse.jface.dialogs.IDialogSettings;
 import org.eclipse.jface.viewers.ContentViewer;
-import org.eclipse.jface.viewers.DoubleClickEvent;
+import org.eclipse.jface.viewers.DelegatingStyledCellLabelProvider.IStyledLabelProvider;
 import org.eclipse.jface.viewers.IColorProvider;
 import org.eclipse.jface.viewers.IContentProvider;
-import org.eclipse.jface.viewers.IDoubleClickListener;
 import org.eclipse.jface.viewers.IFontProvider;
 import org.eclipse.jface.viewers.ILabelDecorator;
 import org.eclipse.jface.viewers.ILabelProvider;
 import org.eclipse.jface.viewers.ILabelProviderListener;
 import org.eclipse.jface.viewers.ILazyContentProvider;
 import org.eclipse.jface.viewers.ISelection;
-import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredContentProvider;
+import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.viewers.LabelProvider;
 import org.eclipse.jface.viewers.LabelProviderChangedEvent;
-import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.jface.viewers.StyledCellLabelProvider;
 import org.eclipse.jface.viewers.StyledString;
@@ -72,7 +73,6 @@ import org.eclipse.jface.viewers.TableViewer;
 import org.eclipse.jface.viewers.Viewer;
 import org.eclipse.jface.viewers.ViewerCell;
 import org.eclipse.jface.viewers.ViewerFilter;
-import org.eclipse.jface.viewers.DelegatingStyledCellLabelProvider.IStyledLabelProvider;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.accessibility.ACC;
@@ -82,14 +82,8 @@ import org.eclipse.swt.custom.CLabel;
 import org.eclipse.swt.custom.ViewForm;
 import org.eclipse.swt.events.KeyAdapter;
 import org.eclipse.swt.events.KeyEvent;
-import org.eclipse.swt.events.ModifyEvent;
-import org.eclipse.swt.events.ModifyListener;
 import org.eclipse.swt.events.MouseAdapter;
 import org.eclipse.swt.events.MouseEvent;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
-import org.eclipse.swt.events.TraverseEvent;
-import org.eclipse.swt.events.TraverseListener;
 import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.Font;
 import org.eclipse.swt.graphics.GC;
@@ -128,11 +122,10 @@ import org.eclipse.ui.statushandlers.StatusManager;
 /**
  * Shows a list of items to the user with a text entry field for a string
  * pattern used to filter the list of items.
- * 
+ *
  * @since 3.3
  */
-public abstract class FilteredItemsSelectionDialog extends
-		SelectionStatusDialog {
+public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog {
 
 	private static final String DIALOG_BOUNDS_SETTINGS = "DialogBoundsSettings"; //$NON-NLS-1$
 
@@ -178,6 +171,8 @@ public abstract class FilteredItemsSelectionDialog extends
 	private ItemsListLabelProvider itemsListLabelProvider;
 
 	private MenuManager menuManager;
+
+	private MenuManager contextMenuManager;
 
 	private boolean multi;
 
@@ -227,7 +222,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Creates a new instance of the class.
-	 * 
+	 *
 	 * @param shell
 	 *            shell to parent the dialog on
 	 * @param multi
@@ -249,7 +244,7 @@ public abstract class FilteredItemsSelectionDialog extends
 	/**
 	 * Creates a new instance of the class. Created dialog won't allow to select
 	 * more than one item.
-	 * 
+	 *
 	 * @param shell
 	 *            shell to parent the dialog on
 	 */
@@ -259,7 +254,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Adds viewer filter to the dialog items list.
-	 * 
+	 *
 	 * @param filter
 	 *            the new filter
 	 */
@@ -273,9 +268,9 @@ public abstract class FilteredItemsSelectionDialog extends
 	 * org.eclipse.jface.viewers.DelegatingStyledCellLabelProvider
 	 * .IStyledLabelProvider}, the style text labels provided by it will be used
 	 * provided that the corresponding preference is set.
-	 * 
+	 *
 	 * @see IWorkbenchPreferenceConstants#USE_COLORED_LABELS
-	 * 
+	 *
 	 * @param listLabelProvider
 	 * 		the label provider for items in the list
 	 */
@@ -285,7 +280,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Returns the label decorator for selected items in the list.
-	 * 
+	 *
 	 * @return the label decorator for selected items in the list
 	 */
 	private ILabelDecorator getListSelectionLabelDecorator() {
@@ -294,7 +289,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Sets the label decorator for selected items in the list.
-	 * 
+	 *
 	 * @param listSelectionLabelDecorator
 	 *            the label decorator for selected items in the list
 	 */
@@ -306,7 +301,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Returns the item list label provider.
-	 * 
+	 *
 	 * @return the item list label provider
 	 */
 	private ItemsListLabelProvider getItemsListLabelProvider() {
@@ -319,16 +314,16 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Sets label provider for the details field.
-	 * 
+	 *
 	 * For a single selection, the element sent to
 	 * {@link ILabelProvider#getImage(Object)} and
 	 * {@link ILabelProvider#getText(Object)} is the selected object, for
 	 * multiple selection a {@link String} with amount of selected items is the
 	 * element.
-	 * 
+	 *
 	 * @see #getSelectedItems() getSelectedItems() can be used to retrieve
 	 *      selected items and get the items count.
-	 * 
+	 *
 	 * @param detailsLabelProvider
 	 *            the label provider for the details field
 	 */
@@ -346,11 +341,7 @@ public abstract class FilteredItemsSelectionDialog extends
 		return detailsLabelProvider;
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.window.Window#create()
-	 */
+	@Override
 	public void create() {
 		super.create();
 		pattern.setFocus();
@@ -359,7 +350,7 @@ public abstract class FilteredItemsSelectionDialog extends
 	/**
 	 * Restores dialog using persisted settings. The default implementation
 	 * restores the status of the details line and the selection history.
-	 * 
+	 *
 	 * @param settings
 	 *            settings used to restore dialog
 	 */
@@ -395,29 +386,29 @@ public abstract class FilteredItemsSelectionDialog extends
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.window.Window#close()
-	 */
+	@Override
 	public boolean close() {
 		this.filterJob.cancel();
 		this.refreshCacheJob.cancel();
 		this.refreshProgressMessageJob.cancel();
 		if (showViewHandler != null) {
-			IHandlerService service = (IHandlerService) PlatformUI
+			IHandlerService service = PlatformUI
 					.getWorkbench().getService(IHandlerService.class);
 			service.deactivateHandler(showViewHandler);
 			showViewHandler.getHandler().dispose();
 			showViewHandler = null;
 		}
+		if (menuManager != null)
+			menuManager.dispose();
+		if (contextMenuManager != null)
+			contextMenuManager.dispose();
 		storeDialog(getDialogSettings());
 		return super.close();
 	}
 
 	/**
 	 * Stores dialog settings.
-	 * 
+	 *
 	 * @param settings
 	 *            settings used to store dialog
 	 */
@@ -446,7 +437,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Create a new header which is labelled by headerLabel.
-	 * 
+	 *
 	 * @param parent
 	 * @return Label the label of the header
 	 */
@@ -463,12 +454,10 @@ public abstract class FilteredItemsSelectionDialog extends
 		headerLabel.setText((getMessage() != null && getMessage().trim()
 				.length() > 0) ? getMessage()
 				: WorkbenchMessages.FilteredItemsSelectionDialog_patternLabel);
-		headerLabel.addTraverseListener(new TraverseListener() {
-			public void keyTraversed(TraverseEvent e) {
-				if (e.detail == SWT.TRAVERSE_MNEMONIC && e.doit) {
-					e.detail = SWT.TRAVERSE_NONE;
-					pattern.setFocus();
-				}
+		headerLabel.addTraverseListener(e -> {
+			if (e.detail == SWT.TRAVERSE_MNEMONIC && e.doit) {
+				e.detail = SWT.TRAVERSE_NONE;
+				pattern.setFocus();
 			}
 		});
 
@@ -482,7 +471,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Create the labels for the list and the progress. Return the list label.
-	 * 
+	 *
 	 * @param parent
 	 * @return Label
 	 */
@@ -499,12 +488,10 @@ public abstract class FilteredItemsSelectionDialog extends
 		listLabel
 				.setText(WorkbenchMessages.FilteredItemsSelectionDialog_listLabel);
 
-		listLabel.addTraverseListener(new TraverseListener() {
-			public void keyTraversed(TraverseEvent e) {
-				if (e.detail == SWT.TRAVERSE_MNEMONIC && e.doit) {
-					e.detail = SWT.TRAVERSE_NONE;
-					list.getTable().setFocus();
-				}
+		listLabel.addTraverseListener(e -> {
+			if (e.detail == SWT.TRAVERSE_MNEMONIC && e.doit) {
+				e.detail = SWT.TRAVERSE_NONE;
+				list.getTable().setFocus();
 			}
 		});
 
@@ -527,6 +514,7 @@ public abstract class FilteredItemsSelectionDialog extends
 		toolBar.setLayoutData(data);
 
 		toolBar.addMouseListener(new MouseAdapter() {
+			@Override
 			public void mouseDown(MouseEvent e) {
 				showViewMenu();
 			}
@@ -536,19 +524,16 @@ public abstract class FilteredItemsSelectionDialog extends
 				.getImage(IWorkbenchGraphicConstants.IMG_LCL_VIEW_MENU));
 		toolItem
 				.setToolTipText(WorkbenchMessages.FilteredItemsSelectionDialog_menu);
-		toolItem.addSelectionListener(new SelectionAdapter() {
-			public void widgetSelected(SelectionEvent e) {
-				showViewMenu();
-			}
-		});
+		toolItem.addSelectionListener(widgetSelectedAdapter(e -> showViewMenu()));
 
 		menuManager = new MenuManager();
 
 		fillViewMenu(menuManager);
 
-		IHandlerService service = (IHandlerService) PlatformUI.getWorkbench()
+		IHandlerService service = PlatformUI.getWorkbench()
 				.getService(IHandlerService.class);
 		IHandler handler = new AbstractHandler() {
+			@Override
 			public Object execute(ExecutionEvent event) {
 				showViewMenu();
 				return null;
@@ -561,7 +546,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Fills the menu of the dialog.
-	 * 
+	 *
 	 * @param menuManager
 	 *            the menu manager
 	 */
@@ -583,12 +568,12 @@ public abstract class FilteredItemsSelectionDialog extends
      * Hook that allows to add actions to the context menu.
 	 * <p>
 	 * Subclasses may extend in order to add other actions.</p>
-     * 
+     *
      * @param menuManager the context menu manager
      * @since 3.5
      */
 	protected void fillContextMenu(IMenuManager menuManager) {
-		List selectedElements= ((StructuredSelection)list.getSelection()).toList();
+		List selectedElements = list.getStructuredSelection().toList();
 
 		Object item= null;
 
@@ -609,36 +594,27 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	private void createPopupMenu() {
 		removeHistoryItemAction = new RemoveHistoryItemAction();
-		removeHistoryActionContributionItem = new ActionContributionItem(
-				removeHistoryItemAction);
+		removeHistoryActionContributionItem = new ActionContributionItem(removeHistoryItemAction);
 
-		MenuManager manager = new MenuManager();
-		manager.setRemoveAllWhenShown(true);
-		manager.addMenuListener(new IMenuListener() {
-			public void menuAboutToShow(IMenuManager manager) {
-				fillContextMenu(manager);
-			}
-		});
+		contextMenuManager = new MenuManager();
+		contextMenuManager.setRemoveAllWhenShown(true);
+		contextMenuManager.addMenuListener(manager -> fillContextMenu(manager));
 
 		final Table table = list.getTable();
-		Menu menu= manager.createContextMenu(table);
+		Menu menu= contextMenuManager.createContextMenu(table);
 		table.setMenu(menu);
 	}
 
 	/**
 	 * Creates an extra content area, which will be located above the details.
-	 * 
+	 *
 	 * @param parent
 	 *            parent to create the dialog widgets in
 	 * @return an extra content area
 	 */
 	protected abstract Control createExtendedContentArea(Composite parent);
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.dialogs.Dialog#createDialogArea(org.eclipse.swt.widgets.Composite)
-	 */
+	@Override
 	protected Control createDialogArea(Composite parent) {
 		Composite dialogArea = (Composite) super.createDialogArea(parent);
 
@@ -656,6 +632,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		pattern = new Text(content, SWT.SINGLE | SWT.BORDER | SWT.SEARCH | SWT.ICON_CANCEL);
 		pattern.getAccessible().addAccessibleListener(new AccessibleAdapter() {
+			@Override
 			public void getName(AccessibleEvent e) {
 				e.result = LegacyActionTools.removeMnemonics(headerLabel
 						.getText());
@@ -670,6 +647,7 @@ public abstract class FilteredItemsSelectionDialog extends
 				| SWT.BORDER | SWT.V_SCROLL | SWT.VIRTUAL);
 		list.getTable().getAccessible().addAccessibleListener(
 				new AccessibleAdapter() {
+					@Override
 					public void getName(AccessibleEvent e) {
 						if (e.childID == ACC.CHILDID_SELF) {
 							e.result = LegacyActionTools
@@ -688,13 +666,10 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		createPopupMenu();
 
-		pattern.addModifyListener(new ModifyListener() {
-			public void modifyText(ModifyEvent e) {
-				applyFilter();
-			}
-		});
+		pattern.addModifyListener(e -> applyFilter());
 
 		pattern.addKeyListener(new KeyAdapter() {
+			@Override
 			public void keyPressed(KeyEvent e) {
 				if (e.keyCode == SWT.ARROW_DOWN) {
 					if (list.getTable().getItemCount() > 0) {
@@ -704,21 +679,15 @@ public abstract class FilteredItemsSelectionDialog extends
 			}
 		});
 
-		list.addSelectionChangedListener(new ISelectionChangedListener() {
-			public void selectionChanged(SelectionChangedEvent event) {
-				StructuredSelection selection = (StructuredSelection) event
-						.getSelection();
-				handleSelected(selection);
-			}
+		list.addSelectionChangedListener(event -> {
+			StructuredSelection selection = (StructuredSelection) event.getSelection();
+			handleSelected(selection);
 		});
 
-		list.addDoubleClickListener(new IDoubleClickListener() {
-			public void doubleClick(DoubleClickEvent event) {
-				handleDoubleClick();
-			}
-		});
+		list.addDoubleClickListener(event -> handleDoubleClick());
 
 		list.getTable().addKeyListener(new KeyAdapter() {
+			@Override
 			public void keyPressed(KeyEvent e) {
 
 				if (e.keyCode == SWT.DEL) {
@@ -745,8 +714,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 				if (e.keyCode == SWT.ARROW_UP && (e.stateMask & SWT.SHIFT) != 0
 						&& (e.stateMask & SWT.CTRL) != 0) {
-					StructuredSelection selection = (StructuredSelection) list
-							.getSelection();
+					IStructuredSelection selection = list.getStructuredSelection();
 
 					if (selection.size() == 1) {
 						Object element = selection.getFirstElement();
@@ -757,8 +725,7 @@ public abstract class FilteredItemsSelectionDialog extends
 								.getSelectionIndex() - 1) instanceof ItemsListSeparator)
 							list.getTable().setSelection(
 									list.getTable().getSelectionIndex() - 1);
-						list.getTable().notifyListeners(SWT.Selection,
-								new Event());
+						list.getTable().notifyListeners(SWT.Selection, new Event());
 
 					}
 				}
@@ -781,7 +748,9 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		details = new DetailsContentViewer(content, SWT.BORDER | SWT.FLAT);
 		details.setVisible(toggleStatusLineAction.isChecked());
-		details.setContentProvider(new NullContentProvider());
+		details.setContentProvider(new IContentProvider() {
+			// intentionally empty
+		});
 		details.setLabelProvider(getDetailsLabelProvider());
 
 		applyDialogFont(content);
@@ -838,7 +807,7 @@ public abstract class FilteredItemsSelectionDialog extends
 					.setInput(NLS
 							.bind(
 									WorkbenchMessages.FilteredItemsSelectionDialog_nItemsSelected,
-									new Integer(selection.size())));
+									Integer.valueOf(selection.size())));
 			break;
 		}
 
@@ -847,7 +816,7 @@ public abstract class FilteredItemsSelectionDialog extends
 	/**
 	 * Handle selection in the items list by updating labels of selected and
 	 * unselected items and refresh the details field using the selection.
-	 * 
+	 *
 	 * @param selection
 	 *            the new selection
 	 */
@@ -914,11 +883,7 @@ public abstract class FilteredItemsSelectionDialog extends
 		updateStatus(status);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.window.Dialog#getDialogBoundsSettings()
-	 */
+	@Override
 	protected IDialogSettings getDialogBoundsSettings() {
 		IDialogSettings settings = getDialogSettings();
 		IDialogSettings section = settings.getSection(DIALOG_BOUNDS_SETTINGS);
@@ -932,7 +897,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Returns the dialog settings. Returned object can't be null.
-	 * 
+	 *
 	 * @return return dialog settings for this dialog
 	 */
 	protected abstract IDialogSettings getDialogSettings();
@@ -972,9 +937,10 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Updates the progress label.
-	 * 
+	 *
 	 * @deprecated
 	 */
+	@Deprecated
 	public void updateProgressLabel() {
 		scheduleProgressMessageRefresh();
 	}
@@ -985,7 +951,7 @@ public abstract class FilteredItemsSelectionDialog extends
 	 * matches is added.
 	 * <p>
 	 * This is a long running operation and should be called in a job.
-	 * 
+	 *
 	 * @param checkDuplicates
 	 *            <code>true</code> if data concerning elements duplication
 	 *            should be computed - it takes much more time than the standard
@@ -1018,15 +984,10 @@ public abstract class FilteredItemsSelectionDialog extends
 			refreshProgressMessageJob.scheduleProgressRefresh(null);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.dialogs.SelectionStatusDialog#computeResult()
-	 */
+	@Override
 	protected void computeResult() {
 
-		List selectedElements = ((StructuredSelection) list.getSelection())
-				.toList();
+		List selectedElements = list.getStructuredSelection().toList();
 
 		List objectsToReturn = new ArrayList();
 
@@ -1047,6 +1008,7 @@ public abstract class FilteredItemsSelectionDialog extends
 	/*
 	 * @see org.eclipse.ui.dialogs.SelectionStatusDialog#updateStatus(org.eclipse.core.runtime.IStatus)
 	 */
+	@Override
 	protected void updateStatus(IStatus status) {
 		this.status = status;
 		super.updateStatus(status);
@@ -1055,6 +1017,7 @@ public abstract class FilteredItemsSelectionDialog extends
 	/*
 	 * @see Dialog#okPressed()
 	 */
+	@Override
 	protected void okPressed() {
 		if (status != null
 				&& (status.isOK() || status.getCode() == IStatus.INFO)) {
@@ -1066,7 +1029,7 @@ public abstract class FilteredItemsSelectionDialog extends
 	 * Sets the initial pattern used by the filter. This text is copied into the
 	 * selection input on the dialog. A full selection is used in the pattern
 	 * input field.
-	 * 
+	 *
 	 * @param text
 	 *            initial pattern for the filter
 	 * @see FilteredItemsSelectionDialog#FULL_SELECTION
@@ -1079,7 +1042,7 @@ public abstract class FilteredItemsSelectionDialog extends
 	 * Sets the initial pattern used by the filter. This text is copied into the
 	 * selection input on the dialog. The <code>selectionMode</code> is used
 	 * to choose selection type for the input field.
-	 * 
+	 *
 	 * @param text
 	 *            initial pattern for the filter
 	 * @param selectionMode
@@ -1094,7 +1057,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Gets initial pattern.
-	 * 
+	 *
 	 * @return initial pattern, or <code>null</code> if initial pattern is not
 	 *         set
 	 */
@@ -1104,13 +1067,12 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Returns the current selection.
-	 * 
+	 *
 	 * @return the current selection
 	 */
 	protected StructuredSelection getSelectedItems() {
 
-		StructuredSelection selection = (StructuredSelection) list
-				.getSelection();
+		StructuredSelection selection = (StructuredSelection) list.getStructuredSelection();
 
 		List selectedItems = selection.toList();
 		Object itemToRemove = null;
@@ -1136,7 +1098,7 @@ public abstract class FilteredItemsSelectionDialog extends
 	 * Validates the item. When items on the items list are selected or
 	 * deselected, it validates each item in the selection and the dialog status
 	 * depends on all validations.
-	 * 
+	 *
 	 * @param item
 	 *            an item to be checked
 	 * @return status of the dialog to be set
@@ -1145,7 +1107,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Creates an instance of a filter.
-	 * 
+	 *
 	 * @return a filter for items on the items list. Can be <code>null</code>,
 	 *         no filtering will be applied then, causing no item to be shown in
 	 *         the list.
@@ -1182,14 +1144,14 @@ public abstract class FilteredItemsSelectionDialog extends
 	 * will be probably created as an anonymous class. Parameters passed to the
 	 * <code>compare(java.lang.Object, java.lang.Object)</code> are going to
 	 * be the same type as the one used in the content provider.
-	 * 
+	 *
 	 * @return comparator to sort items content provider
 	 */
 	protected abstract Comparator getItemsComparator();
 
 	/**
 	 * Fills the content provider with matching items.
-	 * 
+	 *
 	 * @param contentProvider
 	 *            collector to add items to.
 	 *            {@link FilteredItemsSelectionDialog.AbstractContentProvider#add(Object, FilteredItemsSelectionDialog.ItemsFilter)}
@@ -1207,7 +1169,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Removes selected items from history.
-	 * 
+	 *
 	 * @param items
 	 *            items to be removed
 	 */
@@ -1222,7 +1184,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Removes an item from history.
-	 * 
+	 *
 	 * @param item
 	 *            an item to remove
 	 * @return removed item
@@ -1233,7 +1195,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Adds item to history.
-	 * 
+	 *
 	 * @param item
 	 *            the item to be added
 	 */
@@ -1243,7 +1205,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Returns a history comparator.
-	 * 
+	 *
 	 * @return decorated comparator
 	 */
 	private Comparator getHistoryComparator() {
@@ -1252,7 +1214,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Returns the history of selected elements.
-	 * 
+	 *
 	 * @return history of selected elements, or <code>null</code> if it is not
 	 *         set
 	 */
@@ -1262,7 +1224,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Sets new history.
-	 * 
+	 *
 	 * @param selectionHistory
 	 *            the history
 	 */
@@ -1273,7 +1235,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Indicates whether the given item is a history item.
-	 * 
+	 *
 	 * @param item
 	 *            the item to be investigated
 	 * @return <code>true</code> if the given item exists in history,
@@ -1285,7 +1247,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Indicates whether the given item is a duplicate.
-	 * 
+	 *
 	 * @param item
 	 *            the item to be investigated
 	 * @return <code>true</code> if the item is duplicate, <code>false</code>
@@ -1297,7 +1259,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Sets separator label
-	 * 
+	 *
 	 * @param separatorLabel
 	 *            the label showed on separator
 	 */
@@ -1307,7 +1269,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 	/**
 	 * Returns name for then given object.
-	 * 
+	 *
 	 * @param item
 	 *            an object from the content provider. Subclasses should pay
 	 *            attention to the passed argument. They should either only pass
@@ -1329,6 +1291,7 @@ public abstract class FilteredItemsSelectionDialog extends
 					IAction.AS_CHECK_BOX);
 		}
 
+		@Override
 		public void run() {
 			details.setVisible(isChecked());
 		}
@@ -1360,7 +1323,7 @@ public abstract class FilteredItemsSelectionDialog extends
 	 * could be displayed earlier</li>
 	 * <li> refreshing the UI have to be run in a UIJob</li>
 	 * </ul>
-	 * 
+	 *
 	 * @see org.eclipse.ui.dialogs.FilteredItemsSelectionDialog.FilterJob
 	 * @see org.eclipse.ui.dialogs.FilteredItemsSelectionDialog.RefreshJob
 	 * @see org.eclipse.ui.dialogs.FilteredItemsSelectionDialog.RefreshCacheJob
@@ -1377,11 +1340,7 @@ public abstract class FilteredItemsSelectionDialog extends
 			setSystem(true);
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.ui.progress.UIJob#runInUIThread(org.eclipse.core.runtime.IProgressMonitor)
-		 */
+		@Override
 		public IStatus runInUIThread(IProgressMonitor monitor) {
 			if (monitor.isCanceled())
 				return new Status(IStatus.OK, WorkbenchPlugin.PI_WORKBENCH,
@@ -1418,11 +1377,7 @@ public abstract class FilteredItemsSelectionDialog extends
 			setSystem(true);
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.ui.progress.UIJob#runInUIThread(org.eclipse.core.runtime.IProgressMonitor)
-		 */
+		@Override
 		public IStatus runInUIThread(IProgressMonitor monitor) {
 
 			if (!progressLabel.isDisposed())
@@ -1443,7 +1398,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Schedule progress refresh job.
-		 * 
+		 *
 		 * @param progressMonitor
 		 *            used during refresh progress label
 		 */
@@ -1460,9 +1415,9 @@ public abstract class FilteredItemsSelectionDialog extends
 	/**
 	 * A job responsible for computing filtered items list presented using
 	 * <code>RefreshJob</code>.
-	 * 
+	 *
 	 * @see FilteredItemsSelectionDialog.RefreshJob
-	 * 
+	 *
 	 */
 	private class RefreshCacheJob extends Job {
 
@@ -1485,11 +1440,7 @@ public abstract class FilteredItemsSelectionDialog extends
 			refreshJob.cancel();
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.core.runtime.jobs.Job#run(org.eclipse.core.runtime.IProgressMonitor)
-		 */
+		@Override
 		protected IStatus run(IProgressMonitor monitor) {
 			if (monitor.isCanceled()) {
 				return new Status(IStatus.CANCEL, WorkbenchPlugin.PI_WORKBENCH,
@@ -1512,11 +1463,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.core.runtime.jobs.Job#canceling()
-		 */
+		@Override
 		protected void canceling() {
 			super.canceling();
 			contentProvider.stopReloadingCache();
@@ -1534,14 +1481,9 @@ public abstract class FilteredItemsSelectionDialog extends
 					WorkbenchMessages.FilteredItemsSelectionDialog_removeItemsFromHistoryAction);
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.action.Action#run()
-		 */
+		@Override
 		public void run() {
-			List selectedElements = ((StructuredSelection) list.getSelection())
-					.toList();
+			List selectedElements = ((StructuredSelection) list.getSelection()).toList();
 			removeSelectedItems(selectedElements);
 		}
 	}
@@ -1550,18 +1492,17 @@ public abstract class FilteredItemsSelectionDialog extends
 		return PlatformUI.getPreferenceStore().getBoolean(IWorkbenchPreferenceConstants.USE_COLORED_LABELS);
 	}
 
-	private class ItemsListLabelProvider extends StyledCellLabelProvider
-			implements ILabelProviderListener {
+	private class ItemsListLabelProvider extends StyledCellLabelProvider implements ILabelProviderListener {
 		private ILabelProvider provider;
 
 		private ILabelDecorator selectionDecorator;
 
 		// Need to keep our own list of listeners
-		private ListenerList listeners = new ListenerList();
+		private ListenerList<ILabelProviderListener> listeners = new ListenerList<>();
 
 		/**
 		 * Creates a new instance of the class.
-		 * 
+		 *
 		 * @param provider
 		 *            the label provider for all items, not <code>null</code>
 		 * @param selectionDecorator
@@ -1584,7 +1525,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Sets new selection decorator.
-		 * 
+		 *
 		 * @param newSelectionDecorator
 		 *            new label decorator for selected items in the list
 		 */
@@ -1603,7 +1544,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Gets selection decorator.
-		 * 
+		 *
 		 * @return the label decorator for selected items in the list
 		 */
 		public ILabelDecorator getSelectionDecorator() {
@@ -1612,7 +1553,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Sets new label provider.
-		 * 
+		 *
 		 * @param newProvider
 		 *            new label provider for items in the list, not
 		 *            <code>null</code>
@@ -1642,23 +1583,17 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		private boolean isSelected(Object element) {
 			if (element != null && currentSelection != null) {
-				for (int i = 0; i < currentSelection.length; i++) {
-					if (element.equals(currentSelection[i]))
+				for (Object entry : currentSelection) {
+					if (element.equals(entry))
 						return true;
 				}
 			}
 			return false;
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.ILabelProvider#getText(java.lang.Object)
-		 */
 		private String getText(Object element) {
 			if (element instanceof ItemsListSeparator) {
-				return getSeparatorLabel(((ItemsListSeparator) element)
-						.getName());
+				return getSeparatorLabel(((ItemsListSeparator) element).getName());
 			}
 
 			String str = provider.getText(element);
@@ -1669,19 +1604,18 @@ public abstract class FilteredItemsSelectionDialog extends
 			return str;
 		}
 
-		private StyledString getStyledText(Object element,
-				IStyledLabelProvider provider) {
+		private StyledString getStyledText(Object element, IStyledLabelProvider provider) {
 			StyledString string = provider.getStyledText(element);
 
 			if (selectionDecorator != null && isSelected(element)) {
-				String decorated = selectionDecorator.decorateText(string
-						.getString(), element);
+				String decorated = selectionDecorator.decorateText(string.getString(), element);
 				return StyledCellLabelProvider.styleDecoratedString(decorated, null, string);
 				// no need to add colors when element is selected
 			}
 			return string;
 		}
 
+		@Override
 		public void update(ViewerCell cell) {
 			Object element = cell.getElement();
 
@@ -1723,33 +1657,25 @@ public abstract class FilteredItemsSelectionDialog extends
 
 			gc.dispose();
 
-			StringBuffer dashes = new StringBuffer();
+			StringBuilder dashes = new StringBuilder();
 			int chars = (((width - fMessageLength) / fSeparatorWidth) / 2) - 2;
 			for (int i = 0; i < chars; i++) {
 				dashes.append('-');
 			}
 
-			StringBuffer result = new StringBuffer();
+			StringBuilder result = new StringBuilder();
 			result.append(dashes);
 			result.append(" " + separatorLabel + " "); //$NON-NLS-1$//$NON-NLS-2$
 			result.append(dashes);
 			return result.toString().trim();
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.IBaseLabelProvider#addListener(org.eclipse.jface.viewers.ILabelProviderListener)
-		 */
+		@Override
 		public void addListener(ILabelProviderListener listener) {
 			listeners.add(listener);
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.IBaseLabelProvider#dispose()
-		 */
+		@Override
 		public void dispose() {
 			provider.removeListener(this);
 			provider.dispose();
@@ -1762,12 +1688,7 @@ public abstract class FilteredItemsSelectionDialog extends
 			super.dispose();
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.IBaseLabelProvider#isLabelProperty(java.lang.Object,
-		 *      java.lang.String)
-		 */
+		@Override
 		public boolean isLabelProperty(Object element, String property) {
 			if (provider.isLabelProperty(element, property)) {
 				return true;
@@ -1779,11 +1700,7 @@ public abstract class FilteredItemsSelectionDialog extends
 			return false;
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.IBaseLabelProvider#removeListener(org.eclipse.jface.viewers.ILabelProviderListener)
-		 */
+		@Override
 		public void removeListener(ILabelProviderListener listener) {
 			listeners.remove(listener);
 		}
@@ -1819,15 +1736,10 @@ public abstract class FilteredItemsSelectionDialog extends
 			return null;
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.ILabelProviderListener#labelProviderChanged(org.eclipse.jface.viewers.LabelProviderChangedEvent)
-		 */
+		@Override
 		public void labelProviderChanged(LabelProviderChangedEvent event) {
-			Object[] l = listeners.getListeners();
-			for (int i = 0; i < listeners.size(); i++) {
-				((ILabelProviderListener) l[i]).labelProviderChanged(event);
+			for (ILabelProviderListener l : listeners) {
+				l.labelProviderChanged(event);
 			}
 		}
 	}
@@ -1842,7 +1754,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Creates a new instance of the class.
-		 * 
+		 *
 		 * @param name
 		 *            the name of the separator
 		 */
@@ -1852,7 +1764,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Returns the name of this separator.
-		 * 
+		 *
 		 * @return the name of the separator
 		 */
 		public String getName() {
@@ -1865,7 +1777,7 @@ public abstract class FilteredItemsSelectionDialog extends
 	 * process. It is used by <code>RefreshProgressMessageJob</code> to
 	 * refresh progress message. State of this monitor illustrates state of
 	 * filtering or cache refreshing process.
-	 * 
+	 *
 	 */
 	private class GranualProgressMonitor extends ProgressMonitorWrapper {
 
@@ -1881,7 +1793,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Creates instance of <code>GranualProgressMonitor</code>.
-		 * 
+		 *
 		 * @param monitor
 		 *            progress to be wrapped
 		 */
@@ -1891,40 +1803,27 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Checks if filtering has been done
-		 * 
+		 *
 		 * @return true if filtering work has been done false in other way
 		 */
 		public boolean isDone() {
 			return done;
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.core.runtime.ProgressMonitorWrapper#setTaskName(java.lang.String)
-		 */
+		@Override
 		public void setTaskName(String name) {
 			super.setTaskName(name);
 			this.name = name;
 			this.subName = null;
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.core.runtime.ProgressMonitorWrapper#subTask(java.lang.String)
-		 */
+		@Override
 		public void subTask(String name) {
 			super.subTask(name);
 			this.subName = name;
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.core.runtime.ProgressMonitorWrapper#beginTask(java.lang.String,
-		 *      int)
-		 */
+		@Override
 		public void beginTask(String name, int totalWork) {
 			super.beginTask(name, totalWork);
 			if (this.name == null)
@@ -1933,41 +1832,25 @@ public abstract class FilteredItemsSelectionDialog extends
 			refreshProgressMessageJob.scheduleProgressRefresh(this);
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.core.runtime.ProgressMonitorWrapper#worked(int)
-		 */
+		@Override
 		public void worked(int work) {
 			super.worked(work);
 			internalWorked(work);
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.core.runtime.ProgressMonitorWrapper#done()
-		 */
+		@Override
 		public void done() {
 			done = true;
 			super.done();
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.core.runtime.ProgressMonitorWrapper#setCanceled(boolean)
-		 */
+		@Override
 		public void setCanceled(boolean b) {
 			done = b;
 			super.setCanceled(b);
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.core.runtime.ProgressMonitorWrapper#internalWorked(double)
-		 */
+		@Override
 		public void internalWorked(double work) {
 			worked = worked + work;
 		}
@@ -1995,8 +1878,7 @@ public abstract class FilteredItemsSelectionDialog extends
 							WorkbenchMessages.FilteredItemsSelectionDialog_taskProgressMessage,
 							new Object[] {
 									message,
-									new Integer(
-											(int) ((worked * 100) / totalWork)) });
+									Integer.valueOf((int) ((worked * 100) / totalWork)) });
 
 		}
 
@@ -2020,11 +1902,7 @@ public abstract class FilteredItemsSelectionDialog extends
 			setSystem(true);
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.core.runtime.jobs.Job#run(org.eclipse.core.runtime.IProgressMonitor)
-		 */
+		@Override
 		protected IStatus run(IProgressMonitor monitor) {
 
 			this.itemsFilter = filter;
@@ -2049,7 +1927,7 @@ public abstract class FilteredItemsSelectionDialog extends
 	/**
 	 * Filters items in indicated set and history. During filtering, it
 	 * refreshes the dialog (progress monitor and elements list).
-	 * 
+	 *
 	 * Depending on the filter, <code>FilterJob</code> decides which kind of
 	 * search will be run inside <code>filterContent</code>. If the last
 	 * filtering is done (last completed filter), is not null, and the new
@@ -2073,11 +1951,7 @@ public abstract class FilteredItemsSelectionDialog extends
 			setSystem(true);
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.core.runtime.jobs.Job#run(org.eclipse.core.runtime.IProgressMonitor)
-		 */
+		@Override
 		protected final IStatus run(IProgressMonitor parent) {
 			GranualProgressMonitor monitor = new GranualProgressMonitor(parent);
 			return doRun(monitor);
@@ -2086,7 +1960,7 @@ public abstract class FilteredItemsSelectionDialog extends
 		/**
 		 * Executes job using the given filtering progress monitor. A hook for
 		 * subclasses.
-		 * 
+		 *
 		 * @param monitor
 		 *            progress monitor
 		 * @return result of the execution
@@ -2108,7 +1982,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Main method for the job.
-		 * 
+		 *
 		 * @param monitor
 		 * @throws CoreException
 		 */
@@ -2135,7 +2009,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Filters items.
-		 * 
+		 *
 		 * @param monitor
 		 *            for monitoring progress
 		 * @throws CoreException
@@ -2169,22 +2043,16 @@ public abstract class FilteredItemsSelectionDialog extends
 				lastCompletedFilter = null;
 				lastCompletedResult = null;
 
-				SubProgressMonitor subMonitor = null;
-				if (monitor != null) {
-					monitor
-							.beginTask(
+				SubMonitor subMonitor = SubMonitor.convert(monitor,
 									WorkbenchMessages.FilteredItemsSelectionDialog_searchJob_taskName,
 									100);
-					subMonitor = new SubProgressMonitor(monitor, 95);
 
-				}
-
-				fillContentProvider(contentProvider, itemsFilter, subMonitor);
+				fillContentProvider(contentProvider, itemsFilter, subMonitor.split(95));
 
 				if (monitor != null && !monitor.isCanceled()) {
-					monitor.worked(2);
+					subMonitor.worked(2);
 					contentProvider.rememberResult(itemsFilter);
-					monitor.worked(3);
+					subMonitor.worked(3);
 				}
 			}
 
@@ -2220,11 +2088,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 				private static final long serialVersionUID = 0L;
 
-				/*
-				 * (non-Javadoc)
-				 * 
-				 * @see java.util.LinkedList#add(java.lang.Object)
-				 */
+				@Override
 				public boolean add(Object arg0) {
 					if (this.size() >= MAX_HISTORY_SIZE) {
 						Iterator iterator = this.iterator();
@@ -2249,7 +2113,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Adds object to history.
-		 * 
+		 *
 		 * @param object
 		 *            the item to be added to the history
 		 */
@@ -2260,7 +2124,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Returns <code>true</code> if history contains object.
-		 * 
+		 *
 		 * @param object
 		 *            the item for which check will be executed
 		 * @return <code>true</code> if history contains object
@@ -2272,7 +2136,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Returns <code>true</code> if history is empty.
-		 * 
+		 *
 		 * @return <code>true</code> if history is empty
 		 */
 		public synchronized boolean isEmpty() {
@@ -2281,7 +2145,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Remove element from history.
-		 * 
+		 *
 		 * @param element
 		 *            to remove form the history
 		 * @return <code>true</code> if this list contained the specified
@@ -2293,7 +2157,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Load history elements from memento.
-		 * 
+		 *
 		 * @param memento
 		 *            memento from which the history will be retrieved
 		 */
@@ -2308,8 +2172,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 			IMemento[] mementoElements = historyMemento
 					.getChildren(infoNodeName);
-			for (int i = 0; i < mementoElements.length; ++i) {
-				IMemento mementoElement = mementoElements[i];
+			for (IMemento mementoElement : mementoElements) {
 				Object object = restoreItemFromMemento(mementoElement);
 				if (object != null) {
 					historyList.add(object);
@@ -2319,7 +2182,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Save history elements to memento.
-		 * 
+		 *
 		 * @param memento
 		 *            memento to which the history will be added
 		 */
@@ -2328,8 +2191,7 @@ public abstract class FilteredItemsSelectionDialog extends
 			IMemento historyMemento = memento.createChild(rootNodeName);
 
 			Object[] items = getHistoryItems();
-			for (int i = 0; i < items.length; i++) {
-				Object item = items[i];
+			for (Object item : items) {
 				IMemento elementMemento = historyMemento
 						.createChild(infoNodeName);
 				storeItemToMemento(item, elementMemento);
@@ -2339,7 +2201,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Gets array of history items.
-		 * 
+		 *
 		 * @return array of history elements
 		 */
 		public synchronized Object[] getHistoryItems() {
@@ -2348,17 +2210,17 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Creates an object using given memento.
-		 * 
+		 *
 		 * @param memento
 		 *            memento used for creating new object
-		 * 
+		 *
 		 * @return the restored object
 		 */
 		protected abstract Object restoreItemFromMemento(IMemento memento);
 
 		/**
 		 * Store object in <code>IMemento</code>.
-		 * 
+		 *
 		 * @param item
 		 *            the item to store
 		 * @param memento
@@ -2385,7 +2247,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Creates new instance of ItemsFilter.
-		 * 
+		 *
 		 * @param searchPattern
 		 *            the pattern to be used when filtering
 		 */
@@ -2408,13 +2270,13 @@ public abstract class FilteredItemsSelectionDialog extends
 		 * <code>b</code> is a sub-filter of <code>a</code>, and not
 		 * vice-versa. </i>
 		 * </p>
-		 * 
+		 *
 		 * @param filter
 		 *            the filter to be checked, or <code>null</code>
 		 * @return <code>true</code> if the given filter is sub-filter of this
 		 *         filter, <code>false</code> if the given filter isn't a
 		 *         sub-filter or is <code>null</code>
-		 * 
+		 *
 		 * @see org.eclipse.ui.dialogs.SearchPattern#isSubPattern(org.eclipse.ui.dialogs.SearchPattern)
 		 */
 		public boolean isSubFilter(ItemsFilter filter) {
@@ -2428,13 +2290,13 @@ public abstract class FilteredItemsSelectionDialog extends
 		 * Checks whether the provided filter is equal to the current filter.
 		 * The default implementation checks if <code>SearchPattern</code>
 		 * from current filter is equal to the one from provided filter.
-		 * 
+		 *
 		 * @param filter
 		 *            filter to be checked, or <code>null</code>
 		 * @return <code>true</code> if the given filter is equal to current
 		 *         filter, <code>false</code> if given filter isn't equal to
 		 *         current one or if it is <code>null</code>
-		 * 
+		 *
 		 * @see org.eclipse.ui.dialogs.SearchPattern#equalsPattern(org.eclipse.ui.dialogs.SearchPattern)
 		 */
 		public boolean equalsFilter(ItemsFilter filter) {
@@ -2447,7 +2309,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Checks whether the pattern's match rule is camel case.
-		 * 
+		 *
 		 * @return <code>true</code> if pattern's match rule is camel case,
 		 *         <code>false</code> otherwise
 		 */
@@ -2457,9 +2319,9 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Returns the pattern string.
-		 * 
+		 *
 		 * @return pattern for this filter
-		 * 
+		 *
 		 * @see SearchPattern#getPattern()
 		 */
 		public String getPattern() {
@@ -2468,9 +2330,9 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Returns the rule to apply for matching keys.
-		 * 
+		 *
 		 * @return an implementation-specific match rule
-		 * 
+		 *
 		 * @see SearchPattern#getMatchRule() for match rules returned by the
 		 *      default implementation
 		 */
@@ -2480,7 +2342,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Matches text with filter.
-		 * 
+		 *
 		 * @param text
 		 *            the text to match with the filter
 		 * @return <code>true</code> if text matches with filter pattern,
@@ -2493,7 +2355,7 @@ public abstract class FilteredItemsSelectionDialog extends
 		/**
 		 * General method for matching raw name pattern. Checks whether current
 		 * pattern is prefix of name provided item.
-		 * 
+		 *
 		 * @param item
 		 *            item to check
 		 * @return <code>true</code> if current pattern is a prefix of name
@@ -2522,7 +2384,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Matches an item against filter conditions.
-		 * 
+		 *
 		 * @param item
 		 * @return <code>true<code> if item matches against filter conditions, <code>false</code>
 		 *         otherwise
@@ -2532,7 +2394,7 @@ public abstract class FilteredItemsSelectionDialog extends
 		/**
 		 * Checks consistency of an item. Item is inconsistent if was changed or
 		 * removed.
-		 * 
+		 *
 		 * @param item
 		 * @return <code>true</code> if item is consistent, <code>false</code>
 		 *         if item is inconsistent
@@ -2549,12 +2411,12 @@ public abstract class FilteredItemsSelectionDialog extends
 		/**
 		 * Adds the item to the content provider iff the filter matches the
 		 * item. Otherwise does nothing.
-		 * 
+		 *
 		 * @param item
 		 *            the item to add
 		 * @param itemsFilter
 		 *            the filter
-		 * 
+		 *
 		 * @see FilteredItemsSelectionDialog.ItemsFilter#matchItem(Object)
 		 */
 		public abstract void add(Object item, ItemsFilter itemsFilter);
@@ -2639,7 +2501,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Sets selection history.
-		 * 
+		 *
 		 * @param selectionHistory
 		 *            The selectionHistory to set.
 		 */
@@ -2673,10 +2535,11 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Adds filtered item.
-		 * 
+		 *
 		 * @param item
 		 * @param itemsFilter
 		 */
+		@Override
 		public void add(Object item, ItemsFilter itemsFilter) {
 			if (itemsFilter == filter) {
 				if (itemsFilter != null) {
@@ -2691,14 +2554,13 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Add all history items to <code>contentProvider</code>.
-		 * 
+		 *
 		 * @param itemsFilter
 		 */
 		public void addHistoryItems(ItemsFilter itemsFilter) {
 			if (this.selectionHistory != null) {
 				Object[] items = this.selectionHistory.getHistoryItems();
-				for (int i = 0; i < items.length; i++) {
-					Object item = items[i];
+				for (Object item : items) {
 					if (itemsFilter == filter) {
 						if (itemsFilter != null) {
 							if (itemsFilter.matchItem(item)) {
@@ -2723,10 +2585,10 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Removes items from history and refreshes the view.
-		 * 
+		 *
 		 * @param item
 		 *            to remove
-		 * 
+		 *
 		 * @return removed item
 		 */
 		public Object removeHistoryElement(Object item) {
@@ -2746,7 +2608,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Adds item to history and refresh view.
-		 * 
+		 *
 		 * @param item
 		 *            to add
 		 */
@@ -2777,10 +2639,10 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Sets/unsets given item as duplicate.
-		 * 
+		 *
 		 * @param item
 		 *            item to change
-		 * 
+		 *
 		 * @param isDuplicate
 		 *            duplicate flag
 		 */
@@ -2795,7 +2657,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Indicates whether given item is a duplicate.
-		 * 
+		 *
 		 * @param item
 		 *            item to check
 		 * @return <code>true</code> if item is duplicate
@@ -2806,7 +2668,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Load history from memento.
-		 * 
+		 *
 		 * @param memento
 		 *            memento from which the history will be retrieved
 		 */
@@ -2817,7 +2679,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Save history to memento.
-		 * 
+		 *
 		 * @param memento
 		 *            memento to which the history will be added
 		 */
@@ -2828,7 +2690,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Gets sorted items.
-		 * 
+		 *
 		 * @return sorted items
 		 */
 		private Object[] getSortedItems() {
@@ -2844,7 +2706,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Remember result of filtering.
-		 * 
+		 *
 		 * @param itemsFilter
 		 */
 		public void rememberResult(ItemsFilter itemsFilter) {
@@ -2858,11 +2720,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.IStructuredContentProvider#getElements(java.lang.Object)
-		 */
+		@Override
 		public Object[] getElements(Object inputElement) {
 			return lastFilteredItems.toArray();
 		}
@@ -2871,28 +2729,15 @@ public abstract class FilteredItemsSelectionDialog extends
 			return lastFilteredItems.size();
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.IContentProvider#dispose()
-		 */
+		@Override
 		public void dispose() {
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.IContentProvider#inputChanged(org.eclipse.jface.viewers.Viewer,
-		 *      java.lang.Object, java.lang.Object)
-		 */
+		@Override
 		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.ILazyContentProvider#updateElement(int)
-		 */
+		@Override
 		public void updateElement(int index) {
 
 			FilteredItemsSelectionDialog.this.list.replace((lastFilteredItems
@@ -2905,70 +2750,50 @@ public abstract class FilteredItemsSelectionDialog extends
 		 * Main method responsible for getting the filtered items and checking
 		 * for duplicates. It is based on the
 		 * {@link FilteredItemsSelectionDialog.ContentProvider#getFilteredItems(Object, IProgressMonitor)}.
-		 * 
+		 *
 		 * @param checkDuplicates
 		 *            <code>true</code> if data concerning elements
 		 *            duplication should be computed - it takes much more time
 		 *            than standard filtering
-		 * 
+		 *
 		 * @param monitor
 		 *            progress monitor
 		 */
-		public void reloadCache(boolean checkDuplicates,
-				IProgressMonitor monitor) {
-
+		public void reloadCache(boolean checkDuplicates, IProgressMonitor monitor) {
 			reset = false;
 
-			if (monitor != null) {
-				// the work is divided into two actions of the same length
-				int totalWork = checkDuplicates ? 200 : 100;
+			// the work is divided into two actions of the same length
+			int totalWork = checkDuplicates ? 200 : 100;
 
-				monitor
-						.beginTask(
-								WorkbenchMessages.FilteredItemsSelectionDialog_cacheRefreshJob,
-								totalWork);
-			}
+			SubMonitor subMonitor = SubMonitor.convert(monitor,
+					WorkbenchMessages.FilteredItemsSelectionDialog_cacheRefreshJob, totalWork);
 
 			// the TableViewer's root (the input) is treated as parent
 
-			lastFilteredItems = Arrays.asList(getFilteredItems(list.getInput(),
-					monitor != null ? new SubProgressMonitor(monitor, 100)
-							: null));
+			lastFilteredItems = Arrays.asList(getFilteredItems(list.getInput(), subMonitor.split(100)));
 
-			if (reset || (monitor != null && monitor.isCanceled())) {
-				if (monitor != null)
-					monitor.done();
+			if (reset || subMonitor.isCanceled()) {
 				return;
 			}
 
 			if (checkDuplicates) {
-				checkDuplicates(monitor);
+				checkDuplicates(subMonitor.split(100));
 			}
-			if (monitor != null)
-				monitor.done();
 		}
 
 		private void checkDuplicates(IProgressMonitor monitor) {
 			synchronized (lastFilteredItems) {
-				IProgressMonitor subMonitor = null;
-				int reportEvery = lastFilteredItems.size() / 20;
-				if (monitor != null) {
-					subMonitor = new SubProgressMonitor(monitor, 100);
-					subMonitor
-							.beginTask(
-									WorkbenchMessages.FilteredItemsSelectionDialog_cacheRefreshJob_checkDuplicates,
-									5);
-				}
-				HashMap helperMap = new HashMap();
+				SubMonitor subMonitor = SubMonitor.convert(monitor,
+						WorkbenchMessages.FilteredItemsSelectionDialog_cacheRefreshJob_checkDuplicates,
+						lastFilteredItems.size());
+				HashMap<String, Object> helperMap = new HashMap<>();
 				for (int i = 0; i < lastFilteredItems.size(); i++) {
-					if (reset
-							|| (subMonitor != null && subMonitor.isCanceled()))
+					if (reset || subMonitor.isCanceled())
 						return;
 					Object item = lastFilteredItems.get(i);
 
 					if (!(item instanceof ItemsListSeparator)) {
-						Object previousItem = helperMap.put(
-								getElementName(item), item);
+						Object previousItem = helperMap.put(getElementName(item), item);
 						if (previousItem != null) {
 							setDuplicateElement(previousItem, true);
 							setDuplicateElement(item, true);
@@ -2977,9 +2802,7 @@ public abstract class FilteredItemsSelectionDialog extends
 						}
 					}
 
-					if (subMonitor != null && reportEvery != 0
-							&& (i + 1) % reportEvery == 0)
-						subMonitor.worked(1);
+					subMonitor.worked(1);
 				}
 				helperMap.clear();
 			}
@@ -2988,7 +2811,7 @@ public abstract class FilteredItemsSelectionDialog extends
 		/**
 		 * Returns an array of items filtered using the provided
 		 * <code>ViewerFilter</code>s with a separator added.
-		 * 
+		 *
 		 * @param parent
 		 *            the parent
 		 * @param monitor
@@ -3067,8 +2890,8 @@ public abstract class FilteredItemsSelectionDialog extends
 		 * Adds a filter to this content provider. For an example usage of such
 		 * filters look at the project <code>org.eclipse.ui.ide</code>, class
 		 * <code>org.eclipse.ui.dialogs.FilteredResourcesSelectionDialog.CustomWorkingSetFilter</code>.
-		 * 
-		 * 
+		 *
+		 *
 		 * @param filter
 		 *            the filter to be added
 		 */
@@ -3080,30 +2903,6 @@ public abstract class FilteredItemsSelectionDialog extends
 			// currently filters are only added when dialog is restored
 			// if it is changed, refreshing the whole TableViewer should be
 			// added
-		}
-
-	}
-
-	/**
-	 * A content provider that does nothing.
-	 */
-	private class NullContentProvider implements IContentProvider {
-
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.IContentProvider#dispose()
-		 */
-		public void dispose() {
-		}
-
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.IContentProvider#inputChanged(org.eclipse.jface.viewers.Viewer,
-		 *      java.lang.Object, java.lang.Object)
-		 */
-		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
 		}
 
 	}
@@ -3127,7 +2926,7 @@ public abstract class FilteredItemsSelectionDialog extends
 		/**
 		 * Constructs a new instance of this class given its parent and a style
 		 * value describing its behavior and appearance.
-		 * 
+		 *
 		 * @param parent
 		 *            the parent component
 		 * @param style
@@ -3146,7 +2945,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Shows/hides the content viewer.
-		 * 
+		 *
 		 * @param visible
 		 *            if the content viewer should be visible.
 		 */
@@ -3157,12 +2956,7 @@ public abstract class FilteredItemsSelectionDialog extends
 			viewForm.getParent().layout();
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.Viewer#inputChanged(java.lang.Object,
-		 *      java.lang.Object)
-		 */
+		@Override
 		protected void inputChanged(Object input, Object oldInput) {
 			if (oldInput == null) {
 				if (input == null) {
@@ -3176,11 +2970,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.ContentViewer#handleLabelProviderChanged(org.eclipse.jface.viewers.LabelProviderChangedEvent)
-		 */
+		@Override
 		protected void handleLabelProviderChanged(
 				LabelProviderChangedEvent event) {
 			if (event != null) {
@@ -3188,30 +2978,18 @@ public abstract class FilteredItemsSelectionDialog extends
 			}
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.Viewer#getControl()
-		 */
+		@Override
 		public Control getControl() {
 			return label;
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.Viewer#getSelection()
-		 */
+		@Override
 		public ISelection getSelection() {
 			// not supported
 			return null;
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.Viewer#refresh()
-		 */
+		@Override
 		public void refresh() {
 			Object input = this.getInput();
 			if (input != null) {
@@ -3225,7 +3003,7 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		/**
 		 * Sets the given text and image to the label.
-		 * 
+		 *
 		 * @param text
 		 *            the new text or null
 		 * @param image
@@ -3239,19 +3017,14 @@ public abstract class FilteredItemsSelectionDialog extends
 			label.setImage(image);
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.Viewer#setSelection(org.eclipse.jface.viewers.ISelection,
-		 *      boolean)
-		 */
+		@Override
 		public void setSelection(ISelection selection, boolean reveal) {
 			// not supported
 		}
 
 		/**
 		 * Refreshes the label if currently chosen element is on the list.
-		 * 
+		 *
 		 * @param objs
 		 *            list of changed object
 		 */
@@ -3260,8 +3033,8 @@ public abstract class FilteredItemsSelectionDialog extends
 				return;
 			}
 			Object input = getInput();
-			for (int i = 0; i < objs.length; i++) {
-				if (objs[i].equals(input)) {
+			for (Object obj : objs) {
+				if (obj.equals(input)) {
 					refresh();
 					break;
 				}
@@ -3274,11 +3047,7 @@ public abstract class FilteredItemsSelectionDialog extends
 	 */
 	private class HistoryComparator implements Comparator {
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see java.util.Comparator#compare(java.lang.Object, java.lang.Object)
-		 */
+		@Override
 		public int compare(Object o1, Object o2) {
 			boolean h1 = isHistoryElement(o1);
 			boolean h2 = isHistoryElement(o2);
@@ -3294,14 +3063,14 @@ public abstract class FilteredItemsSelectionDialog extends
 		}
 
 	}
-	
+
 
 	/**
 	 * Get the control where the search pattern is entered. Any filtering should
 	 * be done using an {@link ItemsFilter}. This control should only be
 	 * accessed for listeners that wish to handle events that do not affect
 	 * filtering such as custom traversal.
-	 * 
+	 *
 	 * @return Control or <code>null</code> if the pattern control has not
 	 *         been created.
 	 */
