@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2010 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -24,7 +24,7 @@ import org.eclipse.ui.actions.RetargetAction;
 
 /**
  * An <code>EditorMenuManager</code> is used to sort the contributions
- * made by an editor so that they always appear after the action sets.  
+ * made by an editor so that they always appear after the action sets.
  */
 public class EditorMenuManager extends SubMenuManager {
     private ArrayList wrappers;
@@ -38,9 +38,7 @@ public class EditorMenuManager extends SubMenuManager {
          */
         public void updateEnabledAllowed() {
             // update the items in the map
-            IContributionItem[] items = EditorMenuManager.super.getItems();
-            for (int i = 0; i < items.length; i++) {
-                IContributionItem item = items[i];
+			for (IContributionItem item : EditorMenuManager.super.getItems()) {
                 item.update(IContributionManagerOverrides.P_ENABLED);
             }
             // update the wrapped menus
@@ -53,7 +51,8 @@ public class EditorMenuManager extends SubMenuManager {
             }
         }
 
-        public Boolean getEnabled(IContributionItem item) {
+        @Override
+		public Boolean getEnabled(IContributionItem item) {
             if (((item instanceof ActionContributionItem) && (((ActionContributionItem) item)
                     .getAction() instanceof RetargetAction))
                     || enabledAllowed) {
@@ -63,29 +62,30 @@ public class EditorMenuManager extends SubMenuManager {
 			}
         }
 
-        public Integer getAccelerator(IContributionItem item) {
+        @Override
+		public Integer getAccelerator(IContributionItem item) {
             if (getEnabled(item) == null) {
 				return getParentMenuManager().getOverrides().getAccelerator(
                         item);
 			} else {
 				// no acclerator if the item is disabled
-                return new Integer(0);
+				return Integer.valueOf(0);
 			}
         }
 
-        public String getAcceleratorText(IContributionItem item) {
+        @Override
+		public String getAcceleratorText(IContributionItem item) {
             return getParentMenuManager().getOverrides().getAcceleratorText(
                     item);
         }
 
-        public String getText(IContributionItem item) {
+        @Override
+		public String getText(IContributionItem item) {
             return getParentMenuManager().getOverrides().getText(item);
         }
-        
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.action.IContributionManagerOverrides#getVisible(org.eclipse.jface.action.IContributionItem)
-         */
-        public Boolean getVisible(IContributionItem item) {
+
+        @Override
+		public Boolean getVisible(IContributionItem item) {
         	return getParentMenuManager().getOverrides().getVisible(item);
         }
     }
@@ -99,36 +99,25 @@ public class EditorMenuManager extends SubMenuManager {
         super(mgr);
     }
 
-    /* (non-Javadoc)
-     * Method declared on IContributionManager.
-     */
-    public IContributionItem[] getItems() {
+    @Override
+	public IContributionItem[] getItems() {
         return getParentMenuManager().getItems();
     }
 
-    /* (non-Javadoc)
-     * Method declared on IContributionManager.
-     */
-    public IContributionManagerOverrides getOverrides() {
+    @Override
+	public IContributionManagerOverrides getOverrides() {
         return overrides;
     }
 
-    /* (non-Javadoc)
-     * Method declared on IContributionManager.
-     * Inserts the new item after any action set contributions which may
-     * exist within the toolbar to ensure a consistent order for actions.
-     */
-    public void prependToGroup(String groupName, IContributionItem item) {
+	/*
+	 * Inserts the new item after any action set contributions which may exist
+	 * within the toolbar to ensure a consistent order for actions.
+	 */
+    @Override
+	public void prependToGroup(String groupName, IContributionItem item) {
         insertAfter(groupName, item);
     }
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see
-	 * org.eclipse.jface.action.SubContributionManager#appendToGroup(java.lang
-	 * .String, org.eclipse.jface.action.IContributionItem)
-	 */
 	@Override
 	public void appendToGroup(String groupName, IContributionItem item) {
 		try {
@@ -156,7 +145,7 @@ public class EditorMenuManager extends SubMenuManager {
     public void setVisible(boolean visible, boolean forceVisibility) {
         if (visible) {
             if (forceVisibility) {
-                // Make the items visible 
+                // Make the items visible
                 if (!enabledAllowed) {
 					setEnabledAllowed(true);
 				}
@@ -193,10 +182,8 @@ public class EditorMenuManager extends SubMenuManager {
         overrides.updateEnabledAllowed();
     }
 
-    /* (non-Javadoc)
-     * Method declared on SubMenuManager.
-     */
-    protected SubMenuManager wrapMenu(IMenuManager menu) {
+    @Override
+	protected SubMenuManager wrapMenu(IMenuManager menu) {
         if (wrappers == null) {
 			wrappers = new ArrayList();
 		}
@@ -212,9 +199,8 @@ public class EditorMenuManager extends SubMenuManager {
     }
 
     protected void getAllContributedActions(HashSet set) {
-        IContributionItem[] items = super.getItems();
-        for (int i = 0; i < items.length; i++) {
-			getAllContributedActions(set, items[i]);
+		for (IContributionItem item : super.getItems()) {
+			getAllContributedActions(set, item);
 		}
         if (wrappers == null) {
 			return;
@@ -227,9 +213,8 @@ public class EditorMenuManager extends SubMenuManager {
 
     protected void getAllContributedActions(HashSet set, IContributionItem item) {
         if (item instanceof MenuManager) {
-            IContributionItem subItems[] = ((MenuManager) item).getItems();
-            for (int j = 0; j < subItems.length; j++) {
-				getAllContributedActions(set, subItems[j]);
+			for (IContributionItem subItem : ((MenuManager) item).getItems()) {
+				getAllContributedActions(set, subItem);
 			}
         } else if (item instanceof ActionContributionItem) {
             set.add(((ActionContributionItem) item).getAction());
