@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2009 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -10,17 +10,16 @@
  *******************************************************************************/
 package org.eclipse.ui.internal;
 
+import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Iterator;
-
 import org.eclipse.jface.action.IMenuCreator;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.events.MenuAdapter;
 import org.eclipse.swt.events.MenuEvent;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.widgets.Control;
 import org.eclipse.swt.widgets.Menu;
 import org.eclipse.swt.widgets.MenuItem;
@@ -30,64 +29,68 @@ import org.eclipse.ui.IWorkbenchPage;
 import org.eclipse.ui.IWorkbenchWindow;
 
 /**
- * The <code>NavigationHistoryAction</code> moves navigation history 
+ * The <code>NavigationHistoryAction</code> moves navigation history
  * back and forward.
  */
 public class NavigationHistoryAction extends PageEventAction {
 
 	private boolean recreateMenu;
-	
+
 	private boolean forward;
-    
+
     private Menu historyMenu;
 
     private int MAX_HISTORY_LENGTH = 9;
 
     private class MenuCreator implements IMenuCreator {
-        public void dispose() {
+        @Override
+		public void dispose() {
         }
 
-        public Menu getMenu(Menu parent) {
+        @Override
+		public Menu getMenu(Menu parent) {
         	setMenu(new Menu(parent));
         	fillMenu(historyMenu);
             initMenu();
             return historyMenu;
         }
 
-        public Menu getMenu(Control parent) {
+        @Override
+		public Menu getMenu(Control parent) {
         	setMenu(new Menu(parent));
         	fillMenu(historyMenu);
             initMenu();
             return historyMenu;
         }
-        
+
     }
 
     private void setMenu(Menu menu) {
     	historyMenu = menu;
     }
-    
+
     private void initMenu() {
     	historyMenu.addMenuListener(new MenuAdapter() {
-    		public void menuShown(MenuEvent e) {
+    		@Override
+			public void menuShown(MenuEvent e) {
     			if (recreateMenu) {
 					Menu m = (Menu) e.widget;
 					MenuItem[] items = m.getItems();
-					for (int i = 0; i < items.length; i++) {
-						items[i].dispose();
+					for (MenuItem item : items) {
+						item.dispose();
 					}
 					fillMenu(m);
 				}
 			}
     	});
     }
-    
+
     private void fillMenu(Menu menu) {
     	IWorkbenchPage page = getWorkbenchWindow().getActivePage();
     	if (page == null) {
     		return;
     	}
-    	
+
     	final NavigationHistory history = (NavigationHistory) getWorkbenchWindow()
     	.getActivePage().getNavigationHistory();
     	NavigationHistoryEntry[] entries;
@@ -110,23 +113,19 @@ public class NavigationHistoryAction extends PageEventAction {
     			MenuItem item = new MenuItem(menu, SWT.NONE);
     			item.setData(entries[i]);
     			if (entriesCount[i] > 1) {
-    				text = NLS.bind(WorkbenchMessages.NavigationHistoryAction_locations,text, new Integer(entriesCount[i]));
+					text = NLS.bind(WorkbenchMessages.NavigationHistoryAction_locations, text,
+							Integer.valueOf(entriesCount[i]));
     			}
     			item.setText(text);
-    			item.addSelectionListener(new SelectionAdapter() {
-    				public void widgetSelected(SelectionEvent e) {
-    					history
-    					.shiftCurrentEntry(
-    							(NavigationHistoryEntry) e.widget
-    							.getData(), forward);
-    				}
-    			});
+				item.addSelectionListener(widgetSelectedAdapter(
+						e -> history.shiftCurrentEntry((NavigationHistoryEntry) e.widget.getData(), forward)));
     		}
     	}
     	recreateMenu = false;
     }
-    
-    public void dispose() {
+
+    @Override
+	public void dispose() {
     	super.dispose();
     	if (historyMenu != null) {
     		for (int i = 0; i < historyMenu.getItemCount(); i++) {
@@ -140,7 +139,7 @@ public class NavigationHistoryAction extends PageEventAction {
 
     /**
 	 * Create a new instance of <code>NavigationHistoryAction</code>
-	 * 
+	 *
 	 * @param window
 	 *            the workbench window this action applies to
 	 * @param forward
@@ -161,7 +160,7 @@ public class NavigationHistoryAction extends PageEventAction {
                     .getImageDescriptor(ISharedImages.IMG_TOOL_FORWARD_DISABLED));
             setActionDefinitionId(IWorkbenchCommandConstants.NAVIGATE_FORWARD_HISTORY);
         } else {
-            setText(WorkbenchMessages.NavigationHistoryAction_backward_text); 
+            setText(WorkbenchMessages.NavigationHistoryAction_backward_text);
             setToolTipText(WorkbenchMessages.NavigationHistoryAction_backward_toolTip);
             // @issue missing action id
             window.getWorkbench().getHelpSystem().setHelp(this,
@@ -172,16 +171,14 @@ public class NavigationHistoryAction extends PageEventAction {
                     .getImageDescriptor(ISharedImages.IMG_TOOL_BACK_DISABLED));
             setActionDefinitionId(IWorkbenchCommandConstants.NAVIGATE_BACKWARD_HISTORY);
         }
-        // WorkbenchHelp.setHelp(this, IHelpContextIds.CLOSE_ALL_PAGES_ACTION);
+        // PlatformUI.getWorkbench().getHelpSystem().setHelp(this, IHelpContextIds.CLOSE_ALL_PAGES_ACTION);
         setEnabled(false);
         this.forward = forward;
         setMenuCreator(new MenuCreator());
     }
 
-    /* (non-Javadoc)
-     * Method declared on PageEventAction.
-     */
-    public void pageClosed(IWorkbenchPage page) {
+    @Override
+	public void pageClosed(IWorkbenchPage page) {
         super.pageClosed(page);
         setEnabled(false);
     }
@@ -211,10 +208,8 @@ public class NavigationHistoryAction extends PageEventAction {
         return (NavigationHistoryEntry[]) allEntries.toArray(entries);
     }
 
-    /* (non-Javadoc)
-     * Method declared on PageEventAction.
-     */
-    public void pageActivated(IWorkbenchPage page) {
+    @Override
+	public void pageActivated(IWorkbenchPage page) {
         super.pageActivated(page);
         NavigationHistory nh = (NavigationHistory) page.getNavigationHistory();
         if (forward) {
@@ -224,10 +219,8 @@ public class NavigationHistoryAction extends PageEventAction {
         }
     }
 
-    /* (non-Javadoc)
-     * Method declared on IAction.
-     */
-    public void run() {
+    @Override
+	public void run() {
         if (getWorkbenchWindow() == null) {
             // action has been disposed
             return;
@@ -260,7 +253,7 @@ public class NavigationHistoryAction extends PageEventAction {
             entries = history.getForwardEntries();
             if (entries.length > 0) {
                 NavigationHistoryEntry entry = entries[0];
-                String text = NLS.bind(WorkbenchMessages.NavigationHistoryAction_forward_toolTipName, entry.getHistoryText() ); 
+                String text = NLS.bind(WorkbenchMessages.NavigationHistoryAction_forward_toolTipName, entry.getHistoryText() );
                 setToolTipText(text);
             } else {
                 setToolTipText(WorkbenchMessages.NavigationHistoryAction_forward_toolTip);
@@ -270,10 +263,10 @@ public class NavigationHistoryAction extends PageEventAction {
             entries = history.getBackwardEntries();
             if (entries.length > 0) {
                 NavigationHistoryEntry entry = entries[0];
-                String text = NLS.bind(WorkbenchMessages.NavigationHistoryAction_backward_toolTipName, entry.getHistoryText() ); 
+                String text = NLS.bind(WorkbenchMessages.NavigationHistoryAction_backward_toolTipName, entry.getHistoryText() );
                 setToolTipText(text);
             } else {
-                setToolTipText(WorkbenchMessages.NavigationHistoryAction_backward_toolTip); 
+                setToolTipText(WorkbenchMessages.NavigationHistoryAction_backward_toolTip);
             }
         }
         recreateMenu = true;
