@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2010 IBM Corporation and others.
+ * Copyright (c) 2009, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,12 +7,17 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
+ *     Patrik Suzzi <psuzzi@gmail.com> - Bug 473973
+ *     Friederike Schertel <friederike@schertel.org> - Bug 478336
  ******************************************************************************/
 package org.eclipse.ui.internal.statushandlers;
+
+import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
 
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.Map;
+import org.eclipse.core.runtime.Adapters;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.jobs.Job;
 import org.eclipse.jface.action.IAction;
@@ -24,11 +29,8 @@ import org.eclipse.jface.dialogs.MessageDialogWithToggle;
 import org.eclipse.jface.dialogs.TrayDialog;
 import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.viewers.IContentProvider;
-import org.eclipse.jface.viewers.ISelection;
-import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredContentProvider;
 import org.eclipse.jface.viewers.IStructuredSelection;
-import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.jface.viewers.TableViewer;
 import org.eclipse.jface.viewers.Viewer;
@@ -36,8 +38,6 @@ import org.eclipse.jface.window.Window;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.events.MouseEvent;
 import org.eclipse.swt.events.MouseListener;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.graphics.Image;
 import org.eclipse.swt.graphics.Point;
 import org.eclipse.swt.graphics.Rectangle;
@@ -46,10 +46,8 @@ import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.Button;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Control;
-import org.eclipse.swt.widgets.Event;
 import org.eclipse.swt.widgets.Label;
 import org.eclipse.swt.widgets.Link;
-import org.eclipse.swt.widgets.Listener;
 import org.eclipse.swt.widgets.Shell;
 import org.eclipse.ui.internal.Workbench;
 import org.eclipse.ui.internal.WorkbenchMessages;
@@ -66,7 +64,7 @@ import org.eclipse.ui.views.IViewDescriptor;
  * Parent window actually does not use its Shell to build dialog on. The
  * window passes the shell to the InternalDialog, and it can do switching
  * modality and recreate the window silently.
- * 
+ *
  * @since 3.4
  */
 public class InternalDialog extends TrayDialog {
@@ -153,15 +151,13 @@ public class InternalDialog extends TrayDialog {
 	public InternalDialog(final Map dialogState, boolean modal) {
 		super(ProgressManagerUtil.getDefaultParent());
 		this.dialogState = dialogState;
-		supportTray = new SupportTray(dialogState, new Listener() {
-			public void handleEvent(Event event) {
-				dialogState.put(IStatusDialogConstants.TRAY_OPENED,
-						Boolean.FALSE);
-				// close the tray
-				closeTray();
-				// set focus back to shell
-				getShell().setFocus();
-			}
+		supportTray = new SupportTray(dialogState, event -> {
+			dialogState.put(IStatusDialogConstants.TRAY_OPENED,
+					Boolean.FALSE);
+			// close the tray
+			closeTray();
+			// set focus back to shell
+			getShell().setFocus();
 		});
 		detailsManager = new DetailsAreaManager(dialogState);
 		setShellStyle(SWT.RESIZE | SWT.MAX | SWT.MIN | getShellStyle());
@@ -172,6 +168,7 @@ public class InternalDialog extends TrayDialog {
 		}
 	}
 
+	@Override
 	protected void buttonPressed(int id) {
 		if (id == GOTO_ACTION_ID) {
 			IAction gotoAction = getGotoAction();
@@ -184,24 +181,23 @@ public class InternalDialog extends TrayDialog {
 		}
 		if (id == IDialogConstants.DETAILS_ID) {
 			// was the details button pressed?
-			dialogState.put(IStatusDialogConstants.DETAILS_OPENED, new Boolean(
+			dialogState.put(IStatusDialogConstants.DETAILS_OPENED, Boolean.valueOf(
 					toggleDetailsArea()));
 		} else {
 			super.buttonPressed(id);
 		}
 	}
 
-	/*
-	 * (non-Javadoc) Method declared in Window.
-	 */
+	@Override
 	final protected void configureShell(Shell shell) {
 		super.configureShell(shell);
 		shell.setText(getString(IStatusDialogConstants.TITLE));
 	}
-	
+
 	/**
-	 * Status dialog button should be aligned SWT.END. 
+	 * Status dialog button should be aligned SWT.END.
 	 */
+	@Override
 	protected void setButtonLayoutData(Button button) {
 		GridData data = new GridData(SWT.END, SWT.CENTER, false, false);
 		int widthHint = convertHorizontalDLUsToPixels(IDialogConstants.BUTTON_WIDTH);
@@ -210,11 +206,7 @@ public class InternalDialog extends TrayDialog {
 		button.setLayoutData(data);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.dialogs.Dialog#createDialogArea(org.eclipse.swt.widgets.Composite)
-	 */
+	@Override
 	protected Control createDialogArea(Composite parent) {
 		createTitleArea(parent);
 		createListArea(parent);
@@ -223,18 +215,14 @@ public class InternalDialog extends TrayDialog {
 		return parent;
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.dialogs.Dialog#isResizable()
-	 */
+	@Override
 	protected boolean isResizable() {
 		return true;
 	}
 
 	/**
 	 * Creates title area.
-	 * 
+	 *
 	 * @param parent
 	 *            A composite on which the title area should be created.
 	 */
@@ -274,7 +262,7 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * Create an area which allows the user to view the status if only one
 	 * is created or to select one of reported statuses when there are many.
-	 * 
+	 *
 	 * @param parent
 	 *            the parent composite on which all components should be
 	 *            placed.
@@ -294,9 +282,9 @@ public class InternalDialog extends TrayDialog {
 
 	/**
 	 * This function checks if the dialog is modal.
-	 * 
+	 *
 	 * @return true if the dialog is modal, false otherwise
-	 * 
+	 *
 	 */
 	public boolean isModal() {
 		return ((getShellStyle() & SWT.APPLICATION_MODAL) == SWT.APPLICATION_MODAL);
@@ -317,11 +305,7 @@ public class InternalDialog extends TrayDialog {
 		this.supportTray = supportTray;
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.window.Window#open()
-	 */
+	@Override
 	public int open() {
 		boolean modalitySwitch = getBooleanValue(IStatusDialogConstants.MODALITY_SWITCH);
 		int result = super.open();
@@ -341,9 +325,7 @@ public class InternalDialog extends TrayDialog {
 		return result;
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.jface.dialogs.TrayDialog#closeTray()
-	 */
+	@Override
 	public void closeTray() throws IllegalStateException {
 		if (getTray() != null) {
 			super.closeTray();
@@ -357,7 +339,7 @@ public class InternalDialog extends TrayDialog {
 					&& !getBooleanValue(IStatusDialogConstants.TRAY_OPENED));
 		}
 	}
-	
+
 	/**
 	 * Method which should be invoked when new errors become available for
 	 * display.
@@ -381,6 +363,9 @@ public class InternalDialog extends TrayDialog {
 	}
 
 	void refreshDialogSize() {
+		if (dialogArea == null || dialogArea.isDisposed()) {
+			return;
+		}
 		Point newSize = getShell().computeSize(SWT.DEFAULT, SWT.DEFAULT);
 		getShell().setSize(newSize);
 	}
@@ -414,7 +399,7 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * Toggles the unfolding of the details area. This is triggered by the
 	 * user pressing the details button.
-	 * 
+	 *
 	 */
 	private boolean toggleDetailsArea() {
 		boolean opened = false;
@@ -464,6 +449,7 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * This method should initialize the dialog bounds.
 	 */
+	@Override
 	protected void initializeBounds() {
 		super.initializeBounds();
 		refreshDialogSize();
@@ -473,15 +459,8 @@ public class InternalDialog extends TrayDialog {
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see
-	 * org.eclipse.jface.dialogs.Dialog#getInitialLocation(org.eclipse.swt.graphics
-	 * .Point)
-	 */
+	@Override
 	public Point getInitialLocation(Point initialSize) {
-		// TODO Auto-generated method stub
 		return super.getInitialLocation(initialSize);
 	}
 
@@ -502,7 +481,7 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * This method creates display area for {@link StatusAdapter}s when more
 	 * is available.
-	 * 
+	 *
 	 * @param parent
 	 *            A parent composite on which all components should be
 	 *            placed.
@@ -526,20 +505,18 @@ public class InternalDialog extends TrayDialog {
 		control.setLayoutData(data);
 		initContentProvider();
 		initLabelProvider();
-		statusListViewer.addPostSelectionChangedListener(new ISelectionChangedListener() {
-			public void selectionChanged(SelectionChangedEvent event) {
-				handleSelectionChange();
-				if ((getTray() == null) && getBooleanValue(IStatusDialogConstants.TRAY_OPENED)
-						&& providesSupport()) {
-					silentTrayOpen();
-					return;
-				}
-				if ((getTray() != null) && !providesSupport()) {
-					silentTrayClose();
-					return;
-				}
-				supportTray.selectionChanged(event);
+		statusListViewer.addPostSelectionChangedListener(event -> {
+			handleSelectionChange();
+			if ((getTray() == null) && getBooleanValue(IStatusDialogConstants.TRAY_OPENED)
+					&& providesSupport()) {
+				silentTrayOpen();
+				return;
 			}
+			if ((getTray() != null) && !providesSupport()) {
+				silentTrayClose();
+				return;
+			}
+			supportTray.selectionChanged(event);
 		});
 		Dialog.applyDialogFont(parent);
 	}
@@ -604,6 +581,7 @@ public class InternalDialog extends TrayDialog {
 	 * This method creates button bar that is available on the bottom of the
 	 * dialog.
 	 */
+	@Override
 	protected Control createButtonBar(Composite parent) {
 		Composite composite = new Composite(parent, SWT.NONE);
 		GridLayout layout = new GridLayout();
@@ -625,6 +603,7 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * This method creates buttons that are placed on button bar.
 	 */
+	@Override
 	protected void createButtonsForButtonBar(Composite parent) {
 		IAction gotoAction = getGotoAction();
 		String text = null;
@@ -647,9 +626,9 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * This method creates additional display area for {@link StatusAdapter}
 	 * when only one is available.
-	 * 
+	 *
 	 * It creates one label on a composite currently for secondary message.
-	 * 
+	 *
 	 * @param parent
 	 *            A parent composite on which all components should be
 	 *            placed.
@@ -677,13 +656,16 @@ public class InternalDialog extends TrayDialog {
 				.getColumnText(getCurrentStatusAdapter(), 0));
 
 		singleStatusLabel.addMouseListener(new MouseListener() {
+			@Override
 			public void mouseDoubleClick(MouseEvent e) {
 			}
 
+			@Override
 			public void mouseDown(MouseEvent e) {
 				showDetailsArea();
 			}
 
+			@Override
 			public void mouseUp(MouseEvent e) {
 			}
 		});
@@ -693,6 +675,7 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * This method closes the dialog.
 	 */
+	@Override
 	public boolean close() {
 		boolean modalitySwitch = getBooleanValue(IStatusDialogConstants.MODALITY_SWITCH);
 		if (detailsManager.isOpen()) {
@@ -716,7 +699,7 @@ public class InternalDialog extends TrayDialog {
 
 	/**
 	 * Hide the button if hide is <code>true</code>.
-	 * 
+	 *
 	 * @param button
 	 * @param hide
 	 */
@@ -803,6 +786,7 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * Opens the dialog tray (support area at the right side of the dialog)
 	 */
+	@Override
 	public void openTray(DialogTray tray) throws IllegalStateException,
 			UnsupportedOperationException {
 		if (launchTrayLink != null && !launchTrayLink.isDisposed()) {
@@ -851,35 +835,18 @@ public class InternalDialog extends TrayDialog {
 	 */
 	private void initContentProvider() {
 		IContentProvider provider = new IStructuredContentProvider() {
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see org.eclipse.jface.viewers.IContentProvider#dispose()
-			 */
+			@Override
 			public void dispose() {
 				// Nothing of interest here
 			}
 
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see
-			 * org.eclipse.jface.viewers.IStructuredContentProvider#getElements
-			 * (java.lang.Object)
-			 */
+			@Override
 			public Object[] getElements(Object inputElement) {
 				return ((Collection) dialogState
 						.get(IStatusDialogConstants.STATUS_ADAPTERS)).toArray();
 			}
 
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see
-			 * org.eclipse.jface.viewers.IContentProvider#inputChanged(org
-			 * .eclipse.jface.viewers.Viewer, java.lang.Object,
-			 * java.lang.Object)
-			 */
+			@Override
 			public void inputChanged(Viewer viewer, Object oldInput,
 					Object newInput) {
 				if (newInput != null) {
@@ -902,7 +869,7 @@ public class InternalDialog extends TrayDialog {
 	 * <code>GridLayout</code> and the number of columns in this layout is
 	 * incremented. Subclasses may override.
 	 * </p>
-	 * 
+	 *
 	 * @param parent
 	 *            A parent composite on which all components should be
 	 *            placed.
@@ -913,6 +880,7 @@ public class InternalDialog extends TrayDialog {
 
 			// the composite should be as small as possible when there is no
 			// additional controls on it
+			@Override
 			public Point computeSize(int wHint, int hHint, boolean changed) {
 				Point newSize = super.computeSize(wHint, hHint, changed);
 				if (getChildren().length == 0) {
@@ -952,28 +920,20 @@ public class InternalDialog extends TrayDialog {
 				.setText(WorkbenchMessages.WorkbenchStatusDialog_SupportHyperlink);
 		link
 				.setToolTipText(WorkbenchMessages.WorkbenchStatusDialog_SupportTooltip);
-		link.addSelectionListener(new SelectionAdapter() {
-			public void widgetSelected(SelectionEvent e) {
-				openTray();
-			}
-		});
+		link.addSelectionListener(widgetSelectedAdapter(e -> openTray()));
 		Dialog.applyDialogFont(link);
 		return link;
 	}
 
 	private Link createShowErrorLogLink() {
 		Link link = new Link(linkComposite, SWT.NONE);
-		link.addSelectionListener(new SelectionAdapter() {
-			public void widgetSelected(SelectionEvent e) {
-				try {
-					Workbench.getInstance().getActiveWorkbenchWindow()
-							.getActivePage().showView(LOG_VIEW_ID);
-				} catch (CoreException ce) {
-					StatusManager.getManager().handle(ce,
-							WorkbenchPlugin.PI_WORKBENCH);
-				}
+		link.addSelectionListener(widgetSelectedAdapter(e -> {
+			try {
+				Workbench.getInstance().getActiveWorkbenchWindow().getActivePage().showView(LOG_VIEW_ID);
+			} catch (CoreException ce) {
+				StatusManager.getManager().handle(ce, WorkbenchPlugin.PI_WORKBENCH);
 			}
-		});
+		}));
 		link.setText(WorkbenchMessages.ErrorLogUtil_ShowErrorLogHyperlink);
 		link
 				.setToolTipText(WorkbenchMessages.ErrorLogUtil_ShowErrorLogTooltip);
@@ -990,14 +950,14 @@ public class InternalDialog extends TrayDialog {
 
 	/**
 	 * Returns {@link IAction} associated with selected StatusAdapter.
-	 * 
+	 *
 	 * @return {@link IAction} that is set as {@link StatusAdapter} property
 	 *         with Job.class key.
 	 */
 	private IAction getGotoAction() {
 		Object property = null;
 
-		Job job = (Job) (getCurrentStatusAdapter().getAdapter(Job.class));
+		Job job = Adapters.adapt(getCurrentStatusAdapter(), Job.class);
 		if (job != null) {
 			property = job.getProperty(IProgressConstants.ACTION_PROPERTY);
 		}
@@ -1011,17 +971,13 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * Get the single selection. Return null if the selection is not just
 	 * one element.
-	 * 
+	 *
 	 * @return StatusAdapter or <code>null</code>.
 	 */
 	private StatusAdapter getSingleSelection() {
-		ISelection rawSelection = statusListViewer.getSelection();
-		if (rawSelection != null
-				&& rawSelection instanceof IStructuredSelection) {
-			IStructuredSelection selection = (IStructuredSelection) rawSelection;
-			if (selection.size() == 1) {
-				return (StatusAdapter) selection.getFirstElement();
-			}
+		IStructuredSelection selection = statusListViewer.getStructuredSelection();
+		if (selection.size() == 1) {
+			return (StatusAdapter) selection.getFirstElement();
 		}
 		return null;
 	}
