@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2011 IBM Corporation and others.
+ * Copyright (c) 2003, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,8 +7,16 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
+ *     Cornel Izbasa <cizbasa@info.uvt.ro> - Bug 436247
+ *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 440136, 472654
+ *     Robert Roth <robert.roth.off@gmail.com> - Bugs 274005, 456291
+ *     Mickael Istria (Red Hat Inc.) - Theme and fontregistry rather than pref
+ *     Patrik Suzzi <psuzzi@gmail.com> - Bug 489250
  *******************************************************************************/
 package org.eclipse.ui.internal.themes;
+
+import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
+import static org.eclipse.ui.internal.themes.WorkbenchThemeManager.EMPTY_COLOR_VALUE;
 
 import com.ibm.icu.text.MessageFormat;
 import java.util.ArrayList;
@@ -22,22 +30,21 @@ import java.util.ResourceBundle;
 import java.util.Set;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IStatus;
+import org.eclipse.e4.core.services.events.IEventBroker;
+import org.eclipse.e4.ui.css.swt.theme.IThemeEngine;
 import org.eclipse.jface.preference.PreferenceConverter;
 import org.eclipse.jface.preference.PreferencePage;
 import org.eclipse.jface.resource.JFaceResources;
 import org.eclipse.jface.resource.StringConverter;
 import org.eclipse.jface.util.IPropertyChangeListener;
 import org.eclipse.jface.util.PropertyChangeEvent;
-import org.eclipse.jface.viewers.DoubleClickEvent;
-import org.eclipse.jface.viewers.IDoubleClickListener;
+import org.eclipse.jface.viewers.IColorProvider;
 import org.eclipse.jface.viewers.IFontProvider;
 import org.eclipse.jface.viewers.ISelection;
-import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.viewers.ITreeContentProvider;
 import org.eclipse.jface.viewers.LabelProvider;
 import org.eclipse.jface.viewers.LabelProviderChangedEvent;
-import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.jface.viewers.TreeViewer;
 import org.eclipse.jface.viewers.Viewer;
@@ -45,12 +52,6 @@ import org.eclipse.jface.viewers.ViewerComparator;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.custom.SashForm;
 import org.eclipse.swt.custom.StackLayout;
-import org.eclipse.swt.events.DisposeEvent;
-import org.eclipse.swt.events.DisposeListener;
-import org.eclipse.swt.events.PaintEvent;
-import org.eclipse.swt.events.PaintListener;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.Font;
 import org.eclipse.swt.graphics.FontData;
@@ -83,20 +84,21 @@ import org.eclipse.ui.internal.WorkbenchMessages;
 import org.eclipse.ui.internal.WorkbenchPlugin;
 import org.eclipse.ui.internal.misc.StatusUtil;
 import org.eclipse.ui.internal.util.PrefUtil;
-import org.eclipse.ui.internal.util.Util;
 import org.eclipse.ui.themes.ITheme;
 import org.eclipse.ui.themes.IThemeManager;
 import org.eclipse.ui.themes.IThemePreview;
+import org.osgi.service.event.Event;
+import org.osgi.service.event.EventHandler;
 
 
 /**
  * Preference page for management of system colors, gradients and fonts.
- * 
+ *
  * @since 3.0
  */
 public final class ColorsAndFontsPreferencePage extends PreferencePage
         implements IWorkbenchPreferencePage {
-	
+
 	private static final String SELECTED_ELEMENT_PREF = "ColorsAndFontsPreferencePage.selectedElement"; //$NON-NLS-1$
 	/**
 	 * The preference that stores the expanded state.
@@ -106,30 +108,30 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	 * The token that separates expanded elements in EXPANDED_ELEMENTS_PREF.
 	 */
 	private static final String EXPANDED_ELEMENTS_TOKEN = "\t"; //$NON-NLS-1$
-	
+
 	/**
      * Marks category tokens in EXPANDED_ELEMENTS_PREF and SELECTED_ELEMENT_PREF.
      */
 	private static final char MARKER_CATEGORY = 'T';
-	
+
 	/**
 	 * Marks color tokens in EXPANDED_ELEMENTS_PREF and SELECTED_ELEMENT_PREF.
 	 */
 	private static final char MARKER_COLOR = 'C';
-	
+
 	/**
 	 * Marks font tokens in EXPANDED_ELEMENTS_PREF and SELECTED_ELEMENT_PREF.
 	 */
 	private static final char MARKER_FONT = 'F';
-			
+
+	private static final int DEFINITION_NOT_AVAIL_COLOR = SWT.COLOR_WIDGET_LIGHT_SHADOW;
+
     private class ThemeContentProvider implements ITreeContentProvider {
 
         private IThemeRegistry registry;
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.ITreeContentProvider#getChildren(java.lang.Object)
-         */
-        public Object[] getChildren(Object parentElement) {
+        @Override
+		public Object[] getChildren(Object parentElement) {
             if (parentElement instanceof ThemeElementCategory) {
                 String categoryId = ((ThemeElementCategory) parentElement)
                         .getId();
@@ -151,14 +153,12 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 				defs = registry.getFonts();
 			}
 
-			for (int i = 0; i < defs.length; i++) {
-				if (id.equals(defs[i].getDefaultsTo())
+			for (IHierarchalThemeElementDefinition elementDefinition : defs) {
+				if (id.equals(elementDefinition.getDefaultsTo())
 						&& ColorsAndFontsPreferencePage.equals(
-								((ICategorizedThemeElementDefinition) def)
-										.getCategoryId(),
-								((ICategorizedThemeElementDefinition) defs[i])
-										.getCategoryId())) {
-					list.add(defs[i]);
+								((ICategorizedThemeElementDefinition) def).getCategoryId(),
+								((ICategorizedThemeElementDefinition) elementDefinition).getCategoryId())) {
+					list.add(elementDefinition);
 				}
 			}
 			return list.toArray();
@@ -168,15 +168,11 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             ArrayList list = new ArrayList();
 
             if (categoryId != null) {
-                ThemeElementCategory[] categories = registry.getCategories();
-                for (int i = 0; i < categories.length; i++) {
-                    if (categoryId.equals(categories[i].getParentId())) {
-                        Set bindings = themeRegistry
-                                .getPresentationsBindingsFor(categories[i]);
-                        if (bindings == null
-                                || bindings.contains(workbench
-                                        .getPresentationId())) {
-							list.add(categories[i]);
+				for (ThemeElementCategory category : registry.getCategories()) {
+					if (categoryId.equals(category.getParentId())) {
+						Set bindings = themeRegistry.getPresentationsBindingsFor(category);
+						if (bindings == null) {
+							list.add(category);
 						}
                     }
                 }
@@ -224,10 +220,8 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         private boolean parentIsInSameCategory(ColorDefinition definition) {
             String defaultsTo = definition.getDefaultsTo();
-            ColorDefinition[] defs = registry.getColors();
-            for (int i = 0; i < defs.length; i++) {
-                if (defs[i].getId().equals(defaultsTo)
-                        && ColorsAndFontsPreferencePage.equals(defs[i]
+			for (ColorDefinition colorDef : registry.getColors()) {
+				if (colorDef.getId().equals(defaultsTo) && ColorsAndFontsPreferencePage.equals(colorDef
                                 .getCategoryId(), definition.getCategoryId())) {
 					return true;
 				}
@@ -237,10 +231,8 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         private boolean parentIsInSameCategory(FontDefinition definition) {
             String defaultsTo = definition.getDefaultsTo();
-            FontDefinition[] defs = registry.getFonts();
-            for (int i = 0; i < defs.length; i++) {
-                if (defs[i].getId().equals(defaultsTo)
-                        && ColorsAndFontsPreferencePage.equals(defs[i]
+			for (FontDefinition fontDef : registry.getFonts()) {
+				if (fontDef.getId().equals(defaultsTo) && ColorsAndFontsPreferencePage.equals(fontDef
                                 .getCategoryId(), definition.getCategoryId())) {
 					return true;
 				}
@@ -248,10 +240,8 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             return false;
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.ITreeContentProvider#getParent(java.lang.Object)
-         */
-        public Object getParent(Object element) {
+        @Override
+		public Object getParent(Object element) {
 			if (element instanceof ThemeElementCategory)
 				return registry;
 
@@ -280,10 +270,8 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			return null;
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.ITreeContentProvider#hasChildren(java.lang.Object)
-         */
-        public boolean hasChildren(Object element) {
+        @Override
+		public boolean hasChildren(Object element) {
             if (element instanceof ThemeElementCategory) {
 				return true;
 			}
@@ -297,13 +285,11 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 				defs = registry.getFonts();
 			}
 
-			for (int i = 0; i < defs.length; i++) {
-				if (id.equals(defs[i].getDefaultsTo())
+			for (IHierarchalThemeElementDefinition elementDefinition : defs) {
+				if (id.equals(elementDefinition.getDefaultsTo())
 						&& ColorsAndFontsPreferencePage.equals(
-								((ICategorizedThemeElementDefinition) def)
-										.getCategoryId(),
-								((ICategorizedThemeElementDefinition) defs[i])
-										.getCategoryId())) {
+								((ICategorizedThemeElementDefinition) def).getCategoryId(),
+								((ICategorizedThemeElementDefinition) elementDefinition).getCategoryId())) {
 					return true;
 				}
 			}
@@ -311,41 +297,32 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             return false;
         }
 
-        /*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.IStructuredContentProvider#getElements(java.lang.Object)
-		 */
-        public Object[] getElements(Object inputElement) {
+        @Override
+		public Object[] getElements(Object inputElement) {
             ArrayList list = new ArrayList();
             Object[] uncatChildren = getCategoryChildren(null);
             list.addAll(Arrays.asList(uncatChildren));
-            ThemeElementCategory[] categories = ((IThemeRegistry) inputElement)
-                    .getCategories();
-            for (int i = 0; i < categories.length; i++) {
-                if (categories[i].getParentId() == null) {
-                    Set bindings = themeRegistry
-                            .getPresentationsBindingsFor(categories[i]);
-                    if (bindings == null
-                            || bindings.contains(workbench.getPresentationId())) {
-						list.add(categories[i]);
+			for (ThemeElementCategory category : ((IThemeRegistry) inputElement).getCategories()) {
+                if (category.getParentId() == null) {
+					Set bindings = themeRegistry.getPresentationsBindingsFor(category);
+					if (bindings == null) {
+						Object[] children = getChildren(category);
+						if (children != null && children.length > 0) {
+							list.add(category);
+						}
 					}
                 }
             }
             return list.toArray(new Object[list.size()]);
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.IContentProvider#dispose()
-         */
-        public void dispose() {
+        @Override
+		public void dispose() {
             categoryMap.clear();
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.IContentProvider#inputChanged(org.eclipse.jface.viewers.Viewer, java.lang.Object, java.lang.Object)
-         */
-        public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
+        @Override
+		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
             categoryMap.clear();
             registry = (IThemeRegistry) newInput;
         }
@@ -353,7 +330,8 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
     }
 
     private class PresentationLabelProvider extends LabelProvider implements
-            IFontProvider {
+ IFontProvider,
+			IColorProvider {
 
         private HashMap fonts = new HashMap();
 
@@ -363,12 +341,16 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         private int usableImageSize = -1;
 
-        private IPropertyChangeListener listener = new IPropertyChangeListener() {
-            public void propertyChange(PropertyChangeEvent event) {
-                fireLabelProviderChanged(new LabelProviderChangedEvent(
-                        PresentationLabelProvider.this));
-            }
-        };
+        private IPropertyChangeListener listener = event -> {
+			if (event.getNewValue() != null) {
+				fireLabelProviderChanged(new LabelProviderChangedEvent(
+						PresentationLabelProvider.this));
+			} else {
+				// Some theme definition element has been modified and we
+				// need to refresh the viewer
+				refreshAllLabels();
+			}
+		};
 
         private Image emptyImage;
 
@@ -384,10 +366,8 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             fontRegistry.addListener(listener);
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.IBaseLabelProvider#dispose()
-         */
-        public void dispose() {
+        @Override
+		public void dispose() {
             super.dispose();
             colorRegistry.removeListener(listener);
             fontRegistry.removeListener(listener);
@@ -414,7 +394,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             }
             fonts.clear();
         }
-        
+
         /**
          * Clears and disposes all fonts and fires a label update.
          */
@@ -424,10 +404,8 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
                     PresentationLabelProvider.this));
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.IFontProvider#getFont(java.lang.Object)
-         */
-        public Font getFont(Object element) {
+        @Override
+		public Font getFont(Object element) {
             Display display = tree.getDisplay();
             if (element instanceof FontDefinition) {
                 int parentHeight = tree.getViewer().getControl().getFont()
@@ -437,29 +415,31 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
                 Font font = (Font) fonts.get(baseFont);
                 if (font == null) {
                     FontData[] data = baseFont.getFontData();
-                    for (int i = 0; i < data.length; i++) {
-                        data[i].setHeight(parentHeight);
+                    for (FontData fontData : data) {
+                        fontData.setHeight(parentHeight);
                     }
                     font = new Font(display, data);
 
                     fonts.put(baseFont, font);
                 }
                 return font;
-            }
-
+			}
             return JFaceResources.getDialogFont();
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.ILabelProvider#getImage(java.lang.Object)
-         */
-        public Image getImage(Object element) {
+        @Override
+		public Image getImage(Object element) {
             if (element instanceof ColorDefinition) {
+				Display display = tree.getDisplay();
                 Color c = colorRegistry
                         .get(((ColorDefinition) element).getId());
+				Color foregroundColor = display.getSystemColor(SWT.COLOR_BLACK);
+				if (!isAvailableInCurrentTheme((ColorDefinition) element)) {
+					c = display.getSystemColor(SWT.COLOR_WHITE);
+					foregroundColor = display.getSystemColor(DEFINITION_NOT_AVAIL_COLOR);
+				}
                 Image image = (Image) images.get(c);
-                if (image == null) {
-                    Display display = tree.getDisplay();
+				if (image == null) {
                     ensureImageSize();
                     image = new Image(display, imageSize, imageSize);
 
@@ -470,8 +450,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
                             .getBackground());
                     gc.drawRectangle(0, 0, imageSize - 1, imageSize - 1);
 
-                    gc.setForeground(tree.getViewer().getControl()
-                            .getForeground());
+					gc.setForeground(foregroundColor);
                     gc.setBackground(c);
 
                     int offset = (imageSize - usableImageSize) / 2;
@@ -501,33 +480,34 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             }
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.ILabelProvider#getText(java.lang.Object)
-         */
-        public String getText(Object element) {
+        @Override
+		public String getText(Object element) {
             if (element instanceof IHierarchalThemeElementDefinition) {
                 IHierarchalThemeElementDefinition themeElement = (IHierarchalThemeElementDefinition) element;
 				if (themeElement.getDefaultsTo() != null) {
-                    String myCategory = ((ICategorizedThemeElementDefinition) themeElement).getCategoryId();
-                    ICategorizedThemeElementDefinition def;
-                    if (element instanceof ColorDefinition)
+					String myCategory = ((ICategorizedThemeElementDefinition) themeElement).getCategoryId();
+					ICategorizedThemeElementDefinition def;
+					if (element instanceof ColorDefinition) {
 						def = themeRegistry.findColor(themeElement.getDefaultsTo());
-					else
+					} else {
 						def = themeRegistry.findFont(themeElement.getDefaultsTo());
-
-                    if (!ColorsAndFontsPreferencePage.equals(def.getCategoryId(), myCategory)) {
-                    	if (isDefault(themeElement))
-							return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_default"), new Object[] { themeElement.getName(), def.getName() }); //$NON-NLS-1$
-               			return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_override"), new Object[] { themeElement.getName(), def.getName() }); //$NON-NLS-1$
-                    }
-                }
+					}
+					if (def != null && !ColorsAndFontsPreferencePage.equals(def.getCategoryId(), myCategory)) {
+						if (isDefault(themeElement)) {
+							return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_default"), //$NON-NLS-1$
+									themeElement.getName(), def.getName());
+						}
+						return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_override"), //$NON-NLS-1$
+								themeElement.getName(), def.getName());
+					}
+				}
             }
             return ((IThemeElementDefinition) element).getName();
         }
 
         /**
          * Return whether the element is set to default.
-         * 
+         *
          * @param def the definition
          * @return whether the element is set to default
          * @since 3.2
@@ -551,6 +531,27 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			}
 			return false;
 		}
+
+		/**
+		 * Returns the DEFINITION_NOT_AVAIL_COLOR color when definition is not
+		 * present in the current theme or null when it is available
+		 *
+		 * @param def
+		 *            the definition
+		 * @return the DEFINITION_NOT_AVAIL_COLOR color or null
+		 */
+		@Override
+		public Color getForeground(Object element) {
+			if (element instanceof ThemeElementDefinition && !isAvailableInCurrentTheme((ThemeElementDefinition) element)) {
+				return tree.getDisplay().getSystemColor(DEFINITION_NOT_AVAIL_COLOR);
+			}
+			return null;
+		}
+
+		@Override
+		public Color getBackground(Object element) {
+			return null;
+		}
     }
 
     /**
@@ -567,10 +568,11 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
     private Font appliedDialogFont;
 
     /**
-	 * Map of definition id->RGB capturing the explicit changes made by the
-	 * user. These changes need to be stored into the preference store.
+	 * Map of definition ColorDefinition->RGB capturing the explicit changes
+	 * made by the user. These changes need to be stored into the preference
+	 * store.
 	 */
-    private Map colorPreferencesToSet = new HashMap(7);
+	private Map<ColorDefinition, RGB> colorPreferencesToSet = new HashMap<>(7);
 
     private CascadingColorRegistry colorRegistry;
 
@@ -584,29 +586,29 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
      * The default color preview composite.
      */
     private Composite defaultColorPreview;
-    
+
     /**
      * The default font preview composite.
      */
     private Composite defaultFontPreview;
-    
+
     /**
      * The composite to use when no preview is available.
      */
     private Composite defaultNoPreview;
-    
+
 	/**
 	 * Currently selected font for preview; might be null.
 	 */
 	private Font currentFont;
-	
+
 	/**
-	 * Currently selected color for preview; might be null. 
+	 * Currently selected color for preview; might be null.
 	 */
 	private Color currentColor;
-	
+
 	/**
-	 * Canvas used to draw default color preview 
+	 * Canvas used to draw default color preview
 	 */
 	private Canvas colorSampler;
 
@@ -623,23 +625,32 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
 	/**
 	 * The button to edit the default of the selected element.
-	 * 
+	 *
 	 * @since 3.7
 	 */
 	private Button editDefaultButton;
 
 	/**
 	 * The button to go to the default of the selected element.
-	 * 
+	 *
 	 * @since 3.7
 	 */
 	private Button goToDefaultButton;
 
 	/**
-	 * Map of definition id->FontData[] capturing the changes explicitly made by
-	 * the user. These changes need to be stored into the preference store.
+	 * The button to expand the tree.
+	 *
+	 * @since 4.5
 	 */
-    private Map fontPreferencesToSet = new HashMap(7);
+	private Button expandAllButton;
+
+	/**
+	 * Map of definition FontDefinition->FontData[] capturing the changes
+	 * explicitly made by the user. These changes need to be stored into the
+	 * preference store.
+	 */
+	private Map<FontDefinition, FontData[]> fontPreferencesToSet = new HashMap<>(
+			7);
 
     private CascadingFontRegistry fontRegistry;
 
@@ -650,7 +661,12 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	/**
 	 * Map of definition id->FontData[] capturing the temporary changes caused
 	 * by a 'defaultsTo' font change.
+	 *
+	 * @deprecated in this page, we should only care about preferences,
+	 *             preference to fontValues synchronization in registry is
+	 *             handled in the ThemeAPI and listeners
 	 */
+	@Deprecated
     private Map fontValuesToSet = new HashMap(7);
 
     /**
@@ -679,15 +695,42 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     private PresentationLabelProvider labelProvider;
 
-    private CascadingTheme cascadingTheme;
+	private CascadingThemeExt cascadingTheme;
 
     private IPropertyChangeListener themeChangeListener;
 
     private Workbench workbench;
 
     private FilteredTree tree;
-    
+
 	private Text descriptionText;
+
+	private IEventBroker eventBroker;
+
+	private EventHandler themeRegistryRestyledHandler = new EventHandler() {
+		@Override
+		public void handleEvent(Event event) {
+			if (isAnyThemeChanged()) {
+				updateThemeInfo(workbench.getThemeManager());
+			}
+			refreshCategory();
+			refreshAllLabels();
+
+			clearPreviews();
+			previewMap.clear();
+			restoreTreeSelection();
+			updateControls();
+		}
+
+		private boolean isAnyThemeChanged() {
+			return currentTheme != workbench.getThemeManager().getCurrentTheme()
+					|| currentCSSTheme != getActiveTheme();
+		}
+	};
+
+	private org.eclipse.e4.ui.css.swt.theme.ITheme currentCSSTheme;
+
+	private IThemeEngine themeEngine;
 
     /**
      * Create a new instance of the receiver.
@@ -708,10 +751,11 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	 * <li><strong>selectColor:</strong>ID - selects the color with the given ID
 	 * </li>
 	 * </p>
-	 * 
+	 *
 	 * @param data
 	 *            the data to be applied
 	 */
+	@Override
 	public void applyData(Object data) {
 		if (tree == null || !(data instanceof String))
 			return;
@@ -742,7 +786,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
 	/**
 	 * Selects and reveals the given element.
-	 * 
+	 *
 	 * @param selection
 	 *            the object to select and reveal
 	 * @since 3.7
@@ -763,6 +807,19 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			return true;
         return false;
     }
+
+	/**
+	 * Get the active theme.
+	 *
+	 * @return the active theme if there is one; <code>null</code> if there
+	 *         isn't or {@link #themeEngine} is <code>null</code>.
+	 */
+	private org.eclipse.e4.ui.css.swt.theme.ITheme getActiveTheme() {
+		if (themeEngine != null) {
+			return themeEngine.getActiveTheme();
+		}
+		return null;
+	}
 
     /**
      * Create a button for the preference page.
@@ -790,23 +847,19 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		return separator;
 	}
 
-    /* (non-Javadoc)
-     * @see org.eclipse.jface.preference.PreferencePage#createContents(org.eclipse.swt.widgets.Composite)
-     */
-    protected Control createContents(Composite parent) {
+    @Override
+	protected Control createContents(Composite parent) {
     	PlatformUI.getWorkbench().getHelpSystem().setHelp(parent, IWorkbenchHelpContextIds.FONTS_PREFERENCE_PAGE);
-    	
-        parent.addDisposeListener(new DisposeListener() {
-            public void widgetDisposed(DisposeEvent e) {
-                if (appliedDialogFont != null)
-					appliedDialogFont.dispose();
-            }
-        });
-        
+
+        parent.addDisposeListener(e -> {
+		    if (appliedDialogFont != null)
+				appliedDialogFont.dispose();
+		});
+
 		final SashForm advancedComposite = new SashForm(parent, SWT.VERTICAL);
 		GridData sashData = new GridData(SWT.FILL, SWT.FILL, true, true);
 		advancedComposite.setLayoutData(sashData);
-        
+
         Composite mainColumn = new Composite(advancedComposite, SWT.NONE);
         GridLayout layout = new GridLayout();
         layout.numColumns = 2;
@@ -823,7 +876,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         label.setLayoutData(data);
 
         createTree(mainColumn);
-        
+
         // --- buttons
         Composite controlColumn = new Composite(mainColumn, SWT.NONE);
         data = new GridData(GridData.FILL_VERTICAL);
@@ -832,7 +885,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         layout.marginHeight = 0;
         layout.marginWidth = 0;
         controlColumn.setLayout(layout);
-        
+
         // we need placeholder to offset the filter control of the table
         Label placeholder = new Label(controlColumn, SWT.NONE);
         GridData placeholderData = new GridData(SWT.TOP);
@@ -845,6 +898,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		createSeparator(controlColumn);
 		editDefaultButton = createButton(controlColumn, RESOURCE_BUNDLE.getString("editDefault")); //$NON-NLS-1$
 		goToDefaultButton = createButton(controlColumn, RESOURCE_BUNDLE.getString("goToDefault")); //$NON-NLS-1$
+		createSeparator(controlColumn);
+		expandAllButton = createButton(controlColumn, RESOURCE_BUNDLE.getString("expandAll")); //$NON-NLS-1$
+		expandAllButton.setEnabled(true);
         // --- end of buttons
 
 		createDescriptionControl(mainColumn);
@@ -856,7 +912,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		previewLayout.marginHeight = 0;
         previewColumn.setFont(parent.getFont());
         previewColumn.setLayout(previewLayout);
-        
+
         // --- create preview control
 		Composite composite = new Composite(previewColumn, SWT.NONE);
 
@@ -866,11 +922,11 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		layout2.marginHeight = 0;
 		layout2.marginWidth = 0;
 		composite.setLayout(layout2);
-        
+
 		Label label2 = new Label(composite, SWT.LEFT);
 		label2.setText(RESOURCE_BUNDLE.getString("preview")); //$NON-NLS-1$
 		myApplyDialogFont(label2);
-        
+
         previewComposite = new Composite(composite, SWT.NONE);
         previewComposite.setLayoutData(new GridData(GridData.FILL_BOTH));
         stackLayout = new StackLayout();
@@ -878,14 +934,14 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         stackLayout.marginWidth = 0;
         previewComposite.setLayout(stackLayout);
         // -- end of preview control
-         
-        
+
+
 		defaultFontPreview = createFontPreviewControl();
 		defaultColorPreview = createColorPreviewControl();
 		defaultNoPreview = createNoPreviewControl();
-        
+
         hookListeners();
-        
+
         updateTreeSelection(tree.getViewer().getSelection());
 
 		advancedComposite.setWeights(new int[] { 75, 25 });
@@ -895,7 +951,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	/**
 	 * Create the <code>ListViewer</code> that will contain all color
 	 * definitions as defined in the extension point.
-	 * 
+	 *
 	 * @param parent
 	 *            the parent <code>Composite</code>.
 	 */
@@ -906,15 +962,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		// non-category elements to be returned in the event that their children
 		// do not and also search the descriptions.
 		PatternFilter filter = new PatternFilter() {
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see
-			 * org.eclipse.ui.dialogs.PatternFilter#isLeafMatch(org.eclipse.
-			 * jface.viewers.Viewer, java.lang.Object)
-			 * 
-			 * @since 3.7
-			 */
+			@Override
 			protected boolean isLeafMatch(Viewer viewer, Object element) {
 				if (super.isLeafMatch(viewer, element))
 					return true;
@@ -930,6 +978,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
 		tree = new FilteredTree(parent, SWT.SINGLE | SWT.H_SCROLL | SWT.V_SCROLL | SWT.BORDER,
 				filter, true);
+		tree.setQuickSelectionMode(true);
 		GridData data = new GridData(GridData.FILL_BOTH | GridData.VERTICAL_ALIGN_FILL);
 		data.widthHint = Math.max(285, convertWidthInCharsToPixels(30));
 		data.heightHint = Math.max(175, convertHeightInCharsToPixels(10));
@@ -942,6 +991,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		tree.getViewer().setLabelProvider(labelProvider);
 		tree.getViewer().setContentProvider(new ThemeContentProvider());
 		tree.getViewer().setComparator(new ViewerComparator() {
+			@Override
 			public int category(Object element) {
 				if (element instanceof ThemeElementCategory)
 					return 0;
@@ -949,18 +999,22 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			}
 		});
 		tree.getViewer().setInput(WorkbenchPlugin.getDefault().getThemeRegistry());
-		tree.getViewer().addDoubleClickListener(new IDoubleClickListener() {
-			public void doubleClick(DoubleClickEvent event) {
-				IStructuredSelection s = (IStructuredSelection) event.getSelection();
-				Object element = s.getFirstElement();
-				if (tree.getViewer().isExpandable(element))
-					tree.getViewer().setExpandedState(element,
-							!tree.getViewer().getExpandedState(element));
+		tree.getViewer().addDoubleClickListener(event -> {
+			IStructuredSelection s = (IStructuredSelection) event.getSelection();
+			Object element = s.getFirstElement();
+			if (tree.getViewer().isExpandable(element))
+				tree.getViewer().setExpandedState(element,
+						!tree.getViewer().getExpandedState(element));
 
-				if (element instanceof FontDefinition)
+			if (element instanceof ThemeElementDefinition) {
+				ThemeElementDefinition definition = (ThemeElementDefinition) element;
+
+				if (element instanceof FontDefinition) {
 					editFont(tree.getDisplay());
-				else if (element instanceof ColorDefinition)
+				} else if (element instanceof ColorDefinition
+						&& isAvailableInCurrentTheme(definition)) {
 					editColor(tree.getDisplay());
+				}
 				updateControls();
 			}
 		});
@@ -969,16 +1023,14 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		restoreTreeSelection();
 	}
 
-    /* (non-Javadoc)
-     * @see org.eclipse.jface.dialogs.IDialogPage#dispose()
-     */
-    public void dispose() {
-        super.dispose();
-        
+    @Override
+	public void dispose() {
+		eventBroker.unsubscribe(themeRegistryRestyledHandler);
         workbench.getThemeManager().removePropertyChangeListener(themeChangeListener);
         clearPreviews();
         colorRegistry.dispose();
         fontRegistry.dispose();
+		super.dispose();
     }
 
     /**
@@ -993,7 +1045,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             try {
                 preview.dispose();
             } catch (RuntimeException e) {
-                WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorDisposePreviewLog"), //$NON-NLS-1$ 
+                WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorDisposePreviewLog"), //$NON-NLS-1$
                 		StatusUtil.newStatus(IStatus.ERROR, e.getMessage(), e));
             }
         }
@@ -1002,7 +1054,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     /**
      * Get the ancestor of the given color, if any.
-     * 
+     *
      * @param definition the descendant <code>ColorDefinition</code>.
      * @return the ancestor <code>ColorDefinition</code>, or <code>null</code>
      * 		if none.
@@ -1016,7 +1068,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     /**
      * Get the RGB value of the given colors ancestor, if any.
-     * 
+     *
      * @param definition the descendant <code>ColorDefinition</code>.
      * @return the ancestor <code>RGB</code>, or <code>null</code> if none.
      */
@@ -1030,13 +1082,13 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
     /**
      * Get the RGB value for the specified definition.  Cascades through
      * preferenceToSet, valuesToSet and finally the registry.
-     * 
+     *
      * @param definition the <code>ColorDefinition</code>.
      * @return the <code>RGB</code> value.
      */
     private RGB getColorValue(ColorDefinition definition) {
         String id = definition.getId();
-        RGB updatedRGB = (RGB) colorPreferencesToSet.get(id);
+		RGB updatedRGB = colorPreferencesToSet.get(definition);
         if (updatedRGB == null) {
             updatedRGB = (RGB) colorValuesToSet.get(id);
             if (updatedRGB == null)
@@ -1047,7 +1099,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     /**
      * Get colors that descend from the provided color.
-     * 
+     *
      * @param definition the ancestor <code>ColorDefinition</code>.
      * @return the ColorDefinitions that have the provided definition as their
      * 		defaultsTo attribute.
@@ -1062,9 +1114,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         Arrays.sort(sorted, new IThemeRegistry.HierarchyComparator(colors));
 
-        for (int i = 0; i < sorted.length; i++) {
-            if (id.equals(sorted[i].getDefaultsTo()))
-				list.add(sorted[i]);
+        for (ColorDefinition colorDefinition : sorted) {
+            if (id.equals(colorDefinition.getDefaultsTo()))
+				list.add(colorDefinition);
         }
         return (ColorDefinition[]) list.toArray(new ColorDefinition[list.size()]);
     }
@@ -1079,9 +1131,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         Arrays.sort(sorted, new IThemeRegistry.HierarchyComparator(fonts));
 
-        for (int i = 0; i < sorted.length; i++) {
-            if (id.equals(sorted[i].getDefaultsTo()))
-				list.add(sorted[i]);
+        for (FontDefinition fontDefinition : sorted) {
+            if (id.equals(fontDefinition.getDefaultsTo()))
+				list.add(fontDefinition);
         }
         return (FontDefinition[]) list.toArray(new FontDefinition[list.size()]);
     }
@@ -1097,14 +1149,15 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         FontDefinition ancestor = getFontAncestor(definition);
         if (ancestor == null) {
 			return PreferenceConverter.getDefaultFontDataArray(
-					getPreferenceStore(), ThemeElementHelper.createPreferenceKey(currentTheme, definition.getId()));
+getPreferenceStore(),
+					createPreferenceKey(definition));
 		}
         return getFontValue(ancestor);
     }
 
     protected FontData[] getFontValue(FontDefinition definition) {
         String id = definition.getId();
-        FontData[] updatedFD = (FontData[]) fontPreferencesToSet.get(id);
+		FontData[] updatedFD = fontPreferencesToSet.get(definition);
         if (updatedFD == null) {
             updatedFD = (FontData[]) fontValuesToSet.get(id);
             if (updatedFD == null)
@@ -1114,137 +1167,127 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
     }
 
     protected ColorDefinition getSelectedColorDefinition() {
-        Object o = ((IStructuredSelection) tree.getViewer().getSelection()).getFirstElement();
-        if (o instanceof ColorDefinition)
-			return (ColorDefinition) o;
+		Object o = tree.getViewer().getStructuredSelection().getFirstElement();
+		if (o instanceof ColorDefinition) {
+			return themeRegistry.findColor(((ColorDefinition) o).getId());
+		}
         return null;
     }
 
     protected FontDefinition getSelectedFontDefinition() {
-        Object o = ((IStructuredSelection) tree.getViewer().getSelection()).getFirstElement();
-        if (o instanceof FontDefinition)
-			return (FontDefinition) o;
+		Object o = tree.getViewer().getStructuredSelection().getFirstElement();
+		if (o instanceof FontDefinition) {
+			return themeRegistry.findFont(((FontDefinition) o).getId());
+		}
         return null;
     }
-    
+
     protected boolean isFontSelected() {
-    	Object o = ((IStructuredSelection) tree.getViewer().getSelection()).getFirstElement();
+		Object o = tree.getViewer().getStructuredSelection().getFirstElement();
     	return (o instanceof FontDefinition);
     }
 
     protected boolean isColorSelected() {
-    	Object o = ((IStructuredSelection) tree.getViewer().getSelection()).getFirstElement();
+		Object o = tree.getViewer().getStructuredSelection().getFirstElement();
     	return (o instanceof ColorDefinition);
     }
-    
+
     /**
      * Hook all control listeners.
      */
     private void hookListeners() {
         TreeViewer viewer = tree.getViewer();
-		viewer.addSelectionChangedListener(new ISelectionChangedListener() {
-                public void selectionChanged(SelectionChangedEvent event) {
-                    updateTreeSelection(event.getSelection());
-                }
-		});
-		
-        fontChangeButton.addSelectionListener(new SelectionAdapter() {
-            public void widgetSelected(SelectionEvent event) {
-            	Display display = event.display;
-            	if (isFontSelected())
-            		editFont(display);
-            	else if (isColorSelected())
-            		editColor(display);
-            	updateControls();
-            }
-        });
+		viewer.addSelectionChangedListener(event -> updateTreeSelection(event.getSelection()));
 
-        fontResetButton.addSelectionListener(new SelectionAdapter() {
+        fontChangeButton.addSelectionListener(widgetSelectedAdapter(event -> {
+			Display display = event.display;
+			if (isFontSelected())
+				editFont(display);
+			else if (isColorSelected())
+				editColor(display);
+			updateControls();
+		}));
 
-            public void widgetSelected(SelectionEvent e) {
-            	if (isFontSelected())
-					resetFont(getSelectedFontDefinition(), false);
-            	else if (isColorSelected())
-					resetColor(getSelectedColorDefinition(), false);
-            	updateControls();
-            }
-        });
+        fontResetButton.addSelectionListener(widgetSelectedAdapter(e -> {
+			if (isFontSelected())
+				resetFont(getSelectedFontDefinition(), false);
+			else if (isColorSelected())
+				resetColor(getSelectedColorDefinition(), false);
+			updateControls();
+		}));
 
-        fontSystemButton.addSelectionListener(new SelectionAdapter() {
-            public void widgetSelected(SelectionEvent event) {
-                FontDefinition definition = getSelectedFontDefinition();
-                if (definition == null)
-                	return;
-                FontData[] defaultFontData = JFaceResources.getDefaultFont().getFontData();
-                setFontPreferenceValue(definition, defaultFontData);
-                updateControls();
-            }
-        });
+        fontSystemButton.addSelectionListener(widgetSelectedAdapter(event -> {
+		    FontDefinition definition = getSelectedFontDefinition();
+		    if (definition == null)
+		    	return;
+		    FontData[] defaultFontData = JFaceResources.getDefaultFont().getFontData();
+			setFontPreferenceValue(definition, defaultFontData, false);
+		    updateControls();
+		}));
 
-		editDefaultButton.addSelectionListener(new SelectionAdapter() {
-			public void widgetSelected(SelectionEvent event) {
-				Display display = event.display;
-				FontDefinition fontDefinition = getSelectedFontDefinition();
-				if (fontDefinition != null) {
-					String defaultFontId = fontDefinition.getDefaultsTo();
-					FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
-					editFont(defaultFontDefinition, display);
-				} else {
-					ColorDefinition colorDefinition = getSelectedColorDefinition();
-					if (colorDefinition != null) {
-						String defaultColorId = colorDefinition.getDefaultsTo();
-						ColorDefinition defaultColorDefinition = themeRegistry
-								.findColor(defaultColorId);
-						editColor(defaultColorDefinition, display);
-					}
+		editDefaultButton.addSelectionListener(widgetSelectedAdapter(event -> {
+			Display display = event.display;
+			FontDefinition fontDefinition = getSelectedFontDefinition();
+			if (fontDefinition != null) {
+				String defaultFontId = fontDefinition.getDefaultsTo();
+				FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
+				editFont(defaultFontDefinition, display);
+			} else {
+				ColorDefinition colorDefinition = getSelectedColorDefinition();
+				if (colorDefinition != null) {
+					String defaultColorId = colorDefinition.getDefaultsTo();
+					ColorDefinition defaultColorDefinition = themeRegistry
+							.findColor(defaultColorId);
+					editColor(defaultColorDefinition, display);
 				}
-				updateControls();
 			}
-		});
+			updateControls();
+		}));
 
-		goToDefaultButton.addSelectionListener(new SelectionAdapter() {
-			public void widgetSelected(SelectionEvent event) {
-				FontDefinition fontDefinition = getSelectedFontDefinition();
-				if (fontDefinition != null) {
-					String defaultFontId = fontDefinition.getDefaultsTo();
-					FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
-					selectAndReveal(defaultFontDefinition);
-				} else {
-					ColorDefinition colorDefinition = getSelectedColorDefinition();
-					if (colorDefinition != null) {
-						String defaultColorId = colorDefinition.getDefaultsTo();
-						ColorDefinition defaultColorDefinition = themeRegistry
-								.findColor(defaultColorId);
-						selectAndReveal(defaultColorDefinition);
-					}
+		goToDefaultButton.addSelectionListener(widgetSelectedAdapter(event -> {
+			FontDefinition fontDefinition = getSelectedFontDefinition();
+			if (fontDefinition != null) {
+				String defaultFontId = fontDefinition.getDefaultsTo();
+				FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
+				selectAndReveal(defaultFontDefinition);
+			} else {
+				ColorDefinition colorDefinition = getSelectedColorDefinition();
+				if (colorDefinition != null) {
+					String defaultColorId = colorDefinition.getDefaultsTo();
+					ColorDefinition defaultColorDefinition = themeRegistry
+							.findColor(defaultColorId);
+					selectAndReveal(defaultColorDefinition);
 				}
-				updateControls();
 			}
-		});
+			updateControls();
+		}));
+
+		expandAllButton.addSelectionListener(widgetSelectedAdapter(event -> tree.getViewer().expandAll()));
 
     }
 
-    /* (non-Javadoc)
-     * @see org.eclipse.ui.IWorkbenchPreferencePage#init(org.eclipse.ui.IWorkbench)
-     */
-    public void init(IWorkbench aWorkbench) {
+    @Override
+	public void init(IWorkbench aWorkbench) {
         this.workbench = (Workbench) aWorkbench;
+		themeEngine = workbench.getService(IThemeEngine.class);
         setPreferenceStore(PrefUtil.getInternalPreferenceStore());
 
         final IThemeManager themeManager = aWorkbench.getThemeManager();
-        themeChangeListener = new IPropertyChangeListener() {
-            public void propertyChange(PropertyChangeEvent event) {
-                if (event.getProperty().equals(
-                        IThemeManager.CHANGE_CURRENT_THEME)) {
-                    updateThemeInfo(themeManager);
-                    refreshCategory();
-                    tree.getViewer().refresh(); // refresh all the labels in the tree
-                }
-            }
-        };
+        themeChangeListener = event -> {
+		    if (event.getProperty().equals(
+		            IThemeManager.CHANGE_CURRENT_THEME)) {
+		        updateThemeInfo(themeManager);
+		        refreshCategory();
+				refreshAllLabels();
+		    }
+		};
         themeManager.addPropertyChangeListener(themeChangeListener);
 
         updateThemeInfo(themeManager);
+
+		eventBroker = workbench.getService(IEventBroker.class);
+		eventBroker.subscribe(WorkbenchThemeManager.Events.THEME_REGISTRY_RESTYLED,
+				themeRegistryRestyledHandler);
     }
 
     private void updateThemeInfo(IThemeManager manager) {
@@ -1261,8 +1304,15 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         currentTheme = manager.getCurrentTheme();
 
+		currentCSSTheme = getActiveTheme();
+
         colorRegistry = new CascadingColorRegistry(currentTheme.getColorRegistry());
         fontRegistry = new CascadingFontRegistry(currentTheme.getFontRegistry());
+
+		if (cascadingTheme != null) {
+			cascadingTheme.dispose();
+			cascadingTheme = new CascadingThemeExt(currentTheme, colorRegistry, fontRegistry);
+		}
 
         fontPreferencesToSet.clear();
         fontValuesToSet.clear();
@@ -1276,7 +1326,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     /**
      * Answers whether the definition is currently set to the default value.
-     * 
+     *
      * @param definition the <code>ColorDefinition</code> to check.
      * @return Return whether the definition is currently mapped to the default
      * 		value, either in the preference store or in the local change record
@@ -1285,12 +1335,12 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
     private boolean isDefault(ColorDefinition definition) {
         String id = definition.getId();
 
-        if (colorPreferencesToSet.containsKey(id)) {
+		if (colorPreferencesToSet.containsKey(definition)) {
             if (definition.getValue() != null) { // value-based color
-                if (colorPreferencesToSet.get(id).equals(definition.getValue()))
+				if (colorPreferencesToSet.get(definition).equals(definition.getValue()))
 					return true;
             } else {
-                if (colorPreferencesToSet.get(id).equals(getColorAncestorValue(definition)))
+				if (colorPreferencesToSet.get(definition).equals(getColorAncestorValue(definition)))
 					return true;
             }
 		} else if (colorValuesToSet.containsKey(id)) {
@@ -1303,11 +1353,12 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			}
         } else {
             if (definition.getValue() != null) { // value-based color
-                if (getPreferenceStore().isDefault(ThemeElementHelper.createPreferenceKey(currentTheme, id)))
+				if (getPreferenceStore().isDefault(createPreferenceKey(definition)))
 					return true;
             } else {
                 // a descendant is default if it's the same value as its ancestor
-                if (getColorValue(definition).equals(getColorAncestorValue(definition)))
+				RGB rgb = getColorValue(definition);
+				if (rgb != null && rgb.equals(getColorAncestorValue(definition)))
 					return true;
             }
         }
@@ -1317,13 +1368,14 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
     private boolean isDefault(FontDefinition definition) {
         String id = definition.getId();
 
-        if (fontPreferencesToSet.containsKey(id)) {
+		if (fontPreferencesToSet.containsKey(definition)) {
             if (definition.getValue() != null) { // value-based font
-                if (Arrays.equals((FontData[]) fontPreferencesToSet.get(id), definition.getValue()))
+				if (Arrays.equals(fontPreferencesToSet.get(definition),
+						definition.getValue()))
 					return true;
             } else {
                 FontData[] ancestor = getFontAncestorValue(definition);
-                if (Arrays.equals((FontData[]) fontPreferencesToSet.get(id), ancestor))
+				if (Arrays.equals(fontPreferencesToSet.get(definition), ancestor))
 					return true;
             }
 		} else if (fontValuesToSet.containsKey(id)) {
@@ -1338,7 +1390,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         } else {
             if (definition.getValue() != null) { // value-based font
-                if (getPreferenceStore().isDefault(ThemeElementHelper.createPreferenceKey(currentTheme, id)))
+				if (getPreferenceStore().isDefault(createPreferenceKey(definition)))
 					return true;
             } else {
                 FontData[] ancestor = getFontAncestorValue(definition);
@@ -1366,7 +1418,8 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
     /**
      * @see org.eclipse.jface.preference.PreferencePage#performApply()
      */
-    protected void performApply() {
+    @Override
+	protected void performApply() {
         super.performApply();
 
         //Apply the default font to the dialog.
@@ -1382,8 +1435,13 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         getApplyButton().setFont(appliedDialogFont);
         getDefaultsButton().setFont(appliedDialogFont);
 
-        if (oldFont != null)
+		if (oldFont != null) {
 			oldFont.dispose();
+		}
+
+		if (performColorOk() && performFontOk()) {
+			publishThemeRegistryModifiedEvent();
+		}
     }
 
     private void performColorDefaults() {
@@ -1395,17 +1453,15 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         Arrays.sort(definitionsCopy, new IThemeRegistry.HierarchyComparator(definitions));
 
-        for (int i = 0; i < definitionsCopy.length; i++) {
-			resetColor(definitionsCopy[i], true);
+        for (ColorDefinition colorDefinition : definitionsCopy) {
+			resetColor(colorDefinition, true);
 		}
     }
 
     private boolean performColorOk() {
-        for (Iterator i = colorPreferencesToSet.keySet().iterator(); i.hasNext();) {
-            String id = (String) i.next();
-            String key = ThemeElementHelper.createPreferenceKey(currentTheme, id);
-            RGB rgb = (RGB) colorPreferencesToSet.get(id);
-            String rgbString = StringConverter.asString(rgb);
+		for (Map.Entry<ColorDefinition, RGB> entry : colorPreferencesToSet.entrySet()) {
+			String key = createPreferenceKey(entry.getKey());
+			String rgbString = StringConverter.asString(entry.getValue());
             String storeString = getPreferenceStore().getString(key);
 
             if (!rgbString.equals(storeString))
@@ -1417,10 +1473,16 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         return true;
     }
 
-    /* (non-Javadoc)
-     * @see org.eclipse.jface.preference.PreferencePage#performDefaults()
-     */
-    protected void performDefaults() {
+	private String createPreferenceKey(ThemeElementDefinition definition) {
+		if (definition.isOverridden() || definition.isAddedByCss()) {
+			return ThemeElementHelper.createPreferenceKey(currentCSSTheme, currentTheme,
+					definition.getId());
+		}
+		return ThemeElementHelper.createPreferenceKey(currentTheme, definition.getId());
+	}
+
+    @Override
+	public void performDefaults() {
         performColorDefaults();
         performFontDefaults();
 		updateControls();
@@ -1436,19 +1498,15 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         Arrays.sort(definitionsCopy, new IThemeRegistry.HierarchyComparator(definitions));
 
-        for (int i = 0; i < definitionsCopy.length; i++) {
-			resetFont(definitionsCopy[i], true);
+        for (FontDefinition fontDefinition : definitionsCopy) {
+			resetFont(fontDefinition, true);
 		}
     }
 
     private boolean performFontOk() {
-
-        for (Iterator i = fontPreferencesToSet.keySet().iterator(); i.hasNext();) {
-            String id = (String) i.next();
-            String key = ThemeElementHelper.createPreferenceKey(currentTheme, id);
-            FontData[] fd = (FontData[]) fontPreferencesToSet.get(id);
-
-            String fdString = PreferenceConverter.getStoredRepresentation(fd);
+		for (Map.Entry<FontDefinition, FontData[]> entry : fontPreferencesToSet.entrySet()) {
+			String key = createPreferenceKey(entry.getKey());
+			String fdString = PreferenceConverter.getStoredRepresentation(entry.getValue());
             String storeString = getPreferenceStore().getString(key);
 
             if (!fdString.equals(storeString))
@@ -1460,15 +1518,15 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         return true;
     }
 
-    /* (non-Javadoc)
-     * @see org.eclipse.jface.preference.IPreferencePage#performOk()
-     */
-    public boolean performOk() {
+    @Override
+	public boolean performOk() {
     	saveTreeExpansion();
     	saveTreeSelection();
         boolean result =  performColorOk() && performFontOk();
-        if(result)
+		if (result) {
 			PrefUtil.savePrefs();
+			publishThemeRegistryModifiedEvent();
+		}
         return result;
     }
 
@@ -1481,7 +1539,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     /**
      * Resets the supplied definition to its default value.
-     * 
+     *
      * @param definition the <code>ColorDefinition</code> to reset.
      * @return whether any change was made.
      */
@@ -1494,8 +1552,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
                 newRGB = getColorAncestorValue(definition);
 
             if (newRGB != null) {
-                setColorPreferenceValue(definition, newRGB);
+				setColorPreferenceValue(definition, newRGB, true);
                 setRegistryValue(definition, newRGB);
+				refreshElement(definition);
                 return true;
             }
         }
@@ -1505,14 +1564,17 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	protected boolean resetFont(FontDefinition definition, boolean force) {
 		if (force || !isDefault(definition)) {
             FontData[] newFD;
-			if (!force && definition.getDefaultsTo() != null)
+			if (definition.isOverridden()) {
+				newFD = definition.getValue();
+			} else if (!force && definition.getDefaultsTo() != null) {
                 newFD = getFontAncestorValue(definition);
-            else
-                newFD = PreferenceConverter.getDefaultFontDataArray(getPreferenceStore(), ThemeElementHelper
-                                .createPreferenceKey(currentTheme, definition.getId()));
-
+			} else {
+				newFD = PreferenceConverter.getDefaultFontDataArray(getPreferenceStore(),
+						createPreferenceKey(definition));
+			}
             if (newFD != null) {
-                setFontPreferenceValue(definition, newFD);
+				setFontPreferenceValue(definition, newFD, true);
+				refreshElement(definition);
                 return true;
             }
         }
@@ -1521,53 +1583,50 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     /**
      * Set the value (in preferences) for the given color.
-     * 
+     *
      * @param definition the <code>ColorDefinition</code> to set.
      * @param newRGB the new <code>RGB</code> value for the definitions
      * 		identifier.
      */
-    protected void setColorPreferenceValue(ColorDefinition definition, RGB newRGB) {
+	protected void setColorPreferenceValue(ColorDefinition definition, RGB newRGB, boolean reset) {
         setDescendantRegistryValues(definition, newRGB);
-        colorPreferencesToSet.put(definition.getId(), newRGB);
+		colorPreferencesToSet.put(definition, newRGB);
+		updateDefinitionState(definition, reset);
     }
 
     /**
      * Set the value (in registry) for the given colors children.
-     * 
+     *
      * @param definition the <code>ColorDefinition</code> whose children should
      * 		be set.
      * @param newRGB the new <code>RGB</code> value for the definitions
      * 		identifier.
      */
     private void setDescendantRegistryValues(ColorDefinition definition, RGB newRGB) {
-        ColorDefinition[] children = getDescendantColors(definition);
-
-        for (int i = 0; i < children.length; i++) {
-            if (isDefault(children[i])) {
-                setDescendantRegistryValues(children[i], newRGB);
-                setRegistryValue(children[i], newRGB);
-                colorValuesToSet.put(children[i].getId(), newRGB);
+		for (ColorDefinition colorDefinition : getDescendantColors(definition)) {
+			if (isDefault(colorDefinition)) {
+				setDescendantRegistryValues(colorDefinition, newRGB);
+				setRegistryValue(colorDefinition, newRGB);
+				colorValuesToSet.put(colorDefinition.getId(), newRGB);
             }
         }
     }
 
-    private void setDescendantRegistryValues(FontDefinition definition, FontData[] datas) {
-        FontDefinition[] children = getDescendantFonts(definition);
-
-        for (int i = 0; i < children.length; i++) {
-            if (isDefault(children[i])) {
-                setDescendantRegistryValues(children[i], datas);
-                setRegistryValue(children[i], datas);
-                fontValuesToSet.put(children[i].getId(), datas);
-				fontPreferencesToSet.remove(children[i].getId());
+	private void setDescendantRegistryValues(FontDefinition definition, FontData[] datas, boolean reset) {
+		for (FontDefinition fontDefinition : getDescendantFonts(definition)) {
+			if (isDefault(fontDefinition)) {
+				setFontPreferenceValue(fontDefinition, datas, reset);
             }
         }
     }
 
-    protected void setFontPreferenceValue(FontDefinition definition, FontData[] datas) {
-        setDescendantRegistryValues(definition, datas);
-        fontPreferencesToSet.put(definition.getId(), datas);
+	protected void setFontPreferenceValue(FontDefinition definition, FontData[] datas, boolean reset) {
+		// descendant values must be computed and set before updating current,
+		// or isDefault will miss them
+		setDescendantRegistryValues(definition, datas, reset);
+		fontPreferencesToSet.put(definition, datas);
 		setRegistryValue(definition, datas);
+		updateDefinitionState(definition, reset);
     }
 
     /**
@@ -1602,9 +1661,10 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         return null;
     }
 
-    private ITheme getCascadingTheme() {
-        if (cascadingTheme == null)
-			cascadingTheme = new CascadingTheme(currentTheme, colorRegistry, fontRegistry);
+	private CascadingThemeExt getCascadingTheme() {
+		if (cascadingTheme == null) {
+			cascadingTheme = new CascadingThemeExt(currentTheme, colorRegistry, fontRegistry);
+		}
         return cascadingTheme;
     }
 
@@ -1621,7 +1681,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         //recalculate the fonts for the tree
         labelProvider.clearFontCacheAndUpdate();
     }
-    
+
     private void updateTreeSelection(ISelection selection) {
     	ThemeElementCategory category = null;
 	    Object element = ((IStructuredSelection) selection).getFirstElement();
@@ -1654,12 +1714,12 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
                     myApplyDialogFont(previewControl);
                     Text error = new Text(previewControl, SWT.WRAP | SWT.READ_ONLY);
                     error.setText(RESOURCE_BUNDLE.getString("errorCreatingPreview")); //$NON-NLS-1$
-                    WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorCreatePreviewLog"), //$NON-NLS-1$ 
+                    WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorCreatePreviewLog"), //$NON-NLS-1$
                     		StatusUtil.newStatus(IStatus.ERROR, e.getMessage(), e));
                 }
 	        }
 		}
-    	
+
         if (previewControl == null) { // there is no preview for this theme, use default preview
         	if (element instanceof ColorDefinition)
         		previewControl = defaultColorPreview;
@@ -1693,9 +1753,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	 * @since 3.1
 	 */
 	private void saveTreeSelection() {
-		IStructuredSelection selection = (IStructuredSelection) tree.getViewer().getSelection();
+		IStructuredSelection selection = tree.getViewer().getStructuredSelection();
 		Object element = selection.getFirstElement();
-		StringBuffer buffer = new StringBuffer();
+		StringBuilder buffer = new StringBuilder();
 		appendMarkerToBuffer(buffer, element);
 		if (buffer.length() > 0)
 			buffer.append(((IThemeElementDefinition) element).getId());
@@ -1710,13 +1770,13 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		String expandedElementsString = getPreferenceStore().getString(EXPANDED_ELEMENTS_PREF);
 		if (expandedElementsString == null)
 			return;
-		String[] expandedElementIDs = Util.getArrayFromList(expandedElementsString, EXPANDED_ELEMENTS_TOKEN);
+		String[] expandedElementIDs = expandedElementsString.split(EXPANDED_ELEMENTS_TOKEN);
 		if (expandedElementIDs.length == 0)
 			return;
 
 		List elements = new ArrayList(expandedElementIDs.length);
-		for (int i = 0; i < expandedElementIDs.length; i++) {
-			IThemeElementDefinition def = findElementFromMarker(expandedElementIDs[i]);
+		for (String expandedElementID : expandedElementIDs) {
+			IThemeElementDefinition def = findElementFromMarker(expandedElementID);
 			if (def != null)
 				elements.add(def);
 		}
@@ -1728,7 +1788,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	 * character against the known constants and then call the appropriate
 	 * method on the theme registry. If the element does not exist or the string
 	 * is invalid <code>null</code> is returned.
-	 * 
+	 *
 	 * @param string the string to parse
 	 * @return the element, or <code>null</code>
 	 */
@@ -1761,9 +1821,8 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		Object[] elements = tree.getViewer().getExpandedElements();
 		List elementIds = new ArrayList(elements.length);
 
-		StringBuffer buffer = new StringBuffer();
-		for (int i = 0; i < elements.length; i++) {
-			Object object = elements[i];
+		StringBuilder buffer = new StringBuilder();
+		for (Object object : elements) {
 			appendMarkerToBuffer(buffer, object);
 
 			if (buffer.length() != 0) {
@@ -1784,7 +1843,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		getPreferenceStore().setValue(EXPANDED_ELEMENTS_PREF, buffer.toString());
 	}
 
-	private void appendMarkerToBuffer(StringBuffer buffer, Object object) {
+	private void appendMarkerToBuffer(StringBuilder buffer, Object object) {
 		if (object instanceof FontDefinition) {
 			buffer.append(MARKER_FONT);
 		} else if (object instanceof ColorDefinition) {
@@ -1796,7 +1855,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
 	/**
 	 * Edit the currently selected font.
-	 * 
+	 *
 	 * @param display
 	 *            the display to open the dialog on
 	 * @since 3.2
@@ -1807,7 +1866,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
 	/**
 	 * Edit the given font.
-	 * 
+	 *
 	 * @param definition
 	 *            the font definition
 	 * @param display
@@ -1821,52 +1880,54 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			fontDialog.setFontList(getFontValue(definition));
 			final FontData data = fontDialog.open();
 			if (data != null) {
-				setFontPreferenceValue(definition, fontDialog.getFontList());
+				setFontPreferenceValue(definition, fontDialog.getFontList(), false);
+				refreshElement(definition);
 			}
 		}
 	}
-	
+
 	private void editColor(Display display) {
 		editColor(getSelectedColorDefinition(), display);
 	}
 
 	private void editColor(ColorDefinition definition, Display display) {
 		if (definition == null)
-			return; 
+			return;
 		RGB currentColor = colorRegistry.getRGB(definition.getId());
-		
+
 		ColorDialog colorDialog = new ColorDialog(display.getActiveShell());
 		colorDialog.setRGB(currentColor);
 		RGB selectedColor =  colorDialog.open();
 		if ((selectedColor != null) && (!selectedColor.equals(currentColor))) {
-             setColorPreferenceValue(definition, selectedColor);
-             setRegistryValue(definition, selectedColor);
+			setColorPreferenceValue(definition, selectedColor, false);
+			setRegistryValue(definition, selectedColor);
+			refreshElement(definition);
 		}
 	}
-	
-	
+
+
 	protected void updateControls() {
 		FontDefinition fontDefinition = getSelectedFontDefinition();
-        if (fontDefinition != null) {
-			boolean isDefault = isDefault(fontDefinition);
-			boolean hasDefault = fontDefinition.getDefaultsTo() != null;
-            fontChangeButton.setEnabled(true);
-            fontSystemButton.setEnabled(true);
-			fontResetButton.setEnabled(!isDefault);
-			editDefaultButton.setEnabled(hasDefault && isDefault);
-			goToDefaultButton.setEnabled(hasDefault);
+		if (fontDefinition != null) {
+			boolean isSetToDefault = isDefault(fontDefinition);
+			boolean hasEditableDefault = defaultIsEditable(fontDefinition);
+			fontChangeButton.setEnabled(true);
+			fontSystemButton.setEnabled(true);
+			fontResetButton.setEnabled(!isSetToDefault);
+			editDefaultButton.setEnabled(hasEditableDefault && isSetToDefault);
+			goToDefaultButton.setEnabled(hasEditableDefault);
             setCurrentFont(fontDefinition);
             return;
         }
         ColorDefinition colorDefinition = getSelectedColorDefinition();
         if (colorDefinition != null) {
-			boolean isDefault = isDefault(getSelectedColorDefinition());
-			boolean hasDefault = colorDefinition.getDefaultsTo() != null;
-            fontChangeButton.setEnabled(true);
+			boolean isSetToDefault = isDefault(getSelectedColorDefinition());
+			boolean hasEditableDefault = defaultIsEditable(colorDefinition);
+			fontChangeButton.setEnabled(true);
             fontSystemButton.setEnabled(false);
-			fontResetButton.setEnabled(!isDefault);
-			editDefaultButton.setEnabled(hasDefault && isDefault);
-			goToDefaultButton.setEnabled(hasDefault);
+			fontResetButton.setEnabled(!isSetToDefault);
+			editDefaultButton.setEnabled(hasEditableDefault && isSetToDefault);
+			goToDefaultButton.setEnabled(hasEditableDefault);
             setCurrentColor(colorDefinition);
             return;
         }
@@ -1878,7 +1939,30 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		goToDefaultButton.setEnabled(false);
 		descriptionText.setText(""); //$NON-NLS-1$
 	}
-	
+
+	/**
+	 * Find out if the default can be edited. Note, isEditable=false also means that
+	 * a property is not shown to user.
+	 *
+	 * @param definition
+	 * @return True if definition has a default and the default's isEditable=true.
+	 *         False otherwise.
+	 */
+	private boolean defaultIsEditable(IHierarchalThemeElementDefinition definition) {
+		assert definition instanceof ColorDefinition || definition instanceof FontDefinition;
+		String defaultId = definition.getDefaultsTo();
+		if (defaultId == null) {
+			return false;
+		}
+		IEditable defaultDefinition = null;
+		if (definition instanceof ColorDefinition) {
+			defaultDefinition = themeRegistry.findColor(defaultId);
+		} else if (definition instanceof FontDefinition) {
+			defaultDefinition = themeRegistry.findFont(defaultId);
+		}
+		return (defaultDefinition != null && defaultDefinition.isEditable());
+	}
+
     /**
      * @return Return the default "No preview available." preview.
      */
@@ -1890,19 +1974,19 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		myApplyDialogFont(l);
 		return noPreviewControl;
 	}
-	
+
 	private void setCurrentFont(FontDefinition fontDefinition) {
 		currentFont = fontRegistry.get(fontDefinition.getId());
-		FontData[] fontData = currentFont.getFontData();
+		FontData[] fontData = currentFont != null ? currentFont.getFontData() : new FontData[0];
 
 		// recalculate sample text
-		StringBuffer tmp = new StringBuffer();
-		for (int i = 0; i < fontData.length; i++) {
-			tmp.append(fontData[i].getName());
+		StringBuilder tmp = new StringBuilder();
+		for (FontData currentFontData : fontData) {
+			tmp.append(currentFontData.getName());
 			tmp.append(' ');
-			tmp.append(fontData[i].getHeight());
+			tmp.append(currentFontData.getHeight());
 
-			int style = fontData[i].getStyle();
+			int style = currentFontData.getStyle();
 			if ((style & SWT.BOLD) != 0) {
 				tmp.append(' ');
 				tmp.append(RESOURCE_BUNDLE.getString("boldFont")); //$NON-NLS-1$
@@ -1913,21 +1997,16 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			}
 		}
 		fontSampleText = tmp.toString();
-
-		String description = fontDefinition.getDescription();
-		descriptionText.setText(description == null ? "" : description); //$NON-NLS-1$
-
+		descriptionText.setText(fomatDescription(fontDefinition));
 		fontSampler.redraw();
 	}
-	
+
 	public void setCurrentColor(ColorDefinition colorDefinition) {
 		currentColor = colorRegistry.get(colorDefinition.getId());
 		colorSampler.redraw();
-
-		String description = colorDefinition.getDescription();
-		descriptionText.setText(description == null ? "" : description); //$NON-NLS-1$
+		descriptionText.setText(fomatDescription(colorDefinition));
 	}
-	
+
 	private Composite createFontPreviewControl() {
 		fontSampler = new Canvas(previewComposite, SWT.NONE);
 		GridLayout gridLayout = new GridLayout();
@@ -1936,11 +2015,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		fontSampler.setLayout(gridLayout);
 		fontSampler.setLayoutData(new GridData(GridData.FILL_BOTH));
 
-		fontSampler.addPaintListener(new PaintListener() {
-			public void paintControl(PaintEvent e) {
-				if (currentFont != null) // do the font preview
-					paintFontSample(e.gc);
-			}
+		fontSampler.addPaintListener(e -> {
+			if (currentFont != null) // do the font preview
+				paintFontSample(e.gc);
 		});
 		return fontSampler;
 	}
@@ -1978,12 +2055,10 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         gridLayout.marginHeight = 0;
 		colorSampler.setLayout(gridLayout);
 		colorSampler.setLayoutData(new GridData(GridData.FILL_BOTH));
-		
-		colorSampler.addPaintListener(new PaintListener() {
-			public void paintControl(PaintEvent e) {
-				if (currentColor != null) // do the color preview
-					paintColorSample(e.gc);
-			}
+
+		colorSampler.addPaintListener(e -> {
+			if (currentColor != null) // do the color preview
+				paintColorSample(e.gc);
 		});
 		return colorSampler;
 	}
@@ -1998,12 +2073,12 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		int maxHeight = lineHeight * 4;
 		if (clientArea.height > maxHeight)
 			clientArea = new Rectangle(clientArea.x, clientArea.y, clientArea.width, maxHeight);
-		
+
 		String messageTop = RESOURCE_BUNDLE.getString("fontColorSample"); //$NON-NLS-1$
+		String fontColorString = RESOURCE_BUNDLE.getString("fontColorString"); //$NON-NLS-1$
 		RGB rgb = currentColor.getRGB();
-		String messageBottom = MessageFormat
-				.format(
-						"RGB({0}, {1}, {2})", new Object[] { new Integer(rgb.red), new Integer(rgb.green), new Integer(rgb.blue) }); //$NON-NLS-1$
+		String messageBottom = MessageFormat.format(fontColorString, Integer.valueOf(rgb.red),
+				Integer.valueOf(rgb.green), Integer.valueOf(rgb.blue));
 
 		// calculate position of the vertical line
 		int separator = (clientArea.width - 2) / 3;
@@ -2083,5 +2158,71 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		data.widthHint = convertWidthInCharsToPixels(30);
 		descriptionText.setLayoutData(data);
 		myApplyDialogFont(descriptionText);
+	}
+
+	private void publishThemeRegistryModifiedEvent() {
+		if (eventBroker != null) {
+			eventBroker.send(WorkbenchThemeManager.Events.THEME_REGISTRY_MODIFIED, null);
+		}
+	}
+
+	private void refreshAllLabels() {
+		tree.getViewer().refresh(); // refresh all the labels in the tree
+	}
+
+	private boolean isAvailableInCurrentTheme(ThemeElementDefinition definition) {
+		if (definition instanceof ColorDefinition) {
+			ColorDefinition colorDef = (ColorDefinition) definition;
+			RGB value = colorDef.getValue();
+			if ((value == null || value == EMPTY_COLOR_VALUE) && colorDef.getDefaultsTo() == null) {
+				return false;
+			}
+			return colorRegistry.get(definition.getId()) != null;
+		}
+		return true;
+	}
+
+	private String fomatDescription(ThemeElementDefinition definition) {
+		String description = definition.getDescription() != null ? definition.getDescription() : ""; //$NON-NLS-1$
+		if (isAvailableInCurrentTheme(definition)) {
+			return description;
+		}
+		return MessageFormat.format(RESOURCE_BUNDLE.getString("definitionNotAvailInTheme"), //$NON-NLS-1$
+				description).trim();
+	}
+
+	private void updateDefinitionState(ThemeElementDefinition definition, boolean reset) {
+		if (reset) {
+			definition.removeState(ThemeElementDefinition.State.MODIFIED_BY_USER);
+		} else {
+			definition.appendState(ThemeElementDefinition.State.MODIFIED_BY_USER);
+		}
+	}
+
+	private void refreshElement(ThemeElementDefinition definition) {
+		tree.getViewer().refresh(definition);
+		updateTreeSelection(tree.getViewer().getSelection());
+
+		Object newValue = definition instanceof ColorDefinition ?
+			((ColorDefinition) definition).getValue(): ((FontDefinition) definition).getValue();
+		getCascadingTheme().fire(new PropertyChangeEvent(this, definition.getId(), null, newValue));
+	}
+
+	private static class CascadingThemeExt extends CascadingTheme {
+		/**
+		 * @param currentTheme
+		 * @param colorRegistry
+		 * @param fontRegistry
+		 */
+		public CascadingThemeExt(ITheme currentTheme, CascadingColorRegistry colorRegistry,
+				CascadingFontRegistry fontRegistry) {
+			super(currentTheme, colorRegistry, fontRegistry);
+		}
+
+		@Override
+		public void fire(PropertyChangeEvent event) {
+			super.fire(event);
+		}
+
 	}
 }
