@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2011 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -16,12 +16,13 @@ import java.util.Iterator;
 import java.util.Map;
 import java.util.Set;
 import org.eclipse.core.commands.common.EventManager;
-import org.eclipse.core.runtime.Platform;
+import org.eclipse.core.runtime.Adapters;
+import org.eclipse.core.runtime.SafeRunner;
+import org.eclipse.e4.core.contexts.IEclipseContext;
 import org.eclipse.e4.ui.model.application.ui.basic.MPart;
 import org.eclipse.e4.ui.workbench.modeling.ESelectionService;
 import org.eclipse.jface.action.IAction;
 import org.eclipse.jface.util.IPropertyChangeListener;
-import org.eclipse.jface.util.PropertyChangeEvent;
 import org.eclipse.jface.util.SafeRunnable;
 import org.eclipse.jface.viewers.IPostSelectionProvider;
 import org.eclipse.jface.viewers.ISelection;
@@ -44,7 +45,6 @@ import org.eclipse.ui.PartInitException;
 import org.eclipse.ui.SubActionBars;
 import org.eclipse.ui.internal.WorkbenchPage;
 import org.eclipse.ui.internal.WorkbenchPlugin;
-import org.eclipse.ui.internal.util.Util;
 
 /**
  * Abstract superclass of all multi-page workbench views.
@@ -148,33 +148,23 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	/**
 	 * The action bar property listener.
 	 */
-	private IPropertyChangeListener actionBarPropListener = new IPropertyChangeListener() {
-		public void propertyChange(PropertyChangeEvent event) {
-			if (event.getProperty().equals(SubActionBars.P_ACTION_HANDLERS)
-					&& activeRec != null
-					&& event.getSource() == activeRec.subActionBars) {
-				refreshGlobalActionHandlers();
-			}
+	private IPropertyChangeListener actionBarPropListener = event -> {
+		if (event.getProperty().equals(SubActionBars.P_ACTION_HANDLERS)
+				&& activeRec != null
+				&& event.getSource() == activeRec.subActionBars) {
+			refreshGlobalActionHandlers();
 		}
 	};
 
 	/**
 	 * Selection change listener to listen for page selection changes
 	 */
-	private ISelectionChangedListener selectionChangedListener = new ISelectionChangedListener() {
-		public void selectionChanged(SelectionChangedEvent event) {
-			pageSelectionChanged(event);
-		}
-	};
+	private ISelectionChangedListener selectionChangedListener = event -> pageSelectionChanged(event);
 
 	/**
 	 * Selection change listener to listen for page selection changes
 	 */
-	private ISelectionChangedListener postSelectionListener = new ISelectionChangedListener() {
-		public void selectionChanged(SelectionChangedEvent event) {
-			postSelectionChanged(event);
-		}
-	};
+	private ISelectionChangedListener postSelectionListener = event -> postSelectionChanged(event);
 
 	/**
 	 * Selection provider for this view's site
@@ -204,7 +194,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 		/**
 		 * Creates a new page record initialized to the given part and page.
-		 * 
+		 *
 		 * @param part
 		 * @param page
 		 */
@@ -224,7 +214,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	private static class SelectionManager extends EventManager {
 		/**
-		 * 
+		 *
 		 * @param listener
 		 *            listen
 		 */
@@ -234,7 +224,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 		}
 
 		/**
-		 * 
+		 *
 		 * @param listener
 		 *            listen
 		 */
@@ -244,18 +234,18 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 		}
 
 		/**
-		 * 
+		 *
 		 * @param event
 		 *            the event
 		 */
 		public void selectionChanged(final SelectionChangedEvent event) {
 			// pass on the notification to listeners
-			Object[] listeners = getListeners();
-			for (int i = 0; i < listeners.length; ++i) {
-				final ISelectionChangedListener l = (ISelectionChangedListener) listeners[i];
-				Platform.run(new SafeRunnable() {
+			for (Object listener : getListeners()) {
+				final ISelectionChangedListener selectionChangedListener = (ISelectionChangedListener) listener;
+				SafeRunner.run(new SafeRunnable() {
+					@Override
 					public void run() {
-						l.selectionChanged(event);
+						selectionChangedListener.selectionChanged(event);
 					}
 				});
 			}
@@ -273,17 +263,13 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 		private SelectionManager fPostSelectionListeners = new SelectionManager();
 
-		/*
-		 * (non-Javadoc) Method declared on ISelectionProvider.
-		 */
+		@Override
 		public void addSelectionChangedListener(
 				ISelectionChangedListener listener) {
 			fSelectionListener.addSelectionChangedListener(listener);
 		}
 
-		/*
-		 * (non-Javadoc) Method declared on ISelectionProvider.
-		 */
+		@Override
 		public ISelection getSelection() {
 			// get the selection provider from the current page
 			IPage currentPage = getCurrentPage();
@@ -303,9 +289,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 			return StructuredSelection.EMPTY;
 		}
 
-		/*
-		 * (non-Javadoc) Method declared on ISelectionProvider.
-		 */
+		@Override
 		public void removeSelectionChangedListener(
 				ISelectionChangedListener listener) {
 			fSelectionListener.removeSelectionChangedListener(listener);
@@ -314,7 +298,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 		/**
 		 * The selection has changed. Process the event, notifying selection
 		 * listeners and post selection listeners.
-		 * 
+		 *
 		 * @param event
 		 *            the change
 		 */
@@ -324,17 +308,15 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 		/**
 		 * The selection has changed, so notify any post-selection listeners.
-		 * 
+		 *
 		 * @param event
 		 *            the change
 		 */
 		public void postSelectionChanged(final SelectionChangedEvent event) {
-			fPostSelectionListeners.selectionChanged(event);			
+			fPostSelectionListeners.selectionChanged(event);
 		}
 
-		/*
-		 * (non-Javadoc) Method declared on ISelectionProvider.
-		 */
+		@Override
 		public void setSelection(ISelection selection) {
 			// get the selection provider from the current page
 			IPage currentPage = getCurrentPage();
@@ -354,21 +336,13 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 			}
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.IPostSelectionProvider#addPostSelectionChangedListener(org.eclipse.jface.viewers.ISelectionChangedListener)
-		 */
+		@Override
 		public void addPostSelectionChangedListener(
 				ISelectionChangedListener listener) {
 			fPostSelectionListeners.addSelectionChangedListener(listener);
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.IPostSelectionProvider#removePostSelectionChangedListener(org.eclipse.jface.viewers.ISelectionChangedListener)
-		 */
+		@Override
 		public void removePostSelectionChangedListener(
 				ISelectionChangedListener listener) {
 			fPostSelectionListeners.removeSelectionChangedListener(listener);
@@ -392,7 +366,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <code>IPageBookViewPage</code>) before calling createControl on the
 	 * page.
 	 * </p>
-	 * 
+	 *
 	 * @param book
 	 *            the pagebook control
 	 * @return the default page
@@ -402,7 +376,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	/**
 	 * Creates a page for a given part. Adds it to the pagebook but does not
 	 * show it.
-	 * 
+	 *
 	 * @param part
 	 *            The part we are making a page for.
 	 * @return IWorkbenchPart
@@ -418,7 +392,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Prepares the page in the given page rec for use in this view.
-	 * 
+	 *
 	 * @param rec
 	 */
 	private void preparePage(PageRec rec) {
@@ -440,14 +414,14 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 			// for backward compability with IPage
 			rec.page.setActionBars(rec.subActionBars);
 
-			count = new Integer(0);
+			count = Integer.valueOf(0);
 		} else {
 			site = (IPageSite) mapPageToSite.get(rec.page);
 			rec.subActionBars = (SubActionBars) site.getActionBars();
 			count = ((Integer) mapPageToNumRecs.get(rec.page));
 		}
 
-		mapPageToNumRecs.put(rec.page, new Integer(count.intValue() + 1));
+		mapPageToNumRecs.put(rec.page, Integer.valueOf(count.intValue() + 1));
 	}
 
 	/**
@@ -459,7 +433,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <p>
 	 * Subclasses may override
 	 * </p>
-	 * 
+	 *
 	 * @param page
 	 *            The page to initialize
 	 */
@@ -476,6 +450,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <code>IWorkbenchPart</code> method creates a <code>PageBook</code>
 	 * control with its default page showing. Subclasses may extend.
 	 */
+	@Override
 	public void createPartControl(Composite parent) {
 
 		// Create the page book.
@@ -499,6 +474,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <code>IWorkbenchPart</code> method cleans up all the pages. Subclasses
 	 * may extend.
 	 */
+	@Override
 	public void dispose() {
 		// stop listening to part activation
 		getSite().getPage().removePartListener(partListener);
@@ -508,23 +484,14 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 		if (defaultPageRec != null) {
 			// check for null since the default page may not have
 			// been created (ex. perspective never visible)
-			defaultPageRec.page.dispose();
-			Object site = mapPageToSite.remove(defaultPageRec.page);
-			mapPageToNumRecs.remove(defaultPageRec.page);
-			if (defaultPageRec.subActionBars != null) {
-				defaultPageRec.subActionBars.dispose();
-			}
-
-			if (site instanceof PageSite) {
-				((PageSite) site).dispose();
-			}
+			removePage(defaultPageRec, false);
 			defaultPageRec = null;
 		}
 		Map clone = (Map) ((HashMap) mapPartToRec).clone();
 		Iterator itr = clone.values().iterator();
 		while (itr.hasNext()) {
 			PageRec rec = (PageRec) itr.next();
-			removePage(rec);
+			removePage(rec, true);
 		}
 
 		// Run super.
@@ -543,7 +510,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <code>IPageBookViewPage</code>) before calling createControl on the
 	 * page.
 	 * </p>
-	 * 
+	 *
 	 * @param part
 	 *            the input part
 	 * @return the record describing a new page for this view
@@ -557,7 +524,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <p>
 	 * Subclasses must implement this method.
 	 * </p>
-	 * 
+	 *
 	 * @param part
 	 *            the input part
 	 * @param pageRecord
@@ -569,7 +536,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Returns true if the page has already been created.
-	 * 
+	 *
 	 * @param page
 	 *            the page to test
 	 * @return true if this page has already been created.
@@ -583,10 +550,11 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <code>IAdaptable</code> method delegates to the current page, if it
 	 * implements <code>IAdaptable</code>.
 	 */
-	public Object getAdapter(Class key) {
+	@Override
+	public <T> T getAdapter(Class<T> key) {
 		// delegate to the current page, if supported
 		IPage page = getCurrentPage();
-		Object adapter = Util.getAdapter(page, key);
+		T adapter = Adapters.adapt(page, key);
 		if (adapter != null) {
 			return adapter;
 		}
@@ -608,14 +576,14 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * The default implementation returns <code>null</code>. Subclasses may
 	 * override.
 	 * </p>
-	 * 
+	 *
 	 * @param adapter
 	 *            the adapter class to look up
 	 * @return a object castable to the given class, or <code>null</code> if
 	 *         this object does not have an adapter for the given class
 	 * @since 3.2
 	 */
-	protected Object getViewAdapter(Class adapter) {
+	protected <T> T getViewAdapter(Class<T> adapter) {
 		return null;
 	}
 
@@ -633,14 +601,14 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <p>
 	 * Subclasses must implement this method.
 	 * </p>
-	 * 
+	 *
 	 * @return the active important part, or <code>null</code> if none
 	 */
 	protected abstract IWorkbenchPart getBootstrapPart();
 
 	/**
 	 * Returns the part which contributed the current page to this view.
-	 * 
+	 *
 	 * @return the part which contributed the current page or <code>null</code>
 	 *         if no part contributed the current page
 	 */
@@ -654,7 +622,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	/**
 	 * Returns the currently visible page for this view or <code>null</code>
 	 * if no page is currently visible.
-	 * 
+	 *
 	 * @return the currently visible page
 	 */
 	public IPage getCurrentPage() {
@@ -666,7 +634,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Returns the view site for the given page of this view.
-	 * 
+	 *
 	 * @param page
 	 *            the page
 	 * @return the corresponding site, or <code>null</code> if not found
@@ -677,7 +645,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Returns the default page for this view.
-	 * 
+	 *
 	 * @return the default page
 	 */
 	public IPage getDefaultPage() {
@@ -686,7 +654,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Returns the pagebook control for this view.
-	 * 
+	 *
 	 * @return the pagebook control, or <code>null</code> if not initialized
 	 */
 	protected PageBook getPageBook() {
@@ -695,7 +663,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Returns the page record for the given part.
-	 * 
+	 *
 	 * @param part
 	 *            the part
 	 * @return the corresponding page record, or <code>null</code> if not
@@ -707,7 +675,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Returns the page record for the given page of this view.
-	 * 
+	 *
 	 * @param page
 	 *            the page
 	 * @return the corresponding page record, or <code>null</code> if not
@@ -729,7 +697,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <p>
 	 * Subclasses must implement this method.
 	 * </p>
-	 * 
+	 *
 	 * @param part
 	 *            the input part
 	 * @return <code>true</code> if the part is relevant, and
@@ -737,9 +705,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 */
 	protected abstract boolean isImportant(IWorkbenchPart part);
 
-	/*
-	 * (non-Javadoc) Method declared on IViewPart.
-	 */
+	@Override
 	public void init(IViewSite site) throws PartInitException {
 		site.setSelectionProvider(selectionProvider);
 		super.init(site);
@@ -750,24 +716,35 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <code>IPartListener</code> method shows the page when the given part is
 	 * activated. Subclasses may extend.
 	 */
+	@Override
 	public void partActivated(IWorkbenchPart part) {
 		// Is this an important part? If not just return.
-		if (!isImportant(part)) {
-			return;
-		}
-		hiddenPart = null;
+		if (isImportant(part)) {
+			hiddenPart = null;
 
-		// Create a page for the part.
-		PageRec rec = getPageRec(part);
-		if (rec == null) {
-			rec = createPage(part);
+			// Create a page for the part.
+			PageRec rec = getPageRec(part);
+			if (rec == null) {
+				rec = createPage(part);
+			}
+
+			// Show the page.
+			if (rec != null) {
+				showPageRec(rec);
+			} else {
+				showPageRec(defaultPageRec);
+			}
 		}
 
-		// Show the page.
-		if (rec != null) {
-			showPageRec(rec);
-		} else {
-			showPageRec(defaultPageRec);
+		// If *we* are activating then activate the context
+		if (part == this) {
+			PageSite pageSite = getPageSite(getCurrentPage());
+			if (pageSite != null) {
+				IEclipseContext pageContext = pageSite.getSiteContext();
+				if (pageContext != null) {
+					pageContext.activate();
+				}
+			}
 		}
 	}
 
@@ -775,6 +752,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * The <code>PageBookView</code> implementation of this
 	 * <code>IPartListener</code> method does nothing. Subclasses may extend.
 	 */
+	@Override
 	public void partBroughtToTop(IWorkbenchPart part) {
 		// Do nothing by default
 	}
@@ -784,6 +762,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <code>IPartListener</code> method deal with the closing of the active
 	 * part. Subclasses may extend.
 	 */
+	@Override
 	public void partClosed(IWorkbenchPart part) {
 		// Update the active part.
 		if (activeRec != null && activeRec.part == part) {
@@ -793,7 +772,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 		// Find and remove the part page.
 		PageRec rec = getPageRec(part);
 		if (rec != null) {
-			removePage(rec);
+			removePage(rec, true);
 		}
 		if (part == hiddenPart) {
 			hiddenPart = null;
@@ -804,15 +783,12 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * The <code>PageBookView</code> implementation of this
 	 * <code>IPartListener</code> method does nothing. Subclasses may extend.
 	 */
+	@Override
 	public void partDeactivated(IWorkbenchPart part) {
 		// Do nothing.
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.IPartListener#partOpened(org.eclipse.ui.IWorkbenchPart)
-	 */
+	@Override
 	public void partOpened(IWorkbenchPart part) {
 		// Do nothing by default.
 	}
@@ -842,10 +818,13 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	/**
 	 * Removes a page record. If it is the last reference to the page dispose of
 	 * it - otherwise just decrement the reference count.
-	 * 
+	 *
 	 * @param rec
+	 * @param doDestroy
+	 *            if <code>true</code>, also call
+	 *            {@link #doDestroyPage(IWorkbenchPart, PageRec)}
 	 */
-	private void removePage(PageRec rec) {
+	private void removePage(PageRec rec, boolean doDestroy) {
 		mapPartToRec.remove(rec.part);
 
 		int newCount = ((Integer) mapPageToNumRecs.get(rec.page)).intValue() - 1;
@@ -865,8 +844,10 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 				control.dispose();
 			}
 
-			// free the page
-			doDestroyPage(rec.part, rec);
+			if (doDestroy) {
+				// free the page
+				doDestroyPage(rec.part, rec);
+			}
 
 			if (rec.subActionBars != null) {
 				rec.subActionBars.dispose();
@@ -876,13 +857,11 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 				((PageSite) site).dispose();
 			}
 		} else {
-			mapPageToNumRecs.put(rec.page, new Integer(newCount));
+			mapPageToNumRecs.put(rec.page, Integer.valueOf(newCount));
 		}
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbenchPart.
-	 */
+	@Override
 	public void setFocus() {
 		// first set focus on the page book, in case the page
 		// doesn't properly handle setFocus
@@ -897,7 +876,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Handle page selection changes.
-	 * 
+	 *
 	 * @param event
 	 */
 	private void pageSelectionChanged(SelectionChangedEvent event) {
@@ -911,7 +890,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Handle page selection changes.
-	 * 
+	 *
 	 * @param event
 	 */
 	private void postSelectionChanged(SelectionChangedEvent event) {
@@ -941,7 +920,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * pagebook control to show the given page's control, and records that the
 	 * given page is now current. Subclasses may extend.
 	 * </p>
-	 * 
+	 *
 	 * @param pageRec
 	 *            the page record containing the page to show
 	 */
@@ -1031,14 +1010,15 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Returns the selectionProvider for this page book view.
-	 * 
+	 *
 	 * @return a SelectionProvider
 	 */
 	protected SelectionProvider getSelectionProvider() {
 		return selectionProvider;
 	}
-	
+
 	private IPartListener2 partListener = new IPartListener2() {
+		@Override
 		public void partActivated(IWorkbenchPartReference partRef) {
 			if (partRef == null) {
 				WorkbenchPlugin.log("partRef is null in PageBookView partActivated"); //$NON-NLS-1$
@@ -1048,29 +1028,36 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 			PageBookView.this.partActivated(part);
 		}
 
+		@Override
 		public void partBroughtToTop(IWorkbenchPartReference partRef) {
 			PageBookView.this.partBroughtToTop(partRef.getPart(false));
 		}
 
+		@Override
 		public void partClosed(IWorkbenchPartReference partRef) {
 			PageBookView.this.partClosed(partRef.getPart(false));
 		}
 
+		@Override
 		public void partDeactivated(IWorkbenchPartReference partRef) {
 			PageBookView.this.partDeactivated(partRef.getPart(false));
 		}
 
+		@Override
 		public void partHidden(IWorkbenchPartReference partRef) {
 			PageBookView.this.partHidden(partRef.getPart(false));
 		}
 
+		@Override
 		public void partInputChanged(IWorkbenchPartReference partRef) {
 		}
 
+		@Override
 		public void partOpened(IWorkbenchPartReference partRef) {
 			PageBookView.this.partOpened(partRef.getPart(false));
 		}
 
+		@Override
 		public void partVisible(IWorkbenchPartReference partRef) {
 			PageBookView.this.partVisible(partRef.getPart(false));
 		}
@@ -1113,8 +1100,8 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 		if (viewStack == null) {
 			return false;
 		}
-		for (int i = 0; i < viewStack.length; i++) {
-			if (viewStack[i] == part) {
+		for (IViewPart viewPart : viewStack) {
+			if (viewPart == part) {
 				return true;
 			}
 		}
@@ -1123,7 +1110,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Make sure that the part is not considered if it is hidden.
-	 * 
+	 *
 	 * @param part
 	 * @since 3.5
 	 */
