@@ -23,11 +23,7 @@ public class StringToCharacterConverterTest extends TestCase {
 	private StringToCharacterConverter converter;
 	private StringToCharacterConverter primitiveConverter;
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see junit.framework.TestCase#setUp()
-	 */
+	@Override
 	protected void setUp() throws Exception {
 		super.setUp();
 		converter = StringToCharacterConverter.toCharacter(false);
@@ -80,7 +76,7 @@ public class StringToCharacterConverterTest extends TestCase {
 	public void testThrowsIllegalArgumentExceptionIfAskedToConvertNonString()
 			throws Exception {
 		try {
-			converter.convert(new Integer(1));
+			converter.convert(Integer.valueOf(1));
 			fail("exception should have been thrown");
 		} catch (IllegalArgumentException e) {
 		}
