@@ -21,7 +21,7 @@ import org.eclipse.core.databinding.observable.value.IObservableValue;
 import org.eclipse.jface.databinding.conformance.ObservableDelegateTest;
 import org.eclipse.jface.databinding.conformance.delegate.AbstractObservableValueContractDelegate;
 import org.eclipse.jface.databinding.conformance.swt.SWTMutableObservableValueContractTest;
-import org.eclipse.jface.databinding.swt.SWTObservables;
+import org.eclipse.jface.databinding.swt.DisplayRealm;
 import org.eclipse.jface.databinding.swt.WidgetProperties;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.widgets.Display;
@@ -46,6 +46,7 @@ public class ScaleObservableValueSelectionTest extends ObservableDelegateTest {
 		super(testName, new Delegate());
 	}
 
+	@Override
 	protected void setUp() throws Exception {
 		super.setUp();
 
@@ -54,20 +55,21 @@ public class ScaleObservableValueSelectionTest extends ObservableDelegateTest {
 		scale = delegate.scale;
 	}
 
+	@Override
 	protected IObservable doCreateObservable() {
 		return getObservableContractDelegate().createObservable(
-				SWTObservables.getRealm(Display.getDefault()));
+				DisplayRealm.getRealm(Display.getDefault()));
 	}
 
 	public void testGetValue() throws Exception {
 		int value = 100;
 		scale.setSelection(value);
-		assertEquals(new Integer(value), observable.getValue());
+		assertEquals(Integer.valueOf(value), observable.getValue());
 	}
 
 	public void testSetValue() throws Exception {
 		int value = 100;
-		observable.setValue(new Integer(value));
+		observable.setValue(Integer.valueOf(value));
 		assertEquals(value, scale.getSelection());
 	}
 
@@ -86,20 +88,24 @@ public class ScaleObservableValueSelectionTest extends ObservableDelegateTest {
 
 		Scale scale;
 
+		@Override
 		public void setUp() {
 			shell = new Shell();
 			scale = new Scale(shell, SWT.NONE);
 			scale.setMaximum(1000);
 		}
 
+		@Override
 		public void tearDown() {
 			shell.dispose();
 		}
 
+		@Override
 		public IObservableValue createObservableValue(Realm realm) {
 			return WidgetProperties.selection().observe(realm, scale);
 		}
 
+		@Override
 		public void change(IObservable observable) {
 			scale
 					.setSelection(createIntegerValue(
@@ -107,16 +113,18 @@ public class ScaleObservableValueSelectionTest extends ObservableDelegateTest {
 			scale.notifyListeners(SWT.Selection, null);
 		}
 
+		@Override
 		public Object getValueType(IObservableValue observable) {
 			return Integer.TYPE;
 		}
 
+		@Override
 		public Object createValue(IObservableValue observable) {
 			return createIntegerValue(observable);
 		}
 
 		private Integer createIntegerValue(IObservableValue observable) {
-			return new Integer(((Integer) observable.getValue()).intValue() + 1);
+			return Integer.valueOf(((Integer) observable.getValue()).intValue() + 1);
 		}
 	}
 }
