@@ -21,7 +21,7 @@ import org.eclipse.core.databinding.observable.value.IObservableValue;
 import org.eclipse.jface.databinding.conformance.ObservableDelegateTest;
 import org.eclipse.jface.databinding.conformance.delegate.AbstractObservableValueContractDelegate;
 import org.eclipse.jface.databinding.conformance.swt.SWTMutableObservableValueContractTest;
-import org.eclipse.jface.databinding.swt.SWTObservables;
+import org.eclipse.jface.databinding.swt.DisplayRealm;
 import org.eclipse.jface.databinding.swt.WidgetProperties;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.widgets.Display;
@@ -46,6 +46,7 @@ public class SpinnerObservableValueMinTest extends ObservableDelegateTest {
 		super(testName, new Delegate());
 	}
 
+	@Override
 	protected void setUp() throws Exception {
 		super.setUp();
 
@@ -54,20 +55,21 @@ public class SpinnerObservableValueMinTest extends ObservableDelegateTest {
 		spinner = delegate.spinner;
 	}
 
+	@Override
 	protected IObservable doCreateObservable() {
 		return getObservableContractDelegate().createObservable(
-				SWTObservables.getRealm(Display.getDefault()));
+				DisplayRealm.getRealm(Display.getDefault()));
 	}
 
 	public void testGetValue() throws Exception {
 		int min = 100;
 		spinner.setMinimum(min);
-		assertEquals(new Integer(min), observable.getValue());
+		assertEquals(Integer.valueOf(min), observable.getValue());
 	}
 
 	public void testSetValue() throws Exception {
 		int min = 100;
-		observable.setValue(new Integer(min));
+		observable.setValue(Integer.valueOf(min));
 		assertEquals(min, spinner.getMinimum());
 	}
 
@@ -86,35 +88,41 @@ public class SpinnerObservableValueMinTest extends ObservableDelegateTest {
 
 		Spinner spinner;
 
+		@Override
 		public void setUp() {
 			shell = new Shell();
 			spinner = new Spinner(shell, SWT.NONE);
 			spinner.setMaximum(1000);
 		}
 
+		@Override
 		public void tearDown() {
 			shell.dispose();
 		}
 
+		@Override
 		public IObservableValue createObservableValue(Realm realm) {
 			return WidgetProperties.minimum().observe(realm, spinner);
 		}
 
+		@Override
 		public void change(IObservable observable) {
 			IObservableValue observableValue = (IObservableValue) observable;
 			observableValue.setValue(createValue(observableValue));
 		}
 
+		@Override
 		public Object getValueType(IObservableValue observable) {
 			return Integer.TYPE;
 		}
 
+		@Override
 		public Object createValue(IObservableValue observable) {
 			return createIntegerValue(observable);
 		}
 
 		private Integer createIntegerValue(IObservableValue observable) {
-			return new Integer(((Integer) observable.getValue()).intValue() + 1);
+			return Integer.valueOf(((Integer) observable.getValue()).intValue() + 1);
 		}
 	}
 }
