@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006 IBM Corporation and others.
+ * Copyright (c) 2006, 2017 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -28,9 +28,9 @@ import org.eclipse.ui.texteditor.MarkerUtilities;
 
 /**
  * The ProblemsViewPerformanceTest is a test of population of the problems view.
- * 
+ *
  * @since 3.2
- * 
+ *
  */
 public class ProblemsViewPerformanceTest extends BasicPerformanceTest {
 
@@ -40,7 +40,7 @@ public class ProblemsViewPerformanceTest extends BasicPerformanceTest {
 
 	/**
 	 * Create a new instance of the receiver.
-	 * 
+	 *
 	 * @param testName
 	 */
 	public ProblemsViewPerformanceTest(String testName) {
@@ -114,9 +114,9 @@ public class ProblemsViewPerformanceTest extends BasicPerformanceTest {
 	private void createMarkers() {
 		try {
 			IWorkspaceRoot root = ResourcesPlugin.getWorkspace().getRoot();
-			Map attribs = new HashMap();
+			Map<String, Object> attribs = new HashMap<>();
 			for (int i = 0; i < 1000; i++) {
-				attribs.put(IMarker.SEVERITY, new Integer(
+				attribs.put(IMarker.SEVERITY, Integer.valueOf(
 						IMarker.SEVERITY_ERROR));
 				attribs.put(IMarker.MESSAGE, "this is a test " + i);
 				MarkerUtilities.createMarker(root, attribs, IMarker.PROBLEM);
