@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2006 IBM Corporation and others.
+ * Copyright (c) 2000, 2017 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -18,21 +18,18 @@ import org.eclipse.core.resources.IFile;
 import org.eclipse.core.resources.IResource;
 import org.eclipse.core.resources.IWorkspace;
 import org.eclipse.core.resources.ResourcesPlugin;
+import org.eclipse.core.runtime.Adapters;
 import org.eclipse.core.runtime.IAdaptable;
 import org.eclipse.core.runtime.IPath;
-import org.eclipse.core.runtime.Platform;
-import org.eclipse.jface.action.IMenuListener;
 import org.eclipse.jface.action.IMenuManager;
 import org.eclipse.jface.action.MenuManager;
 import org.eclipse.jface.dialogs.IDialogSettings;
 import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.viewers.DecoratingLabelProvider;
 import org.eclipse.jface.viewers.DoubleClickEvent;
-import org.eclipse.jface.viewers.IDoubleClickListener;
 import org.eclipse.jface.viewers.ILabelDecorator;
 import org.eclipse.jface.viewers.ILabelProvider;
 import org.eclipse.jface.viewers.ISelection;
-import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
@@ -55,8 +52,8 @@ import org.eclipse.ui.IViewSite;
 import org.eclipse.ui.IWorkbenchPage;
 import org.eclipse.ui.IWorkbenchPart;
 import org.eclipse.ui.PartInitException;
-import org.eclipse.ui.PlatformUI;
 import org.eclipse.ui.actions.ActionContext;
+import org.eclipse.ui.internal.WorkbenchPlugin;
 import org.eclipse.ui.internal.views.navigator.ResourceNavigatorMessages;
 import org.eclipse.ui.part.DrillDownAdapter;
 import org.eclipse.ui.part.ViewPart;
@@ -77,7 +74,7 @@ public class AdaptedResourceNavigator extends ViewPart {
 
     /**
      * Preference name constant for linking editor switching to navigator selection.
-     * 
+     *
      * [Issue: We're cheating here, by referencing a preference which is actually defined
      * on the Workbench's preference page.  The Navigator should eventually have its own
      * preference page with this preference on it, instead of on the Workbench's.
@@ -86,21 +83,27 @@ public class AdaptedResourceNavigator extends ViewPart {
     private static final String LINK_NAVIGATOR_TO_EDITOR = "LINK_NAVIGATOR_TO_EDITOR"; //$NON-NLS-1$
 
     private IPartListener partListener = new IPartListener() {
-        public void partActivated(IWorkbenchPart part) {
-            if (part instanceof IEditorPart)
-                editorActivated((IEditorPart) part);
+        @Override
+		public void partActivated(IWorkbenchPart part) {
+            if (part instanceof IEditorPart) {
+				editorActivated((IEditorPart) part);
+			}
         }
 
-        public void partBroughtToTop(IWorkbenchPart part) {
+        @Override
+		public void partBroughtToTop(IWorkbenchPart part) {
         }
 
-        public void partClosed(IWorkbenchPart part) {
+        @Override
+		public void partClosed(IWorkbenchPart part) {
         }
 
-        public void partDeactivated(IWorkbenchPart part) {
+        @Override
+		public void partDeactivated(IWorkbenchPart part) {
         }
 
-        public void partOpened(IWorkbenchPart part) {
+        @Override
+		public void partOpened(IWorkbenchPart part) {
         }
     };
 
@@ -111,7 +114,9 @@ public class AdaptedResourceNavigator extends ViewPart {
         IDialogSettings workbenchSettings = getPlugin().getDialogSettings();
         settings = workbenchSettings.getSection("ResourceNavigator"); //$NON-NLS-1$
         if (settings == null)
-            settings = workbenchSettings.addNewSection("ResourceNavigator"); //$NON-NLS-1$
+		 {
+			settings = workbenchSettings.addNewSection("ResourceNavigator"); //$NON-NLS-1$
+		}
     }
 
     /**
@@ -119,20 +124,12 @@ public class AdaptedResourceNavigator extends ViewPart {
      * where the elements are resources.
      */
     StructuredSelection convertSelection(ISelection selection) {
-        ArrayList list = new ArrayList();
+		ArrayList<IResource> list = new ArrayList<>();
         if (selection instanceof IStructuredSelection) {
             IStructuredSelection ssel = (IStructuredSelection) selection;
-            for (Iterator i = ssel.iterator(); i.hasNext();) {
+			for (Iterator<?> i = ssel.iterator(); i.hasNext();) {
                 Object o = i.next();
-                IResource resource = null;
-                if (o instanceof IResource) {
-                    resource = (IResource) o;
-                } else {
-                    if (o instanceof IAdaptable) {
-                        resource = (IResource) ((IAdaptable) o)
-                                .getAdapter(IResource.class);
-                    }
-                }
+				IResource resource = Adapters.adapt(o, IResource.class);
                 if (resource != null) {
                     list.add(resource);
                 }
@@ -141,10 +138,8 @@ public class AdaptedResourceNavigator extends ViewPart {
         return new StructuredSelection(list);
     }
 
-    /* (non-Javadoc)
-     * Method declared on IWorkbenchPart.
-     */
-    public void createPartControl(Composite parent) {
+    @Override
+	public void createPartControl(Composite parent) {
         viewer = new TreeViewer(parent, SWT.MULTI | SWT.H_SCROLL | SWT.V_SCROLL);
         //	initDrillDownAdapter(viewer);
         viewer.setUseHashlookup(true);
@@ -160,11 +155,7 @@ public class AdaptedResourceNavigator extends ViewPart {
 
         MenuManager menuMgr = new MenuManager("#PopupMenu"); //$NON-NLS-1$
         menuMgr.setRemoveAllWhenShown(true);
-        menuMgr.addMenuListener(new IMenuListener() {
-            public void menuAboutToShow(IMenuManager manager) {
-                AdaptedResourceNavigator.this.fillContextMenu(manager);
-            }
-        });
+		menuMgr.addMenuListener(manager1 -> AdaptedResourceNavigator.this.fillContextMenu(manager1));
         Menu menu = menuMgr.createContextMenu(viewer.getTree());
         viewer.getTree().setMenu(menu);
         getSite().registerContextMenu(menuMgr, viewer);
@@ -173,26 +164,19 @@ public class AdaptedResourceNavigator extends ViewPart {
 
         // Update the global action enable state to match
         // the current selection.
-        IStructuredSelection selection = (IStructuredSelection) viewer
-                .getSelection();
+		IStructuredSelection selection = viewer.getStructuredSelection();
         actionGroup.updateGlobalActions(selection);
 
-        viewer.addSelectionChangedListener(new ISelectionChangedListener() {
-            public void selectionChanged(SelectionChangedEvent event) {
-                handleSelectionChanged(event);
-            }
-        });
-        viewer.addDoubleClickListener(new IDoubleClickListener() {
-            public void doubleClick(DoubleClickEvent event) {
-                handleDoubleClick(event);
-            }
-        });
+		viewer.addSelectionChangedListener(event -> handleSelectionChanged(event));
+		viewer.addDoubleClickListener(event -> handleDoubleClick(event));
         viewer.getControl().addKeyListener(new KeyListener() {
-            public void keyPressed(KeyEvent event) {
+            @Override
+			public void keyPressed(KeyEvent event) {
                 handleKeyPressed(event);
             }
 
-            public void keyReleased(KeyEvent event) {
+            @Override
+			public void keyReleased(KeyEvent event) {
                 handleKeyReleased(event);
             }
         });
@@ -203,15 +187,14 @@ public class AdaptedResourceNavigator extends ViewPart {
 
         getSite().getPage().addPartListener(partListener);
 
-        if (memento != null)
-            restoreState(memento);
+        if (memento != null) {
+			restoreState(memento);
+		}
         memento = null;
     }
 
-    /* (non-Javadoc)
-     * Method declared on IWorkbenchPart.
-     */
-    public void dispose() {
+    @Override
+	public void dispose() {
         getSite().getPage().removePartListener(partListener);
         super.dispose();
     }
@@ -221,8 +204,9 @@ public class AdaptedResourceNavigator extends ViewPart {
      * to be the editor's input, if linking is enabled.
      */
     void editorActivated(IEditorPart editor) {
-        if (!isLinkingEnabled())
-            return;
+        if (!isLinkingEnabled()) {
+			return;
+		}
 
         IEditorInput input = editor.getEditorInput();
         if (input instanceof IFileEditorInput) {
@@ -244,7 +228,7 @@ public class AdaptedResourceNavigator extends ViewPart {
         actionGroup.fillContextMenu(menu);
     }
 
-    /** 
+    /**
      * Returns the initial input for the viewer.
      * Tries to convert the input to a resource, either directly or via IAdaptable.
      * If the resource is a container, it uses that.
@@ -253,12 +237,7 @@ public class AdaptedResourceNavigator extends ViewPart {
      */
     IContainer getInitialInput() {
         IAdaptable input = getSite().getPage().getInput();
-        IResource resource = null;
-        if (input instanceof IResource) {
-            resource = (IResource) input;
-        } else {
-            resource = (IResource) input.getAdapter(IResource.class);
-        }
+		IResource resource = Adapters.adapt(input, IResource.class);
         if (resource != null) {
             switch (resource.getType()) {
             case IResource.FILE:
@@ -279,7 +258,7 @@ public class AdaptedResourceNavigator extends ViewPart {
      * Returns the navigator's plugin.
      */
     public AbstractUIPlugin getPlugin() {
-        return (AbstractUIPlugin) Platform.getPlugin(PlatformUI.PLUGIN_ID);
+		return WorkbenchPlugin.getDefault();
     }
 
     /**
@@ -317,12 +296,11 @@ public class AdaptedResourceNavigator extends ViewPart {
             Object o = selection.getFirstElement();
             if (o instanceof IResource) {
                 return ((IResource) o).getFullPath().makeRelative().toString();
-            } else {
-                return ResourceNavigatorMessages.ResourceNavigator_oneItemSelected;
             }
+			return ResourceNavigatorMessages.ResourceNavigator_oneItemSelected;
         }
         if (selection.size() > 1) {
-            return NLS.bind(ResourceNavigatorMessages.ResourceNavigator_statusLine, new Integer(selection.size()));
+            return NLS.bind(ResourceNavigatorMessages.ResourceNavigator_statusLine, Integer.valueOf(selection.size()));
         }
         return ""; //$NON-NLS-1$
     }
@@ -335,13 +313,11 @@ public class AdaptedResourceNavigator extends ViewPart {
             IPath path = ((IResource) element).getFullPath();
             if (path.isRoot()) {
                 return ResourceNavigatorMessages.ResourceManager_toolTip;
-            } else {
-                return path.makeRelative().toString();
             }
-        } else {
-            return ((ILabelProvider) getViewer().getLabelProvider())
-                    .getText(element);
+			return path.makeRelative().toString();
         }
+		return ((ILabelProvider) getViewer().getLabelProvider())
+		        .getText(element);
     }
 
     /**
@@ -351,7 +327,7 @@ public class AdaptedResourceNavigator extends ViewPart {
      */
     protected void handleDoubleClick(DoubleClickEvent event) {
         IStructuredSelection selection = (IStructuredSelection) event
-                .getSelection();
+				.getSelection();
         Object element = selection.getFirstElement();
 
         // 1GBZIA0: ITPUI:WIN2000 - Double-clicking in navigator should expand/collapse containers
@@ -389,10 +365,8 @@ public class AdaptedResourceNavigator extends ViewPart {
 
     }
 
-    /* (non-Javadoc)
-     * Method declared on IViewPart.
-     */
-    public void init(IViewSite site, IMemento memento) throws PartInitException {
+    @Override
+	public void init(IViewSite site, IMemento memento) throws PartInitException {
         super.init(site, memento);
         this.memento = memento;
     }
@@ -404,7 +378,8 @@ public class AdaptedResourceNavigator extends ViewPart {
         DrillDownAdapter drillDownAdapter = new DrillDownAdapter(viewer) {
             // need to update title whenever input changes;
             // updateNavigationButtons is called whenever any of the drill down buttons are used
-            protected void updateNavigationButtons() {
+            @Override
+			protected void updateNavigationButtons() {
                 super.updateNavigationButtons();
                 updateTitle();
             }
@@ -427,16 +402,17 @@ public class AdaptedResourceNavigator extends ViewPart {
      * @since 2.0
      */
     protected void linkToEditor(IStructuredSelection selection) {
-        if (!isLinkingEnabled())
-            return;
+        if (!isLinkingEnabled()) {
+			return;
+		}
 
         Object obj = selection.getFirstElement();
         if (obj instanceof IFile && selection.size() == 1) {
             IFile file = (IFile) obj;
             IWorkbenchPage page = getSite().getPage();
             IEditorReference editorArray[] = page.getEditorReferences();
-            for (int i = 0; i < editorArray.length; ++i) {
-                IEditorPart editor = editorArray[i].getEditor(true);
+            for (IEditorReference element : editorArray) {
+                IEditorPart editor = element.getEditor(true);
                 IEditorInput input = editor.getEditorInput();
                 if (input instanceof IFileEditorInput
                         && file.equals(((IFileEditorInput) input).getFile())) {
@@ -463,7 +439,8 @@ public class AdaptedResourceNavigator extends ViewPart {
     protected void restoreState(IMemento memento) {
     }
 
-    public void saveState(IMemento memento) {
+    @Override
+	public void saveState(IMemento memento) {
     }
 
     /**
@@ -479,7 +456,8 @@ public class AdaptedResourceNavigator extends ViewPart {
     /**
      * @see IWorkbenchPart#setFocus()
      */
-    public void setFocus() {
+    @Override
+	public void setFocus() {
         getViewer().getTree().setFocus();
     }
 
