@@ -15,17 +15,19 @@ import org.eclipse.core.commands.ParameterValueConversionException;
 
 public class IntegerConverter extends AbstractParameterValueConverter {
 
+	@Override
 	public Object convertToObject(String parameterValue)
 			throws ParameterValueConversionException {
 		try {
 			int val = Integer.parseInt(parameterValue);
-			return new Integer(val);
+			return Integer.valueOf(val);
 		} catch (NumberFormatException ex) {
 			throw new ParameterValueConversionException(
 					"Error parsing value: " + parameterValue, ex);
 		}
 	}
-	
+
+	@Override
 	public String convertToString(Object parameterValue)
 			throws ParameterValueConversionException {
 		if (!(parameterValue instanceof Integer)) {
